feat: farm except apr and tvl

--- a/public/locales/bn-BD.json
+++ b/public/locales/bn-BD.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU অনুমোদন করুন",
   "IFO: Initial Farm Offerings": "IFO: প্রারম্ভিক খামার অফার",
   "Buy new tokens with a brand new token sale model.": "একদম নতুন টোকেন বিক্রয় মডেলে নতুন টোকেন কিনুন.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "আপনি WAGYU-BNB LP টোকেন ব্যবহার করে নতুন টোকেনের জন্য অর্থ প্রদান করবেন, যার অর্থ অংশ নিতে হলে আপনাকে একটি লিকিউডিটি পুলে সমান পরিমাণে WAGYU এবং BNB পণ রাখতে হবে.",
-  "Get WAGYU-BNB LP >": "অর্জন করুন WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "প্রকল্পটি পাবে BNB, WagyuSwap ভস্ম করবে WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "আপনি WAGYU-VLX LP টোকেন ব্যবহার করে নতুন টোকেনের জন্য অর্থ প্রদান করবেন, যার অর্থ অংশ নিতে হলে আপনাকে একটি লিকিউডিটি পুলে সমান পরিমাণে WAGYU এবং VLX পণ রাখতে হবে.",
+  "Get WAGYU-VLX LP >": "অর্জন করুন WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "প্রকল্পটি পাবে VLX, WagyuSwap ভস্ম করবে WAGYU.",
   "You get the tokens.": "আপনি পাবেন টোকেন.",
   "Want to launch your own IFO?": "আপনার নিজের IFO চালু করতে চান?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "WagyuSwap এর সাথে আপনার প্রকল্প চালু করুন, Binance Smart Chain এর সর্বাধিক ব্যবহৃত AMM প্রকল্প এবং লিকিউডিটি সরবরাহকারী, আপনার টোকেনটি সরাসরি BSC এর সক্রিয়তম এবং দ্রুত বর্ধমান সম্প্রদায়ের কাছে আনার জন্য.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ প্রতিবার যখন আপনি LP টোকেনকে পণ রাখেন এবং পণ মুক্ত করেন, চুক্তিটি স্বয়ংক্রিয়ভাবে আপনার জন্য WAGYU পুরষ্কার সংগ্রহ করবে!",
   "How to take part": "কীভাবে অংশ নেবেন",
   "Before Sale": "বিক্রয়ের আগে",
-  "Buy WAGYU and BNB tokens": "WAGYU এবং BNB টোকেন কিনুন",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYU এবং BNB লিকিউডিটি যুক্ত করে WAGYU-BNB LP টোকেন পান",
+  "Buy WAGYU and VLX tokens": "WAGYU এবং VLX টোকেন কিনুন",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYU এবং VLX লিকিউডিটি যুক্ত করে WAGYU-VLX LP টোকেন পান",
   "During Sale": "বিক্রয়ের সময়",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "বিক্রয়টি লাইভ থাকাকালীন, আপনার WAGYU-LP টোকেনগুলি IFO টোকেনগুলি ক জন্য প্রতিশ্রুতিবদ্ধ করুন",
   "After Sale": "বিক্রয়ের পর",
@@ -399,14 +399,14 @@
   "Activate your Profile": "আপনার প্রোফাইল সক্রিয় করুন",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "IFO-তে অংশ নিতে আপনার সক্রিয় wagyueswap প্রোফাইলের প্রয়োজন!",
   "Profile Active!": "প্রোফাইল সক্রিয়!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP টোকেন পান",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "LP টোকেন পেতে লিকুইডিটি পুলে WAGYU ও BNB স্টেক করুন",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP টোকেন পান",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "LP টোকেন পেতে লিকুইডিটি পুলে WAGYU ও VLX স্টেক করুন",
   "You’ll spend them to buy IFO sale tokens.": "আপনি IFO বিক্রয় টোকেন কিনতে সেগুলি খরচ করবেন",
   "Commit LP Tokens": "LP টোকেনের প্রতিশ্রুতি দিন",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "যখন IFO সেল লাইভ, তখন বিক্রি হওয়া টোকেন কিনতে আপনি আপনার LP টোকেন \"সমর্পণ\" করতে পারেন।",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "প্রথমে মৌলিক বিক্রয়ে প্রতিশ্রুতি দেওয়া বাঞ্ছনীয়, কিন্তু আপনি চাইলে দুটিই করতে পারেন।",
   "Claim your tokens and achievement": "আপনার টোকেন ও কৃতিত্ব দাবি করুন",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO বিক্রয় শেষ হলে, আপনার কেনা যে কোনো IFO টোকেন দাবি করতে পারেন এবং খরচ না করা WAGYU-BNB LP টোকেন আপনার ওয়ালেটে ফিরে আসবে।",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO বিক্রয় শেষ হলে, আপনার কেনা যে কোনো IFO টোকেন দাবি করতে পারেন এবং খরচ না করা WAGYU-VLX LP টোকেন আপনার ওয়ালেটে ফিরে আসবে।",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "এই রাউন্ডের শেষের লেনদেন ব্লকচেইনে জমা দেওয়া হয়েছে এবং নিশ্চিত করার জন্য অপেক্ষা করা হচ্ছে।",
   "No prediction history available": "কোনো পূর্বাভাসের ইতিহাস উপলভ্য নেই",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "যদি আপনি নিশ্চিত থাকেন যে আপনি এখানে ইতিহাস দেখতে পাবেন, তাহলে আপনি সঠিক ওয়ালেটে সংযুক্ত আছেন কিনা দেখে নিয়ে আবার চেষ্টা করুন।",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "আপনি কোনো অবস্থানে প্রবেশ করলে, তা বাতিল বা সামঞ্জস্য করতে পারবেন না।",
   "All losses are final.": "সমস্ত হার চূড়ান্ত।",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "আমি বুঝেছি যে, আমি নিজের ঝুঁকিতে এই প্রোডাক্টটি ব্যবহার করছি। এর থেকে আমার জন্য কোনো ক্ষতি হলে তার দায় আমার নিজের।",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP টোকেন পেতে লিকুইডিটি পুলে WAGYU ও BNB স্টেক করুন। আপনি IFO সেল টোকেন কিনতে সেগুলি খরচ করতে পারেন।",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP টোকেন পেতে লিকুইডিটি পুলে WAGYU ও VLX স্টেক করুন। আপনি IFO সেল টোকেন কিনতে সেগুলি খরচ করতে পারেন।",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "IFO-তে অংশ নিতে আপনার সক্রিয় wagyueswap প্রোফাইলের প্রয়োজন!",
   "Your LP tokens committed": "আপনার সমর্পিত LP টোকেন",
   "Max. Committed": "সর্বোচ্চ সমর্পিত",
@@ -483,8 +483,8 @@
   "Achievement": "কৃতিত্ব",
   "Commit ~%minLp% LP in total to earn!": "উপার্জন করতে মোট LP %minLp% সমর্পণ করুন!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "বেসিক সেল ও আনলিমিটেড সেলের মধ্যে পার্থক্য কী?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "বেসিক সেলে, প্রতিটি ব্যবহারকারী সর্বোচ্চ 100 USD এর WAGYU-BNB LP টোকেন সমর্পণ করতে পারেন। আমরা প্রতিটি IFO-এর প্রায় 30 মিনিট আগের সর্বোচ্চ LP পরিমাণ গণনা করব। বেসিক সেলে অংশ নেওয়ার জন্য কোনো ফি লাগে না।",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "আনলিমিটেড সেলে, আপনার LP টোকেন সমর্পণ করার WAGYU-BNB পরিমাণের কোনো সীমা নেই। তবে, অংশগ্রহণের জন্য ফি লাগে: নীচে দেখুন।",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "বেসিক সেলে, প্রতিটি ব্যবহারকারী সর্বোচ্চ 100 USD এর WAGYU-VLX LP টোকেন সমর্পণ করতে পারেন। আমরা প্রতিটি IFO-এর প্রায় 30 মিনিট আগের সর্বোচ্চ LP পরিমাণ গণনা করব। বেসিক সেলে অংশ নেওয়ার জন্য কোনো ফি লাগে না।",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "আনলিমিটেড সেলে, আপনার LP টোকেন সমর্পণ করার WAGYU-VLX পরিমাণের কোনো সীমা নেই। তবে, অংশগ্রহণের জন্য ফি লাগে: নীচে দেখুন।",
   "Which sale should I commit to? Can I do both?": "কোন সেলে আমাকে সমর্পণ করা উচিত? আমি কি উভয়েই করতে পারি?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "আপনি এক সময়ে একটি বা উভয়ই বেছে নিতে পারেন! যদি আপনি কেবল অল্প পরিমাণ সমর্পণ করেন, তাহলে প্রথমে বেসিক সেলে তা করা বাঞ্ছনীয়। শুধু মনে রাখবেন অংশগ্রহণ করতে আপনার wagyueswap প্রোফাইল প্রয়োজন।",
   "How much is the participation fee?": "অংশগ্রহণের ফি কত?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "ফি 1% থেকে শুরু হবে।",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "সেলের \"আনলিমিটেড\" অংশের থেকে ওভারফ্লোয়ের শতকরা হারের ভিত্তিতে, ক্লিফে 1% এন্ট্রি ফি কমে।",
   "Where does the participation fee go?": "এন্ট্রি ফি কোথায় যায়?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "আমরা এটি খরচ করি। এন্ট্রি ফি থেকে WAGYU-BNB LP টোকেন ডি-কম্পোজ করা হবে। তখন আমরা WAGYU সমতুল্য কিনতে BNB অংশ ব্যবহার করব এবং পরিশেষে সাপ্তাহিক টোকেন বার্নে সমস্ত WAGYU দিয়ে দেব।",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "আমরা এটি খরচ করি। এন্ট্রি ফি থেকে WAGYU-VLX LP টোকেন ডি-কম্পোজ করা হবে। তখন আমরা WAGYU সমতুল্য কিনতে VLX অংশ ব্যবহার করব এবং পরিশেষে সাপ্তাহিক টোকেন বার্নে সমস্ত WAGYU দিয়ে দেব।",
   "How can I get an achievement for participating in the IFO?": "IFO-তে অংশ নেওয়ার জন্য কীভাবে আমি একটি কৃতিত্ব পেতে পারি?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "যে কোনো একটি সেলে আপনাকে ন্যূনতম প্রায় 10 USD এর WAGYU-BNB LP টোকেন দিতে হবে।",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "যে কোনো একটি সেলে আপনাকে ন্যূনতম প্রায় 10 USD এর WAGYU-VLX LP টোকেন দিতে হবে।",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "আপনি একটিতে বা উভয়তেই অবদান রাখতে পারেন, এটা কোনো ব্যাপার নয়। কৃতিত্বের জন্য কেবল আপনার সামগ্রিক অবদান ধরা হবে।",
   "The Lottery Is Changing!": "লটারি বদলাচ্ছে!",
   "Come back soon!": "শীঘ্রই ফিরে আসুন!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Enter DOWN",
   "An error occurred, unable to enter your position": "একটি ত্রুটি ঘটেছে, আপনার অবস্থান প্রবেশ করানো যাচ্ছে না",
   "Set Position": "অবস্থান সেট করুন",
-  "Insufficient BNB balance": "অপর্যাপ্ত BNB ব্যালেন্স",
+  "Insufficient VLX balance": "অপর্যাপ্ত VLX ব্যালেন্স",
   "A minimum amount of %num% %token% is required": "%num%%token%-এর ন্যূনতম পরিমাণ প্রয়োজন",
   "Enter an amount": "একটি পরিমাণ লিখুন",
   "You won’t be able to remove or change your position once you enter it.": "একবার আপনি নিজের অবস্থান প্রবেশ করলে আপনি সরাতে বা পরিবর্তন করতে পারবেন না।",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu প্রোফাইল",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "then register for the competition by clicking “I WANT TO BATTLE” button above.",
   "Battle Time": "লড়াইয়ের সময়",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "আপনার ও আপনার টিমের উভয়ের স্কোর বাড়াতে লড়াইয়ের সময় BNB/BUSD, WAGYU/BNB, ETH/BNB এবং BTCB/BNB ট্রেড করুন। আরও জানতে নীচের নিয়মাবলী বিভাগটি দেখুন।",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "আপনার ও আপনার টিমের উভয়ের স্কোর বাড়াতে লড়াইয়ের সময় VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX ট্রেড করুন। আরও জানতে নীচের নিয়মাবলী বিভাগটি দেখুন।",
   "Prize Claim": "পুরস্কার দাবি",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "টিম ও ট্রেডাররা ট্রেডিংয়ের পরিমাণের ক্রম অনুসারে স্থান পাবে। আপনার পুরষ্কার সংগ্রহ এবং উদযাপন করুন!",
   "Registration starting April 5": "5 এপ্রিল থেকে রেজিস্ট্রেশন শুরু",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "এই সিদ্ধান্ত বদলানো যাবে না।",
   "I understand that my address may be displayed publicly throughout the competition.": "আমি বুঝেছি যে প্রতিযোগিতা জুড়ে আমার ঠিকানা সকলের কাছে প্রদর্শিত হতে পারে।",
   "Eligible trading pairs": "যোগ্য ট্রেডিং পেয়ার",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "BNB/BUSD, WAGYU/BNB, ETH/BNB এবং BTCB/BNB পেয়ারের ট্রেড কেবলমাত্র পরিমাণ গণনায় অন্তর্ভুক্ত করা হবে।",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX পেয়ারের ট্রেড কেবলমাত্র পরিমাণ গণনায় অন্তর্ভুক্ত করা হবে।",
   "Calculating team ranks and winners": "টিমের র‌্যাঙ্ক ও বিজেতাদের গণনা করা হচ্ছে",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "টিম র‌্যাঙ্কগুলি প্রতিটি টিমের শীর্ষস্থানীয় 500 সদস্যের মোট সংযুক্ত ভলিউম ধরে গণনা করা হয়।",
   "Prize distribution": "পুরস্কার বিতরণ",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "আমি কীভাবে আমার পুরস্কার দাবি করব?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "লড়াই শেষ হওয়ার পরে ইভেন্টের পেজটি দেখুন এবং উপরের অংশে বা \"আপনার স্কোর\" বিভাগে \"পুরস্কার দাবি করুন\" বোতামটি ক্লিক করুন। একবার আপনি নিজের পুরষ্কার সাফল্যের সাথে দাবি করার পরে, বোতামের পাঠ্যটি \"পুরষ্কার দাবি করা হয়েছে\" হিসাবে পরিবর্তিত হবে।",
   "Trade to increase your rank": "আপনার র‌্যাঙ্ক বাড়ানোর জন্য ট্রেড করুন",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "যোগ্য পেয়ার: BNB/BUSD, WAGYU/BNB, ETH/BNB এবং BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "যোগ্য পেয়ার: VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX",
   "Play as a team": "টিম হিসেবে খেলুন",
   "The higher your team’s rank, the better your prizes": "আপনার দলের র‌্যাঙ্ক যত বেশি হবে আপনার পুরষ্কারগুলি তত ভাল হবে",
   "Top Traders": "সেরা ট্রেডার",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "অনুগ্রহ করে আপনার অ্যাকাউন্ট অ্যাক্সেস করার জন্য অনুমোদন দিন",
   "Unable to find connector": "কানেক্টকর খুঁজে পাওয়া যাচ্ছে না",
   "The connector config is wrong": "কানেক্টর কনফিগটি ভুল",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "এই IFO-তে আপনি %amount% WAGYU-BNB LP টোকেন দিয়েছেন!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "IFO-তে অংশ নিতে আপনার WAGYU-BNB LP টোকেন প্রয়োজন!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "এই IFO-তে আপনি %amount% WAGYU-VLX LP টোকেন দিয়েছেন!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "IFO-তে অংশ নিতে আপনার WAGYU-VLX LP টোকেন প্রয়োজন!",
   "Your %symbol% committed": "Your %symbol% committed",
   "Your %symbol% RECLAIMED": "Your %symbol% RECLAIMED",
   "Your %symbol% TO RECLAIM": "Your %symbol% TO RECLAIM",
