--- a/public/locales/el-GR.json
+++ b/public/locales/el-GR.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Έγκριση WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Αγοράστε νέα νομίσματα με ένα ολοκαίνουργιο μοντέλο πώλησης νομισμάτων.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Θα πληρώσετε για τα νέα νομίσματα χρησιμοποιώντας WAGYU-BNB LP, πράγμα που σημαίνει ότι πρέπει να κάνετε stake ίσα ποσά WAGYU και BNB σε μια δεξαμενή ρευστότητας για να λάβετε μέρος.",
-  "Get WAGYU-BNB LP >": "Αποκτήστε WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Το πρότζεκτ λαμβάνει BNB, το WagyuSwap καταστρέφει τα WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Θα πληρώσετε για τα νέα νομίσματα χρησιμοποιώντας WAGYU-VLX LP, πράγμα που σημαίνει ότι πρέπει να κάνετε stake ίσα ποσά WAGYU και VLX σε μια δεξαμενή ρευστότητας για να λάβετε μέρος.",
+  "Get WAGYU-VLX LP >": "Αποκτήστε WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Το πρότζεκτ λαμβάνει VLX, το WagyuSwap καταστρέφει τα WAGYU.",
   "You get the tokens.": "Λαμβάνετε τα νομίσματα.",
   "Want to launch your own IFO?": "Θέλετε να ξεκινήσετε το δικό σας IFO;",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Ξεκινήστε το πρότζεκτ σας με το WagyuSwap, το πιο ευρέως χρησιμοποιημένο πρότζεκτ AMM και πάροχο ρευστότητας στο Binance Smart Chain, και μεταφέρετε τα νομίσματά σας απευθείας στην πιο ενεργή και ταχέως αναπτυσσόμενη κοινότητα BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Κάθε φορά που κάνετε ή σταματάτε να κάνετε stake νομίσματα LP, το συμβόλαιο κάνει μαγικά συγκομιδή ανταμοιβών WAGYU για εσάς!",
   "How to take part": "Πώς μπορείτε να συμμετάσχετε",
   "Before Sale": "Πριν την πώληση",
-  "Buy WAGYU and BNB tokens": "Αγορά WAGYU και νομισμάτων BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Αποκτήστε νομίσματα WAGYU-BNB LP προσθέτοντας ρευστότητα WAGYU και BNB",
+  "Buy WAGYU and VLX tokens": "Αγορά WAGYU και νομισμάτων VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Αποκτήστε νομίσματα WAGYU-VLX LP προσθέτοντας ρευστότητα WAGYU και VLX",
   "During Sale": "Κατά τη διάρκεια της πώλησης",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Όταν η πώληση είναι σε εξέλιξη, δεσμεύστε νομίσματα WAGYU-LP για να αγοράσετε νομίσματα IFO",
   "After Sale": "Μετά την πώληση",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Ενεργοποιήστε το προφίλ σας",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Χρειάζεστε ένα ενεργό προφίλ WagyuSwap για να λάβετε μέρος σε μία IFO!",
   "Profile Active!": "Ενεργό προφίλ!",
-  "Get WAGYU-BNB LP Tokens": "Αποκτήστε νομίσματα WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Κάντε stake WAGYU και BNB στη δεξαμενή ρευστότητας για να λάβετε νομίσματα LP.",
+  "Get WAGYU-VLX LP Tokens": "Αποκτήστε νομίσματα WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Κάντε stake WAGYU και VLX στη δεξαμενή ρευστότητας για να λάβετε νομίσματα LP.",
   "You’ll spend them to buy IFO sale tokens.": "Τα ξοδεύετε για να αγοράσετε νομίσματα συμμετοχής στην IFO.",
   "Commit LP Tokens": "Δέσμευση νομισμάτων LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Όταν η IFO είναι σε εξέλιξη, μπορείτε να \"δεσμεύσετε\" τα νομίσματά σας LP για να αγοράσετε τα νομίσματα που πωλούνται.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Σας προτείνουμε να δεσμεύσετε νομίσματα πρώτα στη Βασική Προσφορά, αλλά μπορείτε να κάνετε και τα δύο αν θέλετε.",
   "Claim your tokens and achievement": "Διεκδικήστε τα νομίσματα και τα έπαθλά σας",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Μετά τη λήξη της προσφοράς IFO, μπορείτε να διεκδικήσετε τα νομίσματά σας IFO που αγοράσατε, και τυχόν νομίσματα WAGYU-BNB LP που δεν ξοδεύτηκαν, θα επιστρέψουν στο πορτοφόλι σας.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Μετά τη λήξη της προσφοράς IFO, μπορείτε να διεκδικήσετε τα νομίσματά σας IFO που αγοράσατε, και τυχόν νομίσματα WAGYU-VLX LP που δεν ξοδεύτηκαν, θα επιστρέψουν στο πορτοφόλι σας.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Η συναλλαγή κλεισίματος αυτού του γύρου έχει υποβληθεί στο blockchain και είναι σε αναμονή για επιβεβαίωση.",
   "No prediction history available": "Δεν υπάρχει διαθέσιμο ιστορικό προβλέψεων",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Εάν είστε βέβαιοι ότι το ιστορικό πρέπει να εμφανίζεται εδώ, βεβαιωθείτε ότι είστε συνδεδεμένοι στο σωστό πορτοφόλι και δοκιμάστε ξανά.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Όταν ανοίξετε μια θέση, δεν μπορείτε να την ακυρώσετε ή να την προσαρμόσετε.",
   "All losses are final.": "Όλες οι απώλειες είναι οριστικές.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Κατανοώ ότι χρησιμοποιώ αυτό το προϊόν με δική μου ευθύνη. Τυχόν απώλεια που οφείλεται στις ενέργειές μου είναι δική μου ευθύνη.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Κάντε stake WAGYU και BNB στην δεξαμενή ρευστότητας για να λάβετε νομίσματα LP. Θα τα ξοδέψετε για να αγοράσετε νομίσματα για την προσφορά της IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Κάντε stake WAGYU και VLX στην δεξαμενή ρευστότητας για να λάβετε νομίσματα LP. Θα τα ξοδέψετε για να αγοράσετε νομίσματα για την προσφορά της IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Χρειάζεστε ένα ενεργό προφίλ WagyuSwap για να λάβετε μέρος σε μία IFO!",
   "Your LP tokens committed": "Τα δεσμευμένα νομίσματά σας LP",
   "Max. Committed": "Μέγιστο ποσό δέσμευσης",
@@ -483,8 +483,8 @@
   "Achievement": "Επίτευγμα",
   "Commit ~%minLp% LP in total to earn!": "Δεσμεύστε συνολικά ~%minLp% LP για να κερδίσετε!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Ποια είναι η διαφορά μεταξύ της βασικής πώλησης και της απεριόριστης πώλησης;",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Στη Βασική πώληση, κάθε χρήστης μπορεί να δεσμεύσει έως και 100 USD σε νόμισμα WAGYU-BNB LP. Υπολογίζουμε το μέγιστο ποσό LP περίπου 30 λεπτά πριν από κάθε IFO. Η βασική πώληση δεν έχει τέλος συμμετοχής.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Στην απεριόριστη πώληση, δεν υπάρχει όριο στο ποσό των νομισμάτων WAGYU-BNB LP που μπορείτε να δεσμεύσετε. Ωστόσο, υπάρχει χρέωση για τη συμμετοχή: δείτε παρακάτω.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Στη Βασική πώληση, κάθε χρήστης μπορεί να δεσμεύσει έως και 100 USD σε νόμισμα WAGYU-VLX LP. Υπολογίζουμε το μέγιστο ποσό LP περίπου 30 λεπτά πριν από κάθε IFO. Η βασική πώληση δεν έχει τέλος συμμετοχής.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Στην απεριόριστη πώληση, δεν υπάρχει όριο στο ποσό των νομισμάτων WAGYU-VLX LP που μπορείτε να δεσμεύσετε. Ωστόσο, υπάρχει χρέωση για τη συμμετοχή: δείτε παρακάτω.",
   "Which sale should I commit to? Can I do both?": "Σε ποια πώληση πρέπει να δεσμεύσω; Μπορώ να κάνω και τα δύο;",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Μπορείτε να επιλέξετε ένα ή και τα δύο ταυτόχρονα! Εάν δεσμεύετε μόνο ένα μικρό ποσό, προτείνουμε πρώτα τη Βασική πώληση. Απλώς θυμηθείτε ότι χρειάζεστε ένα προφίλ WagyuSwap για να συμμετάσχετε.",
   "How much is the participation fee?": "Πόσο είναι το τέλος συμμετοχής;",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Η χρέωση ξεκινάει από 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Το τέλος συμμετοχής 1% μειώνεται γρήγορα, με βάση το ποσοστό υπερκάλυψης από το \"ἁπεριόριστο\" τμήμα της πώλησης.",
   "Where does the participation fee go?": "Πού πηγαίνει το τέλος συμμετοχής;",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Το καίμε. Τα νομίσματα WAGYU-BNB LP από το τέλος συμμετοχής θα καταστραφούν. Στη συνέχεια, θα χρησιμοποιήσουμε το τμήμα BNB για να αγοράσουμε το ισοδύναμο WAGYU στην τιμή αγοράς και, τέλος, θα ρίξουμε όλο το WAGYU στο εβδομαδιαίο κάψιμο νομισμάτων.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Το καίμε. Τα νομίσματα WAGYU-VLX LP από το τέλος συμμετοχής θα καταστραφούν. Στη συνέχεια, θα χρησιμοποιήσουμε το τμήμα VLX για να αγοράσουμε το ισοδύναμο WAGYU στην τιμή αγοράς και, τέλος, θα ρίξουμε όλο το WAGYU στο εβδομαδιαίο κάψιμο νομισμάτων.",
   "How can I get an achievement for participating in the IFO?": "Πώς μπορώ να αποκτήσω ένα επίτευγμα για συμμετοχή στην IFO;",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Πρέπει να συνεισφέρετε νομίσματα WAGYU-BNB LP αξίας τουλάχιστον 10 USD σε οποιαδήποτε πώληση.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Πρέπει να συνεισφέρετε νομίσματα WAGYU-VLX LP αξίας τουλάχιστον 10 USD σε οποιαδήποτε πώληση.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Μπορείτε να συνεισφέρετε σε ένα ή και στα δύο, δεν έχει σημασία. Μόνο η συνολική συνεισφορά σας υπολογίζεται για το επίτευγμα.",
   "The Lottery Is Changing!": "Η λοταρία αλλάζει!",
   "Come back soon!": "Επιστρέψτε σύντομα!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Θέση ΠΤΩΣΗΣ",
   "An error occurred, unable to enter your position": "Παρουσιάστηκε σφάλμα, δεν ήταν δυνατή η τοποθέτηση της θέσης σας",
   "Set Position": "Τοποθέτηση θέσης",
-  "Insufficient BNB balance": "Ανεπαρκές υπόλοιπο BNB",
+  "Insufficient VLX balance": "Ανεπαρκές υπόλοιπο VLX",
   "A minimum amount of %num% %token% is required": "Απαιτείται ελάχιστο ποσό %num% %token%",
   "Enter an amount": "Εισαγάγετε ένα ποσό",
   "You won’t be able to remove or change your position once you enter it.": "Δεν θα μπορείτε να καταργήσετε ή να αλλάξετε τη θέση σας μόλις την εισάγετε.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Προφίλ Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "και μετά εγγραφείτε στο διαγωνισμό κάνοντας κλικ στο κουμπί \"ΘΕΛΩ ΝΑ ΛΑΒΩ ΜΕΡΟΣ ΣΤΗ ΜΑΧΗ\".",
   "Battle Time": "Ώρα για μάχη",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Κάντε συναλλαγές BNB/BUSD, WAGYU/BNB, ETH/BNB και BTCB/BNB κατά τη διάρκεια της μάχης για να αυξήσετε τη δικιά σας και την βαθμολογία της ομάδας σας. Δείτε την ενότητα Κανόνες παρακάτω για περισσότερα.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Κάντε συναλλαγές VLX/BUSD, WAGYU/VLX, ETH/VLX και BTCB/VLX κατά τη διάρκεια της μάχης για να αυξήσετε τη δικιά σας και την βαθμολογία της ομάδας σας. Δείτε την ενότητα Κανόνες παρακάτω για περισσότερα.",
   "Prize Claim": "Διεκδίκηση επάθλου",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Οι ομάδες και όσοι κάνουν συναλλαγές θα κατατάσσονται με βάση τον όγκο συναλλαγών Συλλέξτε τα έπαθλά σας και γιορτάστε!",
   "Registration starting April 5": "Η εγγραφή ξεκινάει στις 5 Απριλίου",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Αυτή η απόφαση δεν μπορεί να αναιρεθεί.",
   "I understand that my address may be displayed publicly throughout the competition.": "Κατανοώ ότι η διεύθυνσή μου μπορεί να εμφανίζεται δημόσια καθ 'όλη τη διάρκεια του διαγωνισμού.",
   "Eligible trading pairs": "Επιλέξιμα ζευγάρια συναλλαγών",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Μόνο οι συναλλαγές σε ζευγάρια BNB/BUSD, WAGYU/BNB, ETH/BNB και BTCB/BNB θα συμπεριληφθούν στους υπολογισμούς όγκου.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Μόνο οι συναλλαγές σε ζευγάρια VLX/BUSD, WAGYU/VLX, ETH/VLX και BTCB/VLX θα συμπεριληφθούν στους υπολογισμούς όγκου.",
   "Calculating team ranks and winners": "Υπολογισμός βαθμολογιών ομάδων και νικητών",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Οι κατατάξεις των ομάδων υπολογίζονται από τον συνολικό συνδυασμένο όγκο των κορυφαίων 500 μελών κάθε αντίστοιχης ομάδας.",
   "Prize distribution": "Κατανομή επάθλου",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Πώς μπορώ να διεκδικήσω τα έπαθλά μου;",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Μετά τη λήξη της μάχης, επισκεφθείτε τη σελίδα εκδήλωσης και κάντε κλικ στο κουμπί «Διεκδίκηση επάθλων» στην επάνω ενότητα ή στην ενότητα «Η βαθμολογία σας» Μόλις διεκδικήσετε με επιτυχία τα έπαθλά σας, το κείμενο του κουμπιού θα αλλάξει σε \"Τα έπαθλα διεκδικήθηκαν\".",
   "Trade to increase your rank": "Κάντε ανταλλαγή για να αυξήσετε την κατάταξη σας",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Επιλέξιμα ζευγάρια: BNB/BUSD, WAGYU/BNB, ETH/BNB και BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Επιλέξιμα ζευγάρια: VLX/BUSD, WAGYU/VLX, ETH/VLX και BTCB/VLX",
   "Play as a team": "Παίξτε ως ομάδα",
   "The higher your team’s rank, the better your prizes": "Όσο υψηλότερη είναι η κατάταξη της ομάδας σας, τόσο καλύτερα είναι τα έπαθλά σας",
   "Top Traders": "Με τις κορυφαίες συναλλαγές",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Εξουσιοδοτήστε την πρόσβαση στον λογαριασμό σας",
   "Unable to find connector": "Δε βρέθηκε σύνδεση",
   "The connector config is wrong": "Η διαμόρφωση σύνδεσης είναι λάθος",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Έχετε συνεισφέρει %amount% νομίσματα WAGYU-BNB LP σε αυτή την IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Θα χρειαστείτε νομίσματα WAGYU-BNB LP για να συμμετάσχετε στην IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Έχετε συνεισφέρει %amount% νομίσματα WAGYU-VLX LP σε αυτή την IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Θα χρειαστείτε νομίσματα WAGYU-VLX LP για να συμμετάσχετε στην IFO!",
   "Your %symbol% committed": "Το ποσό %symbol% που έχετε δεσμεύσει",
   "Your %symbol% RECLAIMED": "%symbol% ΔΙΕΚΔΙΚΗΘΗΚΕ ΞΑΝΑ",
   "Your %symbol% TO RECLAIM": "%symbol% ΓΙΑ ΔΙΕΚΔΙΚΗΣΗ ΞΑΝΑ",
