--- a/public/locales/en-AU.json
+++ b/public/locales/en-AU.json
@@ -86,9 +86,9 @@
   "Approve WAGYU": "Approve WAGYU",
   "IFO: Intitial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Buy new tokens with a brand new token sale model.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.",
-  "Get WAGYU-BNB LP >": "Get WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "The project gets the BNB, WagyuSwap burns the WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.",
+  "Get WAGYU-VLX LP >": "Get WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "The project gets the VLX, WagyuSwap burns the WAGYU.",
   "You get the tokens.": "You get the tokens.",
   "Want to launch your own IFO?": "Want to launch your own IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.",
@@ -127,8 +127,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Every time you stake and unstake LP tokens, the contract will automatically harvest WAGYU rewards for you!",
   "How to take part": "How to take part",
   "Before Sale": "Before Sale",
-  "Buy WAGYU and BNB tokens": "Buy WAGYU and BNB tokens",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity",
+  "Buy WAGYU and VLX tokens": "Buy WAGYU and VLX tokens",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity",
   "During Sale": "During Sale",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens",
   "After Sale": "After Sale",
