--- a/public/locales/fi-FI.json
+++ b/public/locales/fi-FI.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Hyväksy WAGYU",
   "IFO: Initial Farm Offerings": "IFO: viljelysanti",
   "Buy new tokens with a brand new token sale model.": "Osta uusia poletteja uudella polettien myyntimallilla.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Maksat poletit käyttämällä WAGYU-BNB LP -poletteja, mikä tarkoittaa, että sinun täytyy panostaa vastaavat summat WAGYUa ja BNB:tä osallistuaksesi likviditeettipooliin.",
-  "Get WAGYU-BNB LP >": "Hanki WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Projekti saa BNB:n, WagyuSwap polttaa WAGYUn.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Maksat poletit käyttämällä WAGYU-VLX LP -poletteja, mikä tarkoittaa, että sinun täytyy panostaa vastaavat summat WAGYUa ja VLX:tä osallistuaksesi likviditeettipooliin.",
+  "Get WAGYU-VLX LP >": "Hanki WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Projekti saa VLX:n, WagyuSwap polttaa WAGYUn.",
   "You get the tokens.": "Sinä saat poletit.",
   "Want to launch your own IFO?": "Haluatko aloittaa oman IFO:si?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Aloita oma projektisi WagyuSwapilla, Binance Smart Chainin käytetyimmällä AMM-projektien ja likviditeetin tarjoajalla, tuodaksesi polettisi suoraan aktiviisimmalle ja nopeimmin kasvavalle yhteisölle BSC:ssä.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Ainat kun panostat LP-poletteja tai perut niiden panostuksen, sopimus korjaa sinulle automaattisesti WAGYU-palkkioita!",
   "How to take part": "Näin voit osallistua",
   "Before Sale": "Ennen kauppaa",
-  "Buy WAGYU and BNB tokens": "Osta WAGYU- ja BNB-poletteja",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Saa WAGYU-BNB LP -poletteja lisäämällä WAGYU- ja BNB-likviditeettiä",
+  "Buy WAGYU and VLX tokens": "Osta WAGYU- ja VLX-poletteja",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Saa WAGYU-VLX LP -poletteja lisäämällä WAGYU- ja VLX-likviditeettiä",
   "During Sale": "Kaupan aikana",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Kun kauppa on aktiivinen, luovuta WAGYU-LP-polettisi IFO-polettien ostamiseksi",
   "After Sale": "Kaupan jälkeen",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktivoi profiilisi",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Tarvitset aktiivisen WagyuSwap-profiilin, jotta voit osallistua IFO:hon!",
   "Profile Active!": "Profiili on aktiivinen!",
-  "Get WAGYU-BNB LP Tokens": "Hanki WAGYU-BNB LP-poletteja",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Panosta WAGYUa ja BNB:tä likviditeettipooliin saadaksesi LP-poletteja.",
+  "Get WAGYU-VLX LP Tokens": "Hanki WAGYU-VLX LP-poletteja",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Panosta WAGYUa ja VLX:tä likviditeettipooliin saadaksesi LP-poletteja.",
   "You’ll spend them to buy IFO sale tokens.": "Käytät ne IFO-kauppapolettien ostamiseen.",
   "Commit LP Tokens": "Luovuta LP-poletteja",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Kun IFO-myynti on käynnissä, voit luovuttaa LP-polettejasi ostaaksesi myytävänä olevien poletteja.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Suosittelemme luovuttamaan ensin peruskauppaan, mutta voit halutessasi tehdä molemmat.",
   "Claim your tokens and achievement": "Lunasta polettisi ja saavutuksesi",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Kun IFO-kauppa päättyy, voit lunastaa ostamasi IFO-poletit, ja käyttämättömät WAGYU-BNB LP-poletit palautetaan lompakkoosi.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Kun IFO-kauppa päättyy, voit lunastaa ostamasi IFO-poletit, ja käyttämättömät WAGYU-VLX LP-poletit palautetaan lompakkoosi.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Tämän kierroksen päättävä transaktio on lähetetty lohkoketjuun, ja se odottaa vahvistusta.",
   "No prediction history available": "Ei ennustushistoriaa saatavilla",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Jos olet varma, että sinun pitäisi nähdä historiaa täällä, varmista, että olet muodostanut yhteyden oikeaan lompakkoon, ja yritä uudelleen.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Kun syötät position, et voi peruuttaa tai muuttaa sitä.",
   "All losses are final.": "Kaikki menetykset ovat lopullisia.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Ymmärrän käyttäväni tätä tuotetta omalla riskilläni. Kaikki toimistani aiheutuvat menetykset ovat omalla vastuullani.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Panosta WAGYUa ja BNB:tä likviditeettipooliin saadaksesi LP-poletteja. Käytät ne ostaaksesi IFO-myyntipoletteja.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Panosta WAGYUa ja VLX:tä likviditeettipooliin saadaksesi LP-poletteja. Käytät ne ostaaksesi IFO-myyntipoletteja.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Tarvitset aktiivisen WagyuSwap-profiilin, jotta voit osallistua IFO:hon!",
   "Your LP tokens committed": "LP-polettisi luovutettiin",
   "Max. Committed": "Maksimiluovutus",
@@ -483,8 +483,8 @@
   "Achievement": "Saavutus",
   "Commit ~%minLp% LP in total to earn!": "Luuovuta yhteensä ~%minLp% LP:tä ansaitaksesi!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Mitä eroa on peruskaupalla ja rajoittamattomalla kaupalla?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Peruskaupassa jokainen käyttäjä voi luovuttaa enintään 100 dollarin arvosta WAGYU-BNB LP-poletteja. Laskemme enimmäis-LP-määrän noin 30 minuuttia ennen kutakin IFO:ta. Peruskaupassa ei ole osallistumismaksua.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Rajoittamattomassa kaupassa luovuttamiesi WAGYU-BNB LP-polettiesi määrällä ei ole rajaa. Osallistumisesta veloitetaan kuitenkin maksu: katso alla.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Peruskaupassa jokainen käyttäjä voi luovuttaa enintään 100 dollarin arvosta WAGYU-VLX LP-poletteja. Laskemme enimmäis-LP-määrän noin 30 minuuttia ennen kutakin IFO:ta. Peruskaupassa ei ole osallistumismaksua.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Rajoittamattomassa kaupassa luovuttamiesi WAGYU-VLX LP-polettiesi määrällä ei ole rajaa. Osallistumisesta veloitetaan kuitenkin maksu: katso alla.",
   "Which sale should I commit to? Can I do both?": "Mihin kauppaan minun tulisi luovuttaa? Voinko osallistua molempiin?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Voit valita toisen tai molemmat samanaikaisesti! Jos luovutat vain pienen summan, suosittelemme ensin peruskauppaa. Muista, että tarvitset WagyuSwap-profiilin osallistuaksesi.",
   "How much is the participation fee?": "Kuinka suuri on osallistumismaksu?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Maksu on alkaen 1 %.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "1 prosentin osallistumismaksu pienenee asteittain perustuen kaupan rajoittamattoman osan ylivuotoprosenttiin.",
   "Where does the participation fee go?": "Mihin osallistumismaksu menee?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Poltamme sen. WAGYU-BNB LP-poletit osallistumismaksusta maatuu. Käytämme sen jälkeen BNB-osaa vastaavan WAGYUn ostamiseen ja laitamme lopuksi kaiken WAGYUn viikoittaiseen polettipolttoon.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Poltamme sen. WAGYU-VLX LP-poletit osallistumismaksusta maatuu. Käytämme sen jälkeen VLX-osaa vastaavan WAGYUn ostamiseen ja laitamme lopuksi kaiken WAGYUn viikoittaiseen polettipolttoon.",
   "How can I get an achievement for participating in the IFO?": "Miten saan saavutuksen osallistumisesta IFO:hon?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Sinun täytyy panostaa vähintään 10 dollarin arvosta WAGYU-BNB LP -poletteja kumpaan tahansa kauppaan.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Sinun täytyy panostaa vähintään 10 dollarin arvosta WAGYU-VLX LP -poletteja kumpaan tahansa kauppaan.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Voit panostaa toiseen tai molempiin, sillä ei ole väliä. Vain kokonaispanostuksesi lasketaan saavutukseen.",
   "The Lottery Is Changing!": "Arvonta on muuttumassa!",
   "Come back soon!": "Palaa takaisin pian!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Siirry ALAS",
   "An error occurred, unable to enter your position": "Tapahtui virhe, positiosi syöttäminen ei onnistunut",
   "Set Position": "Aseta positio",
-  "Insufficient BNB balance": "BNB-saldo ei riitä",
+  "Insufficient VLX balance": "VLX-saldo ei riitä",
   "A minimum amount of %num% %token% is required": "Vähintään %num% %token%-polettia vaaditaan",
   "Enter an amount": "Syötä määrä",
   "You won’t be able to remove or change your position once you enter it.": "Et voi poistaa tai muuttaa positiotasi, kun syötät sen.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-profiili",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "rekisteröidy sitten kilpailuun napsauttamalla alla olevaa HALUAN TAISTELLA -painiketta.",
   "Battle Time": "Taisteluaika",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Käy kauppaa BNB/BUSD-, WAGYU/BNB-, ETH/BNB- jaBTCB/BNB-poleteilla taistelujakson aikana parantaaksesi sekä sinun että tiimisi pistemäärää. Katso lisätietoja alla olevasta Säännöt-osasta.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Käy kauppaa VLX/BUSD-, WAGYU/VLX-, ETH/VLX- jaBTCB/VLX-poleteilla taistelujakson aikana parantaaksesi sekä sinun että tiimisi pistemäärää. Katso lisätietoja alla olevasta Säännöt-osasta.",
   "Prize Claim": "Palkintojen lunastaminen",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Tiimit ja kaupankävijät asetetaan järjestykseen kaupankäynnin volyymin mukaan. Kerää palkintosi ja juhli!",
   "Registration starting April 5": "Rekisteröinti alkaa 5. huhtikuuta",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Päätöstä ei voi kumota.",
   "I understand that my address may be displayed publicly throughout the competition.": "Ymmärrän, että osoitteeni voidaan näyttää julkisesti kilpailun aikana.",
   "Eligible trading pairs": "Kelvolliset kaupankäyntiparit",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Vain BNB/BUSD-, WAGYU/BNB-, ETH/BNB- ja BTCB/BNB-parien kaupankäynti sisällytetään volyymilaskelmiin.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Vain VLX/BUSD-, WAGYU/VLX-, ETH/VLX- ja BTCB/VLX-parien kaupankäynti sisällytetään volyymilaskelmiin.",
   "Calculating team ranks and winners": "Tiimien sijoitusten ja voittajien laskeminen",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Tiimien sijoitukset lasketaan kunkin tiimin 500 parhaan jäsenen kokonaisvolyymin perusteella.",
   "Prize distribution": "Palkintojen jakautuminen",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Miten lunastan palkintoni?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Käy taistelun päätyttyä tapahtumasivulla ja napsauta yläosassa tai Tuloksesi-osassa olevaa Lunasta palkintoja -painiketta. Kun olet lunastanut palkintosi, painikkeen tekstiksi vaihtuu Palkinnot lunastettu.",
   "Trade to increase your rank": "Paranna sijoitustasi käymällä kauppaa",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Kelpoisat parit: BNB/BUSD, WAGYU/BNB, ETH/BNB ja BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kelpoisat parit: VLX/BUSD, WAGYU/VLX, ETH/VLX ja BTCB/VLX",
   "Play as a team": "Pelaa tiiminä",
   "The higher your team’s rank, the better your prizes": "Mitä paremmin tiimisi sijoittuu, sitä parempia ovat palkintosi",
   "Top Traders": "Parhaat kaupankävijät",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Anna tilisi käyttöoikeus",
   "Unable to find connector": "Liitintä ei löydy",
   "The connector config is wrong": "Liittimen määritys on virheellinen",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Olet panostanut %amount% WAGYU-BNB LP -polettia tähän IFO:hon!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Tarvitset WAGYU-BNB LP-poletteja osallistuaksesi IFO:hon!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Olet panostanut %amount% WAGYU-VLX LP -polettia tähän IFO:hon!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Tarvitset WAGYU-VLX LP-poletteja osallistuaksesi IFO:hon!",
   "Your %symbol% committed": "%symbol% luovutettiin",
   "Your %symbol% RECLAIMED": "%symbol% LUNASTETTIIN",
   "Your %symbol% TO RECLAIM": "LUNASTETTAVA %symbol%",
