--- a/public/locales/fil-PH.json
+++ b/public/locales/fil-PH.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Aprubahan ang WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Mga Panimulang Alok ng Farm",
   "Buy new tokens with a brand new token sale model.": "Bumili ng mga bagong token sa isang bagong modelo ng pag-sale ng token.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Magbabayad ka para sa mga bagong token na gamit ang mga WAGYU-BNB LP token, na nangangahulugang kailangan mong tumaya ng pantay na halaga ng WAGYU at BNB sa isang liquidity pool upang makalahok.",
-  "Get WAGYU-BNB LP >": "Kumuha ng WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Nakuha ng proyektong ito ang BNB, na-burn naman ng WagyuSwap ang WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Magbabayad ka para sa mga bagong token na gamit ang mga WAGYU-VLX LP token, na nangangahulugang kailangan mong tumaya ng pantay na halaga ng WAGYU at VLX sa isang liquidity pool upang makalahok.",
+  "Get WAGYU-VLX LP >": "Kumuha ng WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Nakuha ng proyektong ito ang VLX, na-burn naman ng WagyuSwap ang WAGYU.",
   "You get the tokens.": "Makukuha mo ang mga token.",
   "Want to launch your own IFO?": "Nais mo bang i-launch ang iyong sariling IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "I-launch ang iyong proyekto gamit ang WagyuSwap, ang Binance Smart Chain na pinaka-ginagamit na proyekto ng AMM at provider ng liquidity, upang direktang dalhin ang iyong token sa pinaka-aktibo at mabilis na lumalagong komunidad sa BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Sa bawat oras na ikaw ay mag-stake o un-stake ng iyong mga LP token, ang kontrata ay awtomatikong mag-harvest ng Wagyu na iyong gantimpala para sa iyo!",
   "How to take part": "Papaano sumali",
   "Before Sale": "Bago Mag-sale",
-  "Buy WAGYU and BNB tokens": "Bumili ng WAGYU at mga BNB na token",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Kumuha ng mga WAGYU-BNB LP token sa pagdaragdag ng WAGYU at BNB liquidity",
+  "Buy WAGYU and VLX tokens": "Bumili ng WAGYU at mga VLX na token",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Kumuha ng mga WAGYU-VLX LP token sa pagdaragdag ng WAGYU at VLX liquidity",
   "During Sale": "Habang may Sale",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Habang live ang sale, mag-commit ng iyong mga WAGYU-LP token sa pagbili ng mga IFO token",
   "After Sale": "Pagkatapos ng Sale",
@@ -399,14 +399,14 @@
   "Activate your Profile": "I-activate ang iyong Profile",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Kakailanganin mo ang isang aktibong Profile ng WagyuSwap upang makalahok sa isang IFO!",
   "Profile Active!": "Aktibo ang Profile!",
-  "Get WAGYU-BNB LP Tokens": "Kuhanin ang mga WAGYU-BNB LP Token",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "I-stake ang WAGYU at BNB sa liquidity pool upang makakuha ng mga token ng LP.",
+  "Get WAGYU-VLX LP Tokens": "Kuhanin ang mga WAGYU-VLX LP Token",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "I-stake ang WAGYU at VLX sa liquidity pool upang makakuha ng mga token ng LP.",
   "You’ll spend them to buy IFO sale tokens.": "Gagastusin mo ang mga ito upang bumili ng mga token sa pagbebenta ng IFO.",
   "Commit LP Tokens": "Kumuha ng mga Token ng LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Kapag live na mga IFO sales, maaari mong “I-commit” ang iyong mga LP token upang bumili ng mga token na ibebenta.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Inirerekumenda naming kumuha muna sa Basic na Sale, ngunit maaari mong gawin ang pareho kung nais mo.",
   "Claim your tokens and achievement": "I-claim ang iyong mga token at matagumpay na nakamit",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Matapos ang sales finish ng IFO, maaari kang mag-claim ng anumang mga token ng IFO na iyong binili, at ang anumang mga hindi nagamit na token ng WAGYU-BNB LP ay ibabalik sa iyong wallet.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Matapos ang sales finish ng IFO, maaari kang mag-claim ng anumang mga token ng IFO na iyong binili, at ang anumang mga hindi nagamit na token ng WAGYU-VLX LP ay ibabalik sa iyong wallet.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Ang pagsasara ng transaksyon sa round na ito ay naisumite sa blockchain, at naghihintay ng kumpirmasyon.",
   "No prediction history available": "Hindi available ang prediction history",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Kung sigurado kang makikita mo ang history dito, tiyaking nakakonekta ka sa tamang wallet at subukang muli.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Kapag nakapasok ka na sa isang posisyon, hindi mo ito maaaring kanselahin o i-adjust ito.",
   "All losses are final.": "Ang lahat ng pagkatalo ay pangwakas.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Nauunawaan ko na gumagamit ako ng produktong ito sa aking sariling peligro. Anumang pagkatalo na natamo dahil sa aking mga aksyon ay ang aking sariling responsibilidad.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "I-stake ang WAGYU at BNB sa liquidity pool upang makakuha ng mga LP token. Gagastahin mo ito upang bumili IFO ng mga sale token.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "I-stake ang WAGYU at VLX sa liquidity pool upang makakuha ng mga LP token. Gagastahin mo ito upang bumili IFO ng mga sale token.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Kakailanganin mo ang isang aktibong Profile ng WagyuSwap upang makalahok sa IFO!",
   "Your LP tokens committed": "Na-commit na ang iyong mga token sa LP",
   "Max. Committed": "Max. na Ma-commit",
@@ -483,8 +483,8 @@
   "Achievement": "Mga natamo",
   "Commit ~%minLp% LP in total to earn!": "Commit ~%minLp% LP sa kabuuan upang kumita!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Ano ang pagkakaiba sa pagitan ng isang Basic na Pagbebenta at Walang limitasyong Pagbebenta?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Sa Basic na Pagbebenta, ang bawat user ay maaaring gumawa ng maximum na 100 USD na halaga ng WAGYU-BNB LP Tokens. Kinakalkula namin ang maximum na halaga ng LP mga 30 minuto bago ang bawat IFO. Ang Basic na Pagbebenta ay walang bayad sa pakikilahok.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Sa Walang-limitasyong Pagbebenta, walang limitasyon sa dami ng WAGYU-BNB LP Tokens na maaari mong i-commit. Gayunpaman, mayroong bayad para sa paglahok: tingnan sa ibaba.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Sa Basic na Pagbebenta, ang bawat user ay maaaring gumawa ng maximum na 100 USD na halaga ng WAGYU-VLX LP Tokens. Kinakalkula namin ang maximum na halaga ng LP mga 30 minuto bago ang bawat IFO. Ang Basic na Pagbebenta ay walang bayad sa pakikilahok.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Sa Walang-limitasyong Pagbebenta, walang limitasyon sa dami ng WAGYU-VLX LP Tokens na maaari mong i-commit. Gayunpaman, mayroong bayad para sa paglahok: tingnan sa ibaba.",
   "Which sale should I commit to? Can I do both?": "Aling pagbebenta ang dapat kong i-commit? Maaari ko bang gawin ang pareho?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Maaari kang pumili ng isa o pareho nang sabay! Kung mag-cocommit ka lamang ng kaunting halaga, inirerekumenda muna namin ang Basic na Pagbebenta. Tandaan lamang na kailangan mo ng isang WagyuSwap Profile upang lumahok.",
   "How much is the participation fee?": "Magkano ang participation fee?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Ang singilin ay magsisimula sa 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Ang 1% na participation fee ay bumababa sa mga cliff, batay sa porsyento ng overflow mula sa \"Walang limitasyong\" bahagi ng pagbebenta.",
   "Where does the participation fee go?": "Saan napupunta ang participation fee?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Na-burn namin ito. Ang mga token ng WAGYU-BNB LP mula sa participation fee ay ma-dedecompose. Gagamitin namin pagkatapos ang bahaging BNB sa merkado na bilhin ang katumbas ng WAGYU, at sa wakas itatapon ang lahat ng WAGYU sa lingguhang token burn.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Na-burn namin ito. Ang mga token ng WAGYU-VLX LP mula sa participation fee ay ma-dedecompose. Gagamitin namin pagkatapos ang bahaging VLX sa merkado na bilhin ang katumbas ng WAGYU, at sa wakas itatapon ang lahat ng WAGYU sa lingguhang token burn.",
   "How can I get an achievement for participating in the IFO?": "Paano ako makakakuha ng isang pagtamo para sa paglahok sa IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Kailangan mong mag-ambag ng isang minimum na halos 10 USD na halaga ng mga WAGYU-BNB LP Token sa alinmang pagbebenta.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Kailangan mong mag-ambag ng isang minimum na halos 10 USD na halaga ng mga WAGYU-VLX LP Token sa alinmang pagbebenta.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Maaari kang magbigay ng isa o pareho, hindi ito mahalaga: ang iyong pangkalahatang kontribusyon lamang ang binibilang para sa mga matatamo.",
   "The Lottery Is Changing!": "Nagbabago ang Loterya!",
   "Come back soon!": "Malapit nang dumating!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Ilagay ang DOWN",
   "An error occurred, unable to enter your position": "May naganap na error, hindi mailagay ang iyong posisyon",
   "Set Position": "I-set ang Posisyon",
-  "Insufficient BNB balance": "Hindi sapat ang BNB na balanse",
+  "Insufficient VLX balance": "Hindi sapat ang VLX na balanse",
   "A minimum amount of %num% %token% is required": "Isang minimum na halaga ng %num% %token% ay kinakailangan",
   "Enter an amount": "Ilagay ang amount",
   "You won’t be able to remove or change your position once you enter it.": "Hindi mo matatanggal o mababago ang iyong posisyon sa sandaling inilagay mo ito.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu Profile",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "pagkatapos ay magparehistro para sa kumpetisyon sa pamamagitan ng pag-click sa button na \"GUSTO KO MAKIPAG-LABAN\" sa itaas.",
   "Battle Time": "Battle Time",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "I-trade ang BNB/BUSD, WAGYU/BNB, ETH/BNB at BTCB/BNB sa panahon ng labanan upang maiangat ang parehong puntos mo at ng iyong team. Tingnan ang seksyon ng Mga Panuntunan sa ibaba para sa higit pa.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "I-trade ang VLX/BUSD, WAGYU/VLX, ETH/VLX at BTCB/VLX sa panahon ng labanan upang maiangat ang parehong puntos mo at ng iyong team. Tingnan ang seksyon ng Mga Panuntunan sa ibaba para sa higit pa.",
   "Prize Claim": "I-claim ang Premyo",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Ang mga team at trader ay mairaranggo ayon sa dami ng pag-trade. Kolektahin ang iyong mga premyo at ipagdiwang!",
   "Registration starting April 5": "Mag-sisimula ang rehistrasyon sa Abril 5",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Ang desisyon na ito ay hindi maaaring baligtarin.",
   "I understand that my address may be displayed publicly throughout the competition.": "Nauunawaan ko na ang aking address ay maaaring ipakita sa publiko sa buong kompetisyon.",
   "Eligible trading pairs": "Karapat-dapat na mga pares sa trading",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Tanging mga trade sa BNB/BUSD, WAGYU/BNB, ETH/BNB at BTCB/BNB na mga pares ay isasama sa kabuuang mga kalkulasyon.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Tanging mga trade sa VLX/BUSD, WAGYU/VLX, ETH/VLX at BTCB/VLX na mga pares ay isasama sa kabuuang mga kalkulasyon.",
   "Calculating team ranks and winners": "Kinakalkula ang mga ranggo ng team at nagwagi",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Ang mga ranggo ng team ay kinakalkula ng kabuuang pinagsamang dami ng nangungunang 500 mga miyembro ng bawat kani-kanilang team.",
   "Prize distribution": "Distribusyon ng premyo",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Paano ko i-claim ang aking (mga) premyo?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Matapos ang labanan, bisitahin ang event page at i-click ang button na \"I-claim ang mga Premyo\" sa tuktok na seksyon o sa seksyong \"Iyong Score\". Kapag matagumpay mong na-claim ang iyong mga premyo, ang text ng button ay magbabago sa \"Mga Na-claim na Premyo\".",
   "Trade to increase your rank": "Mag-trade upang madagdagan ang iyong ranggo",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Karapat-dapat na mga pares: BNB/BUSD, WAGYU/BNB, ETH/BNB at BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Karapat-dapat na mga pares: VLX/BUSD, WAGYU/VLX, ETH/VLX at BTCB/VLX",
   "Play as a team": "Maglaro bilang isang team",
   "The higher your team’s rank, the better your prizes": "Kung mas mataas ang ranggo ng iyong team, mas mahusay ang iyong mga premyo",
   "Top Traders": "Mga Nangungunang Trader",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Mangyaring bigyang awtorisasyon na i-access ang iyong account",
   "Unable to find connector": "Hindi makita ang connector",
   "The connector config is wrong": "Mali ang config ng connector",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Nag-ambag ka ng %amount% ng mga WAGYU-BNB LP token sa IFO na ito!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Kakailanganin mo ang mga token ng WAGYU-BNB LP upang lumahok sa IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Nag-ambag ka ng %amount% ng mga WAGYU-VLX LP token sa IFO na ito!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Kakailanganin mo ang mga token ng WAGYU-VLX LP upang lumahok sa IFO!",
   "Your %symbol% committed": "Ang iyong %symbol% na na-commit",
   "Your %symbol% RECLAIMED": "Ang iyong %symbol% NA-RECLAIM",
   "Your %symbol% TO RECLAIM": "Ang iyong %symbol% PARA-I-RECLAIM",
