--- a/public/locales/hi-IN.json
+++ b/public/locales/hi-IN.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU को मंज़ूरी दें",
   "IFO: Initial Farm Offerings": "IFO: फार्म संबंधी आरंभिक पेशकश",
   "Buy new tokens with a brand new token sale model.": "एकदम नए टोकन के सेल मॉडल के साथ नए टोकन खरीदें।",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "आप WAGYU-BNB LP टोकन का उपयोग करके नए टोकन के लिए भुगतान करेंगे जिसका मतलब है कि आपको इसमें शामिल होने के लिए लिक्विडिटी पूल में WAGYU और BNB की समान राशि को स्टेक करना होता है।",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP पाएं >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "प्रोजेक्ट को BNB मिलता है, WagyuSwap WAGYU को बर्न करता है।",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "आप WAGYU-VLX LP टोकन का उपयोग करके नए टोकन के लिए भुगतान करेंगे जिसका मतलब है कि आपको इसमें शामिल होने के लिए लिक्विडिटी पूल में WAGYU और VLX की समान राशि को स्टेक करना होता है।",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP पाएं >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "प्रोजेक्ट को VLX मिलता है, WagyuSwap WAGYU को बर्न करता है।",
   "You get the tokens.": "आपको टोकन मिलते हैं।",
   "Want to launch your own IFO?": "क्या आप अपना IFO लॉन्च करना चाहते हैं?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "WagyuSwap के साथ अपना प्रोजेक्ट लॉन्च करें, जो Binance Smart Chain का सबसे ज्यादा उपयोग किया जाने वाला AMM प्रोजेक्ट और लिक्विडिटी प्रोवाइडर है ताकि आपके टोकन BSC पर सर्वाधिक सक्रिय और तेजी से बढ़ती हुई कम्युनिटी पर सीधे लाए जा सकें।",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ जब भी आप LP टोकन को स्टेक या अनस्टेक करेंगे तो कॉन्ट्रैक्ट आपके लिए WAGYU पुरस्कार को अपने आप प्राप्त कर लेगा!",
   "How to take part": "इसमें शामिल कैसे हों",
   "Before Sale": "सेल से पहले",
-  "Buy WAGYU and BNB tokens": "WAGYU और BNB टोकन खरीदें",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYU और BNB लिक्विडिटी जोड़कर WAGYU-BNB LP टोकन पाएं",
+  "Buy WAGYU and VLX tokens": "WAGYU और VLX टोकन खरीदें",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYU और VLX लिक्विडिटी जोड़कर WAGYU-VLX LP टोकन पाएं",
   "During Sale": "सेल के दौरान",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "सेल के लाइव होने के दौरान, अपने WAGYU-LP टोकन से IFO टोकन खरीदने का वचन दें",
   "After Sale": "सेल के बाद",
@@ -399,14 +399,14 @@
   "Activate your Profile": "अपनी प्रोफ़ाइल एक्टिवेट करें",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "किसी IFO में हिस्सा लेने के लिए, आपके पास WagyuSwap की कोई एक्टिव प्रोफ़ाइल होनी चाहिए!",
   "Profile Active!": "प्रोफाइल एक्टिव है!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP टोकन पाएं",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "LP टोकन पाने के लिए, लिक्विडिटी पूल में WAGYU और BNB को स्टेक पर लगाएं।",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP टोकन पाएं",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "LP टोकन पाने के लिए, लिक्विडिटी पूल में WAGYU और VLX को स्टेक पर लगाएं।",
   "You’ll spend them to buy IFO sale tokens.": "आप उन्हें IFO सेल टोकन खरीदने में इस्तेमाल करेंगे।",
   "Commit LP Tokens": "LP टोकन कमिट करें",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "IFO सेल के लाइव होने पर, आप बेचे जा रहे टोकन को खरीदने के लिए अपने LP टोकन को “कमिट” कर सकते हैं।",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "हमारी राय है कि आप पहले बेसिक सेल में टोकन लगाएं, मगर आप पसंद करें तो दोनों में भी लगा सकते हैं।",
   "Claim your tokens and achievement": "अपने टोकन और उपलब्धि क्लेम करें",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO सेल खत्म होने के बाद, आप अपने खरीदे गए किसी भी IFO टोकन को क्लेम कर सकते हैं और खर्च न किए गए WAGYU-BNB LP टोकन आपके वॉलेट में वापस लौटा दिए जाएंगे।",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO सेल खत्म होने के बाद, आप अपने खरीदे गए किसी भी IFO टोकन को क्लेम कर सकते हैं और खर्च न किए गए WAGYU-VLX LP टोकन आपके वॉलेट में वापस लौटा दिए जाएंगे।",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "इस राउंड के आखिरी लेनदेन को ब्लॉकचेन में सबमिट कर दिया गया है, और उसे कन्फ़र्म किया जाना बाकी है।",
   "No prediction history available": "कोई पूर्वानुमान हिस्ट्री उपलब्ध नहीं है",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "यदि आपको लगता है कि आपको यहां पर हिस्ट्री दिखनी ही चाहिए, तो सुनिश्चित करें कि आप सही वॉलेट से कनेक्टेड हैं और फिर से ट्राई करें।",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "जब आप कोई पोजीशन दर्ज करते हैं, तो आप इसे रद्द या एडजस्ट नहीं कर सकते हैं।",
   "All losses are final.": "सभी नुकसान अंतिम होते हैं।",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "मैं समझता हूं कि मैं यह प्रोडक्ट अपने जोखिम पर उपयोग कर रहा हूं। मेरी कार्रवाइयों के कारण होने वाला कोई भी नुकसान मेरी जिम्मेदारी है।",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP टोकन पाने के लिए लिक्विडिटी पूल में WAGYU और BNB को स्टेक करें। आप उन्हें IFO सेल टोकन खरीदने के लिए खर्च करेंगे।",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP टोकन पाने के लिए लिक्विडिटी पूल में WAGYU और VLX को स्टेक करें। आप उन्हें IFO सेल टोकन खरीदने के लिए खर्च करेंगे।",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "किसी IFO में हिस्सा लेने के लिए, आपको WagyuSwap की एक्टिव प्रोफ़ाइल की जरूरत होगी!",
   "Your LP tokens committed": "आपके LP टोकन कमिट किए गए",
   "Max. Committed": "अधिकतम कमिट किए गए",
@@ -483,8 +483,8 @@
   "Achievement": "उपलब्धि",
   "Commit ~%minLp% LP in total to earn!": "जीतने के लिए कुल ~%minLp% LP कमिट करें!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "बेसिक सेल और अनलिमिटेड सेल में क्या अंतर है?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "बेसिक सेल में, प्रत्येक यूज़र अधिकतम लगभग 100 USD के WAGYU-BNB LP टोकन ही कमिट कर सकता है। हम प्रत्येक IFO से लगभग 30 मिनट पहले अधिकतम LP राशि की गणना करते हैं। बेसिक सेल में कोई भागीदारी फीस नहीं है।",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "अनलिमिटेड सेल में, इस पर कोई रोक नहीं है कि आप कितनी राशि के WAGYU-BNB LP टोकन कमिट कर सकते हैं। हालांकि भागीदारी करने की फीस है: नीचे देखें।",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "बेसिक सेल में, प्रत्येक यूज़र अधिकतम लगभग 100 USD के WAGYU-VLX LP टोकन ही कमिट कर सकता है। हम प्रत्येक IFO से लगभग 30 मिनट पहले अधिकतम LP राशि की गणना करते हैं। बेसिक सेल में कोई भागीदारी फीस नहीं है।",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "अनलिमिटेड सेल में, इस पर कोई रोक नहीं है कि आप कितनी राशि के WAGYU-VLX LP टोकन कमिट कर सकते हैं। हालांकि भागीदारी करने की फीस है: नीचे देखें।",
   "Which sale should I commit to? Can I do both?": "मुझे किस सेल के लिए कमिट करना चाहिए? क्या मैं दोनों के लिए कमिट कर सकता हूं?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "आप एक ही समय पर कोई एक या दोनों चुन सकते हैं! यदि आप केवल छोटी राशि कमिट कर रहे हैं, तो हम पहले बेसिक सेल चुनने की सलाह देंगे। केवल यह याद रखें कि आपको शामिल होने के लिए WagyuSwap प्रोफ़ाइल की जरूरत है।",
   "How much is the participation fee?": "भागीदारी फीस कितनी है?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "फीस 1% से शुरू होगी।",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "सेल के \"अनलिमिटेड\" हिस्से से अतिरिक्त होने के प्रतिशत के आधार पर, शीर्ष पर जाने पर 1% भागीदारी फीस कम हो जाती है।",
   "Where does the participation fee go?": "भागीदारी फीस कहां जाती है?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "हम इसे बर्न करते हैं। भागीदारी फीस के WAGYU-BNB LP टोकन को डिकंपोज किया जाएगा, फिर हम WAGYU के समकक्ष की बाजार खरीदारी करने के लिए BNB हिस्से का इस्तेमाल करेंगे, और आखिर में हम सभी WAGYU को साप्ताहिक टोकन बर्न में डाल देंगे।",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "हम इसे बर्न करते हैं। भागीदारी फीस के WAGYU-VLX LP टोकन को डिकंपोज किया जाएगा, फिर हम WAGYU के समकक्ष की बाजार खरीदारी करने के लिए VLX हिस्से का इस्तेमाल करेंगे, और आखिर में हम सभी WAGYU को साप्ताहिक टोकन बर्न में डाल देंगे।",
   "How can I get an achievement for participating in the IFO?": "IFO में शामिल होने के लिए मुझे उपलब्धि कैसे मिल सकती है?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "आपको किसी भी सेल के लिए न्यूनतम लगभग 10 USD कीमत के WAGYU-BNB LP टोकन का योगदान देना होता है।",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "आपको किसी भी सेल के लिए न्यूनतम लगभग 10 USD कीमत के WAGYU-VLX LP टोकन का योगदान देना होता है।",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "आप किसी एक में या दोनों में योगदान दे सकते हैं, इससे फर्क नहीं पड़ता। उपलब्धि के लिए केवल आपके समग्र योगदान की गणना की जाती है।",
   "The Lottery Is Changing!": "लॉटरी बदल रही है!",
   "Come back soon!": "जल्द ही वापस आएं!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "डाउन दर्ज करें",
   "An error occurred, unable to enter your position": "एक गलती हुई, आपकी पोजीशन दर्ज करने में असमर्थ",
   "Set Position": "पोजीशन सेट करें",
-  "Insufficient BNB balance": "अपर्याप्त BNB बैलेंस",
+  "Insufficient VLX balance": "अपर्याप्त VLX बैलेंस",
   "A minimum amount of %num% %token% is required": "%num% %token% की न्यूनतम राशि आवश्यक है",
   "Enter an amount": "रकम डालें",
   "You won’t be able to remove or change your position once you enter it.": "एक बार दर्ज करने के बाद आप अपनी पोजीशन हटा या बदल नहीं पाएंगे।",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu प्रोफ़ाइल",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "फिर ऊपर “मैं बैटल करना चाहता हूं” बटन पर क्लिक करके प्रतियोगिता के लिए रजिस्टर करें।",
   "Battle Time": "बैटल टाइम",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "अपना और अपनी टीम दोनों का स्कोर बढ़ाने के लिए बैटल की अवधि में BNB/BUSD, WAGYU/BNB, ETH/BNB और BTCB/BNB को ट्रेड करें। अधिक जानकारी के लिए नीचे नियम सेक्शन देखें।",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "अपना और अपनी टीम दोनों का स्कोर बढ़ाने के लिए बैटल की अवधि में VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX को ट्रेड करें। अधिक जानकारी के लिए नीचे नियम सेक्शन देखें।",
   "Prize Claim": "पुरस्कार क्लेम करें",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "ट्रे़डिंग वॉल्यूम के क्रम में टीमों और ट्रेडर्स को रैंकिंग दी जाएगी। अपने पुरस्कार कलेक्ट करें और खुशी मनाएं!",
   "Registration starting April 5": "रजिस्ट्रेशन 5 अप्रैल से शुरू हो रहा है",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "इस फैसले को वापस नहीं लिया जा सकता है।",
   "I understand that my address may be displayed publicly throughout the competition.": "मैं समझता हूं कि मेरा पता पूरी प्रतियोगिता के दौरान सार्वजनिक रूप से प्रदर्शित किया जाएगा।",
   "Eligible trading pairs": "ट्रेडिंग के मान्य पेयर",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "वॉल्यूम की गणना में केवल BNB/BUSD, WAGYU/BNB, ETH/BNB और BTCB/BNB पेयर के ट्रेड ही शामिल किए जाएंगे।",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "वॉल्यूम की गणना में केवल VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX पेयर के ट्रेड ही शामिल किए जाएंगे।",
   "Calculating team ranks and winners": "टीम रैंकिंग और विजेताओं की गणना की जा रही है",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "टीम रैंकिंग की गणना हर संबंधित टीम के शीर्ष 500 सदस्यों के कुल संयुक्त वॉल्यूम के आधार पर की जाती है।",
   "Prize distribution": "पुरस्कार वितरण",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "मैं अपने पुरस्कार कैसे क्लेम करूं?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "बैटल खत्म होने के बाद, इवेंट पेज पर जाएं और टॉप सेक्शन में या “आपका स्कोर” सेक्शन में “पुरस्कार क्लेम करें” बटन पर क्लिक करें। अपने पुरस्कारों को सफलतापूर्वक क्लेम करने के बाद, बटन का टेक्स्ट “पुरस्कार क्लेम किए गए\" में बदल जाएगा।",
   "Trade to increase your rank": "अपना रैंक बढ़ाने के लिए ट्रेड करें",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "मान्य पेयर: BNB/BUSD, WAGYU/BNB, ETH/BNB और BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "मान्य पेयर: VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX",
   "Play as a team": "एक टीम के रूप में खेलें",
   "The higher your team’s rank, the better your prizes": "आपकी टीम की रैंकिंग जितनी बेहतर होती है, आपके पुरस्कार उतने बेहतर होते हैं",
   "Top Traders": "शीर्ष ट्रेडर्स",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "कृपया अपना खाता एक्सेस करने के लिए अधिकृत करें",
   "Unable to find connector": "कनेक्टर ढूंढने में असमर्थ",
   "The connector config is wrong": "कनेक्टर कॉन्फ़िगरेशन गलत है",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "आपने इस IFO में %amount% WAGYU-BNB LP टोकन का योगदान दिया है!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "आपको IFO में शामिल होने के लिए WAGYU-BNB LP टोकन की आवश्यकता होगी!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "आपने इस IFO में %amount% WAGYU-VLX LP टोकन का योगदान दिया है!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "आपको IFO में शामिल होने के लिए WAGYU-VLX LP टोकन की आवश्यकता होगी!",
   "Your %symbol% committed": "आपका %symbol% कमिट किया गया",
   "Your %symbol% RECLAIMED": "आपका %symbol% फिर से क्लेम किया गया",
   "Your %symbol% TO RECLAIM": "आपके %symbol% फिर से क्लेम करने के लिए है",
