--- a/public/locales/hu-HU.json
+++ b/public/locales/hu-HU.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU jóváhagyása",
   "IFO: Initial Farm Offerings": "IFO: Induló gazdálkodási felajánlások",
   "Buy new tokens with a brand new token sale model.": "Vásárolj új zsetonokat a vadonatúj zsetonértékesítő modell segítségével.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Az új zsetonokért a WAGYU-BNB LP zsetonok felhasználásával kell fizetni, ami azt jelenti, hogy a részvételhez egyenlő mennyiségű WAGYU és BNB összeget kell feltenni egy likviditási érdekszövetségben.",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP megszerzése >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "A projekt megkapja a BNB-t, a WagyuSwap elégeti a WAGYU-et.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Az új zsetonokért a WAGYU-VLX LP zsetonok felhasználásával kell fizetni, ami azt jelenti, hogy a részvételhez egyenlő mennyiségű WAGYU és VLX összeget kell feltenni egy likviditási érdekszövetségben.",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP megszerzése >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "A projekt megkapja a VLX-t, a WagyuSwap elégeti a WAGYU-et.",
   "You get the tokens.": "Megkapod a zsetonokat.",
   "Want to launch your own IFO?": "Saját IFOT-t akarsz indítani?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Indíts saját projektet a WagyuSwap, a Binance Smart Chain leggyakrabban használt AMM projekt- és likviditás-szolgáltatóval, hogy a saját zsetonod közvetlenül a BSC legaktívabb és leggyorsabban növekvő közösségéhez jusson el.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Minden alkalommal, amikor LP zsetonokat teszel fel és veszel le tétként, az okos kontraktus automatikusan WAGYU jutalmakat arat neked!",
   "How to take part": "Hogyan lehet részt venni",
   "Before Sale": "Eladás előtt",
-  "Buy WAGYU and BNB tokens": "WAGYU és BNB zsetonok vétele",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Szerezzen WAGYU-BNB LP zsetonokat WAGYU és BNB likviditás hozzáadásával",
+  "Buy WAGYU and VLX tokens": "WAGYU és VLX zsetonok vétele",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Szerezzen WAGYU-VLX LP zsetonokat WAGYU és VLX likviditás hozzáadásával",
   "During Sale": "Eladás közben",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Amíg az értékesítés folyamatban van, kössed le WAGYU-LP zsetonjaid az IFO zsetonok megvásárlására",
   "After Sale": "Eladás után",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktiválja profilját",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Szüksége lesz egy aktív WagyuSwap profilra, hogy részt vehessen az IFO-ban!",
   "Profile Active!": "Profilja aktív!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP zsetonok megszerzése",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Tegye fel a WAGYU és BNB tétjeit a likviditási érdekszövetségben, hogy LP zsetonokat kapjon.",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP zsetonok megszerzése",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Tegye fel a WAGYU és VLX tétjeit a likviditási érdekszövetségben, hogy LP zsetonokat kapjon.",
   "You’ll spend them to buy IFO sale tokens.": "Ezeket arra költi, hogy IFO kereskedési zsetonokat vegyen.",
   "Commit LP Tokens": "LP zsetonok lekötése",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Amikor az IFO értékesítés él, akkor \"lekötheti\" az LP zsetonjait, hogy eladásra kerülő zsetonokat vegyen.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Célszerű, ha elsőre az alapértékesítésben köt le, de tetszés szerint mindkettőben megteheti.",
   "Claim your tokens and achievement": "Igényelje zsetonjait és eredményét",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Az IFO értékesítés befejezése után igényelhet bármennyi megvásárolt IFO zsetont, és az el nem költött WAGYU-BNB LP zsetonok visszakerülnek a tárcájába.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Az IFO értékesítés befejezése után igényelhet bármennyi megvásárolt IFO zsetont, és az el nem költött WAGYU-VLX LP zsetonok visszakerülnek a tárcájába.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "A forduló záró tranzakcióját benyújtották a blokklánchoz, és megerősítésre vár.",
   "No prediction history available": "Nincs elérhető előrejelzési előzmény",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Ha biztos benne, hogy itt kellene látnia az előzményeket, ellenőrizze, hogy a megfelelő tárcához csatlakozik-e, és próbálja újra.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Miután megadta a pozíciót, ezt már nem törölheti vagy módosíthatja.",
   "All losses are final.": "Minden veszteség végleges.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Megértettem, hogy ezt a terméket saját felelősségemre használom. A cselekedeteim miatt felmerült veszteségekért saját magam vállalom a felelősséget.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Tegyen WAGYU-t és BNB-t a likviditási érdekszövetségbe, hogy LP zsetonokat kapjon. Ezeket arra költi, hogy IFO értékesítési zsetonokat vásároljon.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Tegyen WAGYU-t és VLX-t a likviditási érdekszövetségbe, hogy LP zsetonokat kapjon. Ezeket arra költi, hogy IFO értékesítési zsetonokat vásároljon.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Szüksége lesz egy aktív WagyuSwap profilra, hogy részt vehessen egy IFO-ban!",
   "Your LP tokens committed": "Az Ön lekötött LP-zsetonjai",
   "Max. Committed": "Max. lekötve",
@@ -483,8 +483,8 @@
   "Achievement": "Eredmény",
   "Commit ~%minLp% LP in total to earn!": "Kössön le ~%minLp% LP összeget összesen, hogy keressen!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Mi a különbség az alapértékesítés és a korlátlan értékesítés között?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Alapértékesítésben minden felhasználó legfeljebb kb. 100 USD értékben köthet le WAGYU-BNB LP zsetont. Körülbelül 30 perccel minden IFO előtt kiszámítjuk a maximális LP-összeget. Az alapértékesítésben nincs részvételi díj.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Korlátlan értékesítésben nincs korlátozva a leköthető WAGYU-BNB LP zsetonok összege. Azonban van részvételi díj: lásd alább.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Alapértékesítésben minden felhasználó legfeljebb kb. 100 USD értékben köthet le WAGYU-VLX LP zsetont. Körülbelül 30 perccel minden IFO előtt kiszámítjuk a maximális LP-összeget. Az alapértékesítésben nincs részvételi díj.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Korlátlan értékesítésben nincs korlátozva a leköthető WAGYU-VLX LP zsetonok összege. Azonban van részvételi díj: lásd alább.",
   "Which sale should I commit to? Can I do both?": "Melyik értékesítésre kössek le? Megtehetem mindkettőt?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Választhatja az egyiket vagy mindkettőt egyszerre! Ha csak kis összeget köt lel, akkor először az Alapértékesítést ajánljuk. Ne feledje, hogy a részvételhez WagyuSwap-profilra van szüksége.",
   "How much is the participation fee?": "Mennyi a részvételi díj?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "A díj 1% -nál indul.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Az 1% -os részvételi díj lépcsőzetesen csökken, az értékesítés „korlátlan” részéből származó túlcsordulás százalékos aránya alapján.",
   "Where does the participation fee go?": "Hová kerül a részvételi díj?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Elégetjük. A részvételi díjból származó WAGYU-BNB LP zsetonok lebomlanak, majd a BNB részét felhasználjuk a WAGYU egyenértékének vételére a piacon, majd végül az egész WAGYU-t bedobjuk a heti zsetonégetésbe.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Elégetjük. A részvételi díjból származó WAGYU-VLX LP zsetonok lebomlanak, majd a VLX részét felhasználjuk a WAGYU egyenértékének vételére a piacon, majd végül az egész WAGYU-t bedobjuk a heti zsetonégetésbe.",
   "How can I get an achievement for participating in the IFO?": "Hogyan juthatok eredményhez a részvételért az IFO-ban?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Mindkét értékesítéshez hozzá kell járulnia legalább körülbelül 10 USD értékű WAGYU-BNB LP zsetonhoz.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Mindkét értékesítéshez hozzá kell járulnia legalább körülbelül 10 USD értékű WAGYU-VLX LP zsetonhoz.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Hozzájárulhat az egyikhez vagy mindkettőhöz, ez nem számít: csak a teljes hozzájárulása számít bele az eredménybe.",
   "The Lottery Is Changing!": "A lottó változik!",
   "Come back soon!": "Visszavárjuk!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "LE bevitele",
   "An error occurred, unable to enter your position": "Hiba történt, nem sikerült bevinni a pozícióját",
   "Set Position": "Pozíció beállítása",
-  "Insufficient BNB balance": "Elégtelen BNB egyenleg",
+  "Insufficient VLX balance": "Elégtelen VLX egyenleg",
   "A minimum amount of %num% %token% is required": "%num% %token% egy minimális összege szükséges",
   "Enter an amount": "Mennyiség megadása",
   "You won’t be able to remove or change your position once you enter it.": "Miután megadta, már nem tudja eltávolítani vagy megváltoztatni pozícióját.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu profil",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "majd nevezzen be a versenyre a fenti „CSATÁZNI AKAROK” gombra kattintva.",
   "Battle Time": "Csataidő",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Kereskedjen BNB/BUSD, WAGYU/BNB, ETH/BNB és BTCB/BNB-vel csataidőben, hogy emelje saját maga és csapata pontszámát. További tájékoztatásért lásd az alábbi Szabályok részt.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Kereskedjen VLX/BUSD, WAGYU/VLX, ETH/VLX és BTCB/VLX-vel csataidőben, hogy emelje saját maga és csapata pontszámát. További tájékoztatásért lásd az alábbi Szabályok részt.",
   "Prize Claim": "Nyeremények igénylése",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "A csapatokat és a kereskedőket a kereskedési volumen sorrendjében rangsoroljuk. Gyűjtse be nyereményeit és ünnepeljen!",
   "Registration starting April 5": "A nevezés április 5-én kezdődik",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Ezt a döntést nem lehet visszavonni.",
   "I understand that my address may be displayed publicly throughout the competition.": "Megértettem, hogy a címem nyilvánosan megjelenhet a verseny során.",
   "Eligible trading pairs": "Választható kereskedési párok",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Csak a BNB/BUSD, WAGYU/BNB, ETH/BNB és BTCB/BNB párokkal folytatott kereskedések szerepelnek a volumen számításaiban.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Csak a VLX/BUSD, WAGYU/VLX, ETH/VLX és BTCB/VLX párokkal folytatott kereskedések szerepelnek a volumen számításaiban.",
   "Calculating team ranks and winners": "Csapatok rangsorolása és a nyertesek kiszámítása",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "A csapatok rangsorolását az egyes csapatok első 500 tagjának összesített volumene alapján számítják ki.",
   "Prize distribution": "Nyeremények felosztása",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Hogyan igényelhetem a nyereménye(i)met?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Miután a csata befejeződött, látogasson el az esemény oldalára, és kattintson a „Nyeremények igénylése” gombra a felső részben vagy a „Saját pontszámom” részben. Miután sikeresen igényelte nyereményét, a gomb felirata „Nyereményt igényelt” szövegre vált.",
   "Trade to increase your rank": "Kereskedjen, hogy emelje rangsorolását",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Jogosult párok: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Jogosult párok: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX",
   "Play as a team": "Játsszon csapatként",
   "The higher your team’s rank, the better your prizes": "Minél magasabb a csapat rangsorolása, annál jobbak az Ön nyereményei",
   "Top Traders": "Csúcskereskedők",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Kérjük, engedélyezze a hozzáférést fiókjához",
   "Unable to find connector": "Nem található csatlakozó",
   "The connector config is wrong": "A csatlakozó konfigurációja hibás",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Ön %amount% WAGYU-BNB LP zsetont adott hozzá ehhez az IFO-hoz!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "WAGYU-BNB LP zsetonokra lesz szüksége, hogy részt vegyen az IFO-ban!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Ön %amount% WAGYU-VLX LP zsetont adott hozzá ehhez az IFO-hoz!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "WAGYU-VLX LP zsetonokra lesz szüksége, hogy részt vegyen az IFO-ban!",
   "Your %symbol% committed": "Ön lekötött %symbol%",
   "Your %symbol% RECLAIMED": "Ön %symbol% VISSZAIGÉNYELT",
   "Your %symbol% TO RECLAIM": "ÖNNEK %symbol% VISSZAIGÉNYELHETŐ",
