--- a/public/locales/id-ID.json
+++ b/public/locales/id-ID.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Setujui WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "\nBeli token baru dengan model penjualan token baru.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Anda akan membayar token baru dengan menggunakan token WAGYU-BNB LP, yang berarti Anda harus menumpuk jumlah WAGYU dan BNB yang sama dalam pool likuiditas untuk ikut serta.",
-  "Get WAGYU-BNB LP >": "\nDapatkan WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Proyek mendapatkan BNB, WagyuSwap menghanguskan WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Anda akan membayar token baru dengan menggunakan token WAGYU-VLX LP, yang berarti Anda harus menumpuk jumlah WAGYU dan VLX yang sama dalam pool likuiditas untuk ikut serta.",
+  "Get WAGYU-VLX LP >": "\nDapatkan WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Proyek mendapatkan VLX, WagyuSwap menghanguskan WAGYU.",
   "You get the tokens.": "Anda mendapatkan tokennya.",
   "Want to launch your own IFO?": "Ingin meluncurkan IFO Anda sendiri?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Luncurkan proyek Anda dengan WagyuSwap, penyedia likuiditas \ndan proyek AMM yang paling banyak digunakan Binance Smart Chain, untuk membawa token Anda langsung ke komunitas yang paling aktif dan berkembang pesat di BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Setiap kali Anda menumpuk dan membongkar tumpukan token LP, kontrak akan secara otomatis memanen hadiah WAGYU untuk Anda!",
   "How to take part": "Cara berpartisipasi",
   "Before Sale": "Sebelum Penjualan",
-  "Buy WAGYU and BNB tokens": "Beli token WAGYU dan BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Dapatkan token WAGYU-BNB LP dengan menambahkan likuiditas WAGYU dan BNB",
+  "Buy WAGYU and VLX tokens": "Beli token WAGYU dan VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Dapatkan token WAGYU-VLX LP dengan menambahkan likuiditas WAGYU dan VLX",
   "During Sale": "Selama Penjualan",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Saat penjualan berlangsung, serahkan token WAGYU-LP Anda untuk membeli token IFO",
   "After Sale": "Setelah Penjualan",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktifkan Profil Anda",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Anda akan memerlukan Profil WagyuSwap yang aktif agar dapat mengambil bagian dalam sebuah IFO!",
   "Profile Active!": "Profil Aktif!",
-  "Get WAGYU-BNB LP Tokens": "Dapatkan Token WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Tumpuk WAGYU dan BNB di dalam pool likuiditas untuk mendapatkan token LP.",
+  "Get WAGYU-VLX LP Tokens": "Dapatkan Token WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Tumpuk WAGYU dan VLX di dalam pool likuiditas untuk mendapatkan token LP.",
   "You’ll spend them to buy IFO sale tokens.": "Anda akan membelanjakannya untuk membeli token penjualan IFO.",
   "Commit LP Tokens": "Gunakan Token LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Saat penjualan IFO dibuka, Anda dapat \"menggunakan\" token LP Anda untuk membeli token yang sedang dijual.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Sebaiknya Anda menggunakannya untuk Penjualan Dasar terlebih dahulu, namun Anda dapat melakukan keduanya jika Anda mau.",
   "Claim your tokens and achievement": "Klaim token dan pencapaian Anda",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Setelah penjualan IFO selesai, Anda dapat mengeklaim token IFO apa pun yang telah Anda beli, dan token WAGYU-BNB LP apa pun yang belum dibelanjakan akan dikembalikan ke dalam dompet Anda.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Setelah penjualan IFO selesai, Anda dapat mengeklaim token IFO apa pun yang telah Anda beli, dan token WAGYU-VLX LP apa pun yang belum dibelanjakan akan dikembalikan ke dalam dompet Anda.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Transaksi penutup putaran ini telah dikirimkan ke blockchain, dan sedang menunggu konfirmasi.",
   "No prediction history available": "Tidak tersedia riwayat prediksi",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Jika Anda yakin seharusnya melihat riwayat di sini, maka pastikan bahwa Anda telah terhubung ke dompet yang tepat, lalu coba lagi.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Setelah Anda memasuki sebuah posisi, Anda tidak dapat membatalkan atau menyesuaikannya.",
   "All losses are final.": "Semua kerugian sudah final.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Saya memahami bahwa saya menggunakan produk ini dengan risiko saya sendiri. Kerugian apa pun yang timbul karena tindakan saya adalah tanggung jawab saya sendiri.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Tumpuk WAGYU dan BNB dalam pool likuiditas untuk mendapatkan token LP. Anda akan membelanjakannya untuk membeli token penjualan IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Tumpuk WAGYU dan VLX dalam pool likuiditas untuk mendapatkan token LP. Anda akan membelanjakannya untuk membeli token penjualan IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Anda akan memerlukan Profil WagyuSwap yang aktif agar dapat mengambil bagian dalam sebuah IFO!",
   "Your LP tokens committed": "Token LP Anda telah digunakan",
   "Max. Committed": "Maks. Digunakan",
@@ -483,8 +483,8 @@
   "Achievement": "Pencapaian",
   "Commit ~%minLp% LP in total to earn!": "Gunakan total ~%minLp% LP untuk meraih penghasilan!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Apa perbedaan antara Penjualan Dasar dan Penjualan Tanpa Batas?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Dalam Penjualan Dasar, setiap pengguna dapat menggunakan Token LP WAGYU-BNB senilai maksimum 100 USD. Kami menghitung jumlah maksimum LP sekitar 30 menit sebelum setiap IFO. Penjualan Dasar tidak menerapkan biaya partisipasi.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Dalam Penjualan Tanpa Batas, tidak ada batas jumlah Token LP WAGYU-BNB yang dapat Anda gunakan. Namun, ada biaya untuk berpartisipasi: lihat di bawah ini.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Dalam Penjualan Dasar, setiap pengguna dapat menggunakan Token LP WAGYU-VLX senilai maksimum 100 USD. Kami menghitung jumlah maksimum LP sekitar 30 menit sebelum setiap IFO. Penjualan Dasar tidak menerapkan biaya partisipasi.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Dalam Penjualan Tanpa Batas, tidak ada batas jumlah Token LP WAGYU-VLX yang dapat Anda gunakan. Namun, ada biaya untuk berpartisipasi: lihat di bawah ini.",
   "Which sale should I commit to? Can I do both?": "Penjualan mana yang seharusnya saya pilih? Bolehkah saya memilih keduanya?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Anda dapat memilih satu atau keduanya sekaligus! Jika Anda hanya menggunakan jumlah kecil, sebaiknya pilih Penjualan Dasar terlebih dahulu. Cukup ingat bahwa Anda memerlukan Profil WagyuSwap agar dapat berpartisipasi.",
   "How much is the participation fee?": "Berapa biaya partisipasi?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Biaya akan dimulai dari 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Biaya partisipasi sebesar 1% akan berkurang, berdasarkan persentase kelebihan dari porsi \"Tanpa Batas\" pada penjualan.",
   "Where does the participation fee go?": "Untuk apa biaya partisipasi itu?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Kami menghanguskannya. Token LP WAGYU-BNB dari biaya partisipasi akan diuraikan. Lalu, kami menggunakan porsi BNB untuk membeli yang setara WAGYU di pasar, dan akhirnya memasukkan semua WAGYU ke dalam penghangusan token mingguan.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Kami menghanguskannya. Token LP WAGYU-VLX dari biaya partisipasi akan diuraikan. Lalu, kami menggunakan porsi VLX untuk membeli yang setara WAGYU di pasar, dan akhirnya memasukkan semua WAGYU ke dalam penghangusan token mingguan.",
   "How can I get an achievement for participating in the IFO?": "Bagaimana cara mendapatkan pencapaian dalam partisipasi untuk IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Anda perlu menyumbang Token LP WAGYU-BNB senilai minimum 10 USD ke salah satu penjualan.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Anda perlu menyumbang Token LP WAGYU-VLX senilai minimum 10 USD ke salah satu penjualan.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Anda dapat menyumbang ke salah satu atau keduanya, bukan masalah. Hanya kontribusi keseluruhan Anda yang dihitung untuk pencapaian.",
   "The Lottery Is Changing!": "Penarikan Lotre Berubah!",
   "Come back soon!": "Kembalilah segera!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Masuk TURUN",
   "An error occurred, unable to enter your position": "Ada eror, tidak dapat memasukkan posisi Anda",
   "Set Position": "Atur Posisi",
-  "Insufficient BNB balance": "Saldo BNB tidak cukup",
+  "Insufficient VLX balance": "Saldo VLX tidak cukup",
   "A minimum amount of %num% %token% is required": "Diperlukan jumlah minimum sebesar %num% %token%",
   "Enter an amount": "Masukkan jumlah",
   "You won’t be able to remove or change your position once you enter it.": "Anda tidak akan dapat menghapus atau mengubah posisi Anda setelah memasukkannya.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu Anda",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "lalu, daftarkan diri untuk mengikuti kompetisi dengan mengeklik tombol \"SAYA INGIN BATTLE\" di atas.",
   "Battle Time": "Waktu Battle",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Perdagangkan BNB/BUSD, WAGYU/BNB, ETH/BNB, dan BTCB/BNB selama periode battle untuk meningkatkan skor Anda dan tim Anda. Kunjungi bagian Aturan di bawah ini untuk mengetahui lebih lanjut.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Perdagangkan VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX selama periode battle untuk meningkatkan skor Anda dan tim Anda. Kunjungi bagian Aturan di bawah ini untuk mengetahui lebih lanjut.",
   "Prize Claim": "Klaim Hadiah",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Tim dan pedagang akan diurutkan berdasarkan volume perdagangan. Ambil hadiah Anda dan rayakan!",
   "Registration starting April 5": "Pendaftaran dimulai pada tanggal 5 April",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Keputusan ini tidak dapat dibatalkan.",
   "I understand that my address may be displayed publicly throughout the competition.": "Saya memahami bahwa alamat saya mungkin akan ditampilkan untuk umum sepanjang kompetisi.",
   "Eligible trading pairs": "Pasangan perdagangan yang memenuhi syarat",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Hanya perdagangan pasangan BNB/BUSD, WAGYU/BNB, ETH/BNB, dan BTCB/BNB yang akan disertakan dalam penghitungan volume.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hanya perdagangan pasangan VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX yang akan disertakan dalam penghitungan volume.",
   "Calculating team ranks and winners": "Menghitung pemenang dan peringkat tim",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Peringkat tim dihitung dengan total volume gabungan dari 500 anggota teratas di setiap tim.",
   "Prize distribution": "Pembagian hadiah",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Bagaimana cara mengeklaim hadiah saya?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Setelah battle berakhir, kunjungi halaman acara, lalu klik tombol \"Klaim Hadiah\" pada bagian atas atau pada bagian \"Skor Anda\". Setelah Anda berhasil mengeklaim hadiah, teks tombol akan berubah menjadi \"Hadiah Diklaim\".",
   "Trade to increase your rank": "Berdagang untuk meningkatkan peringkat Anda",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Pasangan yang memenuhi syarat: BNB/BUSD, WAGYU/BNB, ETH/BNB, dan BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pasangan yang memenuhi syarat: VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX",
   "Play as a team": "Bermain sebagai tim",
   "The higher your team’s rank, the better your prizes": "Semakin tinggi peringkat tim Anda, semakin bagus hadiahnya",
   "Top Traders": "Pedagang Teratas",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Harap izinkan untuk mengakses akun Anda",
   "Unable to find connector": "Tidak dapat menemukan penghubung",
   "The connector config is wrong": "Konfig. penghubung salah",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Anda telah menyumbangkan token LP WAGYU-BNB sebanyak %amount% untuk IFO ini!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Anda akan memerlukan token LP WAGYU-BNB untuk ikut serta dalam IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Anda telah menyumbangkan token LP WAGYU-VLX sebanyak %amount% untuk IFO ini!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Anda akan memerlukan token LP WAGYU-VLX untuk ikut serta dalam IFO!",
   "Your %symbol% committed": "%symbol% Anda digunakan",
   "Your %symbol% RECLAIMED": "%symbol% Anda DIKLAIM ULANG",
   "Your %symbol% TO RECLAIM": "%symbol% Anda YANG AKAN DIKLAIM",
