--- a/public/locales/it-IT.json
+++ b/public/locales/it-IT.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Approva WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Offerte Iniziali di Farm",
   "Buy new tokens with a brand new token sale model.": "Acquista nuovi token con un modello di vendita token completamente nuovo.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Pagherai i nuovi token usando i token WAGYU-BNB LP, per cui per partecipare dovrai mettere in stake lo stesso importo di WAGYU e BNB in un pool di liquidità.",
-  "Get WAGYU-BNB LP >": "Ricevi WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Il progetto riceve i BNB, mentre WagyuSwap brucia i WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Pagherai i nuovi token usando i token WAGYU-VLX LP, per cui per partecipare dovrai mettere in stake lo stesso importo di WAGYU e VLX in un pool di liquidità.",
+  "Get WAGYU-VLX LP >": "Ricevi WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Il progetto riceve i VLX, mentre WagyuSwap brucia i WAGYU.",
   "You get the tokens.": "Tu ricevi token.",
   "Want to launch your own IFO?": "Vuoi lanciare una tua IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lancia il tuo progetto con WagyuSwap, il principale progetto AMM e fornitore di liquidità di Binance Smart Chain, in grado di portare direttamente i tuoi token alla comunità più attiva e in rapida crescita su BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Ogni volta che aggiungi o togli dallo stake dei token LP, il contratto raccoglierà automaticamente le ricompense WAGYU per te!",
   "How to take part": "Come partecipare",
   "Before Sale": "Prima della vendita",
-  "Buy WAGYU and BNB tokens": "Acquista WAGYU e token BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Ricevi token WAGYU-BNB LP aggiungendo WAGYU e liquidità BNB",
+  "Buy WAGYU and VLX tokens": "Acquista WAGYU e token VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Ricevi token WAGYU-VLX LP aggiungendo WAGYU e liquidità VLX",
   "During Sale": "Durante la vendita",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Quando la vendita è in corso, utilizza i tuoi token WAGYU-LP per acquistare token IFO",
   "After Sale": "Dopo la vendita",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Attiva il tuo profilo",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Ti serve un profilo WagyuSwap attivo per partecipare a un IFO!",
   "Profile Active!": "Profilo attivo!",
-  "Get WAGYU-BNB LP Tokens": "Ricevi token WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Metti in stake WAGYU e BNB nel pool di liquidità per ricevere token LP.",
+  "Get WAGYU-VLX LP Tokens": "Ricevi token WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Metti in stake WAGYU e VLX nel pool di liquidità per ricevere token LP.",
   "You’ll spend them to buy IFO sale tokens.": "Li spenderai per acquistare token nella vendita IFO.",
   "Commit LP Tokens": "Impiega token LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Quando le vendite IFO sono in corso, puoi \"impegnare\" i tuoi token LP per acquistare i token in vendita.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Ti suggeriamo prima di impegnare risorse nella vendita di base, ma se vuoi puoi partecipare ad entrambi i tipi.",
   "Claim your tokens and achievement": "Richiedi i token ottenuti",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Al termine della vendita IFO, puoi richiedere tutti i token IFO acquistati e tutti i token BNB-WAGYU LP non spesi ti saranno restituiti sul tuo wallet.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Al termine della vendita IFO, puoi richiedere tutti i token IFO acquistati e tutti i token VLX-WAGYU LP non spesi ti saranno restituiti sul tuo wallet.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "La transazione di chiusura di questo round è stata inviata alla blockchain ed è in attesa di conferma.",
   "No prediction history available": "Cronologia di previsioni non disponibile",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Se ritieni che qui dovrebbe esserci una cronologia visibile, verifica di essere connesso al giusto wallet e riprova.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Dopo aver aperto una posizione, non potrai annullarla o modificarla.",
   "All losses are final.": "Tutte le perdite sono definitive.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Sono consapevole del fatto che l'uso di questo prodotto è del tutto a mio rischio. Sarò il solo responsabile di eventuali perdite subite.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Metti in stake WAGYU e BNB nel pool di liquidità per ricevere token LP. Li spenderai per acquistare token nella vendita IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Metti in stake WAGYU e VLX nel pool di liquidità per ricevere token LP. Li spenderai per acquistare token nella vendita IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Ti serve un profilo WagyuSwap attivo per partecipare a un IFO!",
   "Your LP tokens committed": "Token LP che hai impegnato",
   "Max. Committed": "Max. importo impegnato",
@@ -483,8 +483,8 @@
   "Achievement": "Risultato",
   "Commit ~%minLp% LP in total to earn!": "Impegna ~%minLp% LP in totale per guadagnare!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Qual è la differenza tra una vendita di base e una illimitata?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Nelle vendite di base, ogni utente può impegnare al massimo circa 100 USD in Token WAGYU-BNB LP. L'importo massimo di LP è calcolato circa 30 minuti primi di ogni IFO. La vendita di base non prevede commissioni di partecipazione.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Le vendite illimitate non prevedono limiti all'importo di token WAGYU-BNB LP che si possono impegnare. Inoltre si applica una commissione di partecipazione, indicata di seguito.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Nelle vendite di base, ogni utente può impegnare al massimo circa 100 USD in Token WAGYU-VLX LP. L'importo massimo di LP è calcolato circa 30 minuti primi di ogni IFO. La vendita di base non prevede commissioni di partecipazione.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Le vendite illimitate non prevedono limiti all'importo di token WAGYU-VLX LP che si possono impegnare. Inoltre si applica una commissione di partecipazione, indicata di seguito.",
   "Which sale should I commit to? Can I do both?": "In quale tipo di vendita posso impegnarmi? Posso sceglierle entrambe?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Puoi scegliere un solo tipo o entrambi i tipi di vendite allo stesso tempo! Se vuoi impegnare solo piccole somme, ti suggeriamo di provare le vendite base. Ricorda solo che avrai bisogno di un profilo WagyuSwap per partecipare.",
   "How much is the participation fee?": "Quanto costa la commissione di partecipazione?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "La commissione iniziale è dell'1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "La commissione di partecipazione dell'1% diminuisce poi in misura proporizionale alla percentuale in eccesso della porzione \"illimitata\" della vendita.",
   "Where does the participation fee go?": "Come sono impiegate le commissioni di partecipazione?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Li bruciamo. I token WAGYU-BNB LP della commissione di partecipazione saranno suddivisi: la parte BNB è usata per acquistare sul mercato l'equivalente in WAGYU, quindi impiegheremo tutti i WAGYU nei token bruciati settimanalmente.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Li bruciamo. I token WAGYU-VLX LP della commissione di partecipazione saranno suddivisi: la parte VLX è usata per acquistare sul mercato l'equivalente in WAGYU, quindi impiegheremo tutti i WAGYU nei token bruciati settimanalmente.",
   "How can I get an achievement for participating in the IFO?": "Come posso ottenere risultati partecipando alle IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Entrambi i tipi di vendita richiedono un importo minimo di circa 10 USD in token WAGYU-BNB LP.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Entrambi i tipi di vendita richiedono un importo minimo di circa 10 USD in token WAGYU-VLX LP.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Puoi decidere di partecipare a uno solo o a entrambi i tipi di vendita, ma solo l'importo complessivo del tuo contributo sarà valutato ai fini del conteggio dei risultati.",
   "The Lottery Is Changing!": "Modifiche in vista per la lotteria!",
   "Come back soon!": "Torna presto per scoprirle!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Inserisci GIÙ",
   "An error occurred, unable to enter your position": "Si è verificato un errore, impossibile inserire la tua posizione",
   "Set Position": "Imposta posizione",
-  "Insufficient BNB balance": "Saldo BNB insufficiente",
+  "Insufficient VLX balance": "Saldo VLX insufficiente",
   "A minimum amount of %num% %token% is required": "È necessario un importo minimo di %num% %token%",
   "Enter an amount": "Inserisci un importo",
   "You won’t be able to remove or change your position once you enter it.": "Non potrai rimuovere o modificare la tua posizione dopo averla inserita.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profilo Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "poi registrati alla competizione facendo clic sul tasto \"VOGLIO PARTECIPARE ALLA BATTAGLIA\" qui sopra.",
   "Battle Time": "Tempo di battaglia",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Scambia BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB durante la battaglia per far crescere il tuo punteggio e quello del tuo team. Per maggiori informazioni consulta le Regole riportate di seguito.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Scambia VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante la battaglia per far crescere il tuo punteggio e quello del tuo team. Per maggiori informazioni consulta le Regole riportate di seguito.",
   "Prize Claim": "Richiesta premi",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "I team e i trader saranno classificati in base al loro volume di scambi. Colleziona i tuoi premi e festeggia le tue vittorie!",
   "Registration starting April 5": "Le registrazioni iniziano il 5 aprile",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Questa decisione non può essere annullata.",
   "I understand that my address may be displayed publicly throughout the competition.": "Accetto il fatto che il mio indirizzo sia visibile al pubblico durante la competizione.",
   "Eligible trading pairs": "Coppie di scambio disponibili",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Solo gli scambi delle coppie BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB saranno conteggiati nel calcolo dei volumi.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Solo gli scambi delle coppie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX saranno conteggiati nel calcolo dei volumi.",
   "Calculating team ranks and winners": "Calcolo della classifica dei team e dei vincitori",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Le classifiche dei team saranno calcolate in base al volume totale di scambi combinato dei 500 migliori membri dei singoli team.",
   "Prize distribution": "Distribuzione dei premi",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Come posso richiedere i premi?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Al termine della battaglia, visita la pagina dell'evento e fai clic sul tasto \"Richiedi Premi\" nella sezione in alto o nella sezione \"Il mio punteggio\". Dopo aver richiesto i premi, il testo del pulsante diventerà \"Premi richiesti\".",
   "Trade to increase your rank": "Fai scambi per aumentare la tua classifica",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Coppie idonee: BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Coppie idonee: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Gioco di squadra",
   "The higher your team’s rank, the better your prizes": "Quanto migliore è la classifica del tuo team, tanto maggiori saranno i premi",
   "Top Traders": "I migliori trader",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Autorizza l'accesso al tuo account",
   "Unable to find connector": "Impossibile trovare connettore",
   "The connector config is wrong": "Configurazione connettore errata",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Hai contribuito con %amount% token WAGYU-BNB LP in questa IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Avrai bisogno di token WAGYU-BNB LP per partecipare a questa IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Hai contribuito con %amount% token WAGYU-VLX LP in questa IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Avrai bisogno di token WAGYU-VLX LP per partecipare a questa IFO!",
   "Your %symbol% committed": "I tuoi %symbol% impegnati",
   "Your %symbol% RECLAIMED": "I tuoi %symbol% RICHIESTI",
   "Your %symbol% TO RECLAIM": "I tuoi %symbol% DA RICHIEDERE",
