--- a/public/locales/ko-KR.json
+++ b/public/locales/ko-KR.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU 승인",
   "IFO: Initial Farm Offerings": "IFO: 초기 팜 오퍼링",
   "Buy new tokens with a brand new token sale model.": "새로운 토큰 판매 모델로 새로운 토큰을 구입하세요.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "WAGYU-BNB LP 토큰을 사용하여 새로운 토큰의 대금을 지불하게 됩니다. 즉, 참여할 유동성 풀에 동일한 액수의 WAGYU 및 BNB를 예치해야 합니다.",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP 얻기 >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "이 프로젝트는 BNB를 얻고, WagyuSwap은 WAGYU을 소각합니다.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "WAGYU-VLX LP 토큰을 사용하여 새로운 토큰의 대금을 지불하게 됩니다. 즉, 참여할 유동성 풀에 동일한 액수의 WAGYU 및 VLX를 예치해야 합니다.",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP 얻기 >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "이 프로젝트는 VLX를 얻고, WagyuSwap은 WAGYU을 소각합니다.",
   "You get the tokens.": "토큰을 얻습니다.",
   "Want to launch your own IFO?": "고유한 IFO를 시작하시겠습니까?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Binance Smart Chain의 가장 많이 이용되는 AMM 프로젝트이고 유동성 공급자인 WagyuSwap으로 프로젝트를 시작해, BSC에서 가장 활발하고 빠르게 성장하고 있는 커뮤니티로 토큰을 직접 가져올 수 있습니다.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ LP 토큰을 예치하고 예치 취소할 때마다, 계약이 자동으로 WAGYU 리워드를 수확합니다!",
   "How to take part": "참여 방법",
   "Before Sale": "판매 전",
-  "Buy WAGYU and BNB tokens": "WAGYU 및 BNB 토큰 구입",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYU 및 BNB 유동성을 추가하여 WAGYU-BNB LP 토큰 얻기",
+  "Buy WAGYU and VLX tokens": "WAGYU 및 VLX 토큰 구입",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYU 및 VLX 유동성을 추가하여 WAGYU-VLX LP 토큰 얻기",
   "During Sale": "판매 기간 중",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "판매 중인 동안 WAGYU-LP 토큰을 커밋하여 IFO 토큰을 구입하세요",
   "After Sale": "판매 후",
@@ -399,14 +399,14 @@
   "Activate your Profile": "내 프로필 활성화",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "IFO에 참여하려면 WagyuSwap 프로필을 활성화해야 합니다!",
   "Profile Active!": "프로필 활성화!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP 토큰 얻기",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "유동성 풀에 WAGYU 및 BNB를 예치하여 LP 토큰을 얻으세요.",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP 토큰 얻기",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "유동성 풀에 WAGYU 및 VLX를 예치하여 LP 토큰을 얻으세요.",
   "You’ll spend them to buy IFO sale tokens.": "이를 사용하여 IFO 판매 토큰을 구입합니다.",
   "Commit LP Tokens": "LP 토큰 커밋",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "IFO 판매가 라이브인 경우, LP 토큰을 \"커밋\"하여 판매 중인 토큰을 구매할 수 있습니다.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "먼저 기본 판매에 참여하는 것이 좋지만, 원하는 경우 둘 다 가능합니다.",
   "Claim your tokens and achievement": "토큰 및 성과 클레임",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO 판매가 완료되면, 구입한 IFO 토큰을 클레임할 수 있으며 사용하지 않은 WAGYU-BNB LP 토큰은 지갑으로 반환됩니다.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO 판매가 완료되면, 구입한 IFO 토큰을 클레임할 수 있으며 사용하지 않은 WAGYU-VLX LP 토큰은 지갑으로 반환됩니다.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "이 라운드의 마감 트랜잭션은 블록체인에 제출되어 확인 대기 중입니다.",
   "No prediction history available": "사용 가능한 예측 기록 없음",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "여기에 기록이 표시되어야 하는 경우에는 올바른 지갑에 연결되어 있는지 확인하고 다시 시도하세요.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "포지션을 입력한 후에는 취소 또는 조정할 수 없습니다.",
   "All losses are final.": "모든 손실은 최종적입니다.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "나는 이 제품 사용에 대한 책임이 나에게 있음을 이해합니다. 내 행동으로 인해 발생하는 모든 손실은 나의 책임입니다.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP 토큰을 얻으려면 유동성 풀에 WAGYU와 BNB를 예치하세요. LP 토큰을 사용하여 IFO 판매 토큰을 구매합니다.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP 토큰을 얻으려면 유동성 풀에 WAGYU와 VLX를 예치하세요. LP 토큰을 사용하여 IFO 판매 토큰을 구매합니다.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "IFO에 참여하려면 WagyuSwap 프로필을 활성화해야 합니다!",
   "Your LP tokens committed": "LP 토큰 커밋함",
   "Max. Committed": "최대 커밋",
@@ -483,8 +483,8 @@
   "Achievement": "성과",
   "Commit ~%minLp% LP in total to earn!": "총 ~%minLp% LP를 커밋하여 획득하세요!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "기본 판매와 무제한 판매의 차이점은 무엇입니까?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "기본 판매에서 각 사용자는 최대 약 100 USD 상당의 WAGYU-BNB LP 토큰을 커밋할 수 있습니다. 각 IFO 약 30분 전에 최대 LP 액수가 계산됩니다. 기본 판매에는 참가비가 없습니다.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "무제한 판매에서는 커밋할 수 있는 WAGYU-BNB LP 토큰 액수에 제한이 없습니다. 그러나 참가비가 있습니다. 아래를 참조하세요.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "기본 판매에서 각 사용자는 최대 약 100 USD 상당의 WAGYU-VLX LP 토큰을 커밋할 수 있습니다. 각 IFO 약 30분 전에 최대 LP 액수가 계산됩니다. 기본 판매에는 참가비가 없습니다.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "무제한 판매에서는 커밋할 수 있는 WAGYU-VLX LP 토큰 액수에 제한이 없습니다. 그러나 참가비가 있습니다. 아래를 참조하세요.",
   "Which sale should I commit to? Can I do both?": "어떤 판매에 커밋해야 합니까? 둘 다 할 수 있습니까?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "하나 또는 동시에 둘 다를 선택할 수 있습니다! 소량만 커밋한다면 기본 판매에 먼저 참여하시기 바랍니다. 참여하려면 WagyuSwap 프로필이 필요합니다.",
   "How much is the participation fee?": "참가비는 얼마입니까?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "수수료는 1%부터 시작됩니다.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "1% 참가비는 판매의 \"무제한\" 부분에서 오버플로 비율에 따라 단계적으로 감소합니다.",
   "Where does the participation fee go?": "참가비는 어디로 갑니까?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "이것은 소각됩니다. 참가비의 WAGYU-BNB LP 토큰은 분해됩니다. 그런 다음 시장에서 BNB 부분을 사용하여 등가의 WAGYU을 구매하고, 마지막으로 모든 WAGYU을 주간 토큰 소각에 넣습니다.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "이것은 소각됩니다. 참가비의 WAGYU-VLX LP 토큰은 분해됩니다. 그런 다음 시장에서 VLX 부분을 사용하여 등가의 WAGYU을 구매하고, 마지막으로 모든 WAGYU을 주간 토큰 소각에 넣습니다.",
   "How can I get an achievement for participating in the IFO?": "IFO 참여 성과를 올리는 방법은 무엇입니까?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "어느 판매에든 최소 약 10 USD 상당의 WAGYU-BNB LP 토큰을 기부해야 합니다.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "어느 판매에든 최소 약 10 USD 상당의 WAGYU-VLX LP 토큰을 기부해야 합니다.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "하나 또는 둘 다에 기부할 수 있지만, 상관없습니다. 종합적인 기부만 상과로 카운트됩니다.",
   "The Lottery Is Changing!": "로터리가 변경되는 중입니다!",
   "Come back soon!": "곧 다시 돌아오세요!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "DOWN 입력",
   "An error occurred, unable to enter your position": "오류가 발생했습니다. 포지션을 입력할 수 없습니다.",
   "Set Position": "포지션 설정",
-  "Insufficient BNB balance": "BNB 잔액 부족",
+  "Insufficient VLX balance": "VLX 잔액 부족",
   "A minimum amount of %num% %token% is required": "%num% %token%의 최소 액수가 필요합니다",
   "Enter an amount": "액수 입력",
   "You won’t be able to remove or change your position once you enter it.": "포지션을 입력한 후에는 이 포지션을 제거하거나 변경할 수 없게 됩니다.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu 프로필을",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "설정한 다음 위의 \"배틀을 원해요\" 버튼을 클릭하여 대회에 등록하세요.",
   "Battle Time": "배틀 시간",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "배틀 기간 중에 BNB/BUSD, WAGYU/BNB, ETH/BNB, BTCB/BNB를 거래하여 본인 점수와 팀 점수 모두를 높이세요. 자세한 내용은 아래 규칙 섹션을 참조하세요.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "배틀 기간 중에 VLX/BUSD, WAGYU/VLX, ETH/VLX, BTCB/VLX를 거래하여 본인 점수와 팀 점수 모두를 높이세요. 자세한 내용은 아래 규칙 섹션을 참조하세요.",
   "Prize Claim": "상금 클레임",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "팀과 트레이더는 거래량에 따라 순위가 결정됩니다. 상금을 모으고 축하를 하세요!",
   "Registration starting April 5": "등록은 4월 5일에 시작됩니다.",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "이 결정은 취소할 수 없습니다.",
   "I understand that my address may be displayed publicly throughout the competition.": "나는 대회 기간 동안 내 주소가 공개적으로 표시될 수 있음을 이해합니다.",
   "Eligible trading pairs": "적격 거래 쌍",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "BNB/BUSD, WAGYU/BNB, ETH/BNB, BTCB/BNB 쌍의 거래만 볼륨 계산에 포함됩니다.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "VLX/BUSD, WAGYU/VLX, ETH/VLX, BTCB/VLX 쌍의 거래만 볼륨 계산에 포함됩니다.",
   "Calculating team ranks and winners": "팀 순위 및 승자 계산",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "팀 순위는 각 해당 팀의 상위 500명 멤버의 총 통합 거래량을 기준으로 계산됩니다.",
   "Prize distribution": "상금 배분",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "내 상금은 어떻게 클레임할 수 있습니까?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "배틀이 끝나면, 이벤트 페이지를 방문하여 상단 섹션 또는 \"내 점수\" 섹션의 \"상금 클레임\" 버튼을 클릭하세요. 상금을 성공적으로 클레임하면 이 버튼 텍스트가 \"상금 클레임함\"으로 변경됩니다.",
   "Trade to increase your rank": "거래를 하여 순위 높이기",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "적격 통화 쌍: BNB/BUSD, WAGYU/BNB, ETH/BNB, BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "적격 통화 쌍: VLX/BUSD, WAGYU/VLX, ETH/VLX, BTCB/VLX",
   "Play as a team": "팀으로 플레이",
   "The higher your team’s rank, the better your prizes": "팀의 순위가 높을수록, 상금이 더 많습니다",
   "Top Traders": "톱 트레이더",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "계정에 액세스하려면 인증하세요",
   "Unable to find connector": "커넥터를 찾을 수 없음",
   "The connector config is wrong": "커넥터 구성이 잘못되었습니다",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "%amount% WAGYU-BNB LP 토큰을 이 IFO에 기부했습니다!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "IFO에 참여하려면 WAGYU-BNB LP 토큰이 필요합니다!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "%amount% WAGYU-VLX LP 토큰을 이 IFO에 기부했습니다!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "IFO에 참여하려면 WAGYU-VLX LP 토큰이 필요합니다!",
   "Your %symbol% committed": "%symbol% 커밋함",
   "Your %symbol% RECLAIMED": "%symbol% 다시 클레임함",
   "Your %symbol% TO RECLAIM": "다시 클레임할 %symbol%",
