--- a/public/locales/nl-NL.json
+++ b/public/locales/nl-NL.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU goedkeuren",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Koop nieuwe tokens met een gloednieuw verkoopmodel voor tokens.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Je betaalt voor de nieuwe tokens met WAGYU-BNB FLIP-tokens, wat betekent dat je gelijke hoeveelheden WAGYU en BNB moet staken in een liquiditeitspool om deel te nemen.",
-  "Get WAGYU-BNB LP >": "Ontvang WAGYU-BNB FLIP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Het project ontvangt de BNB, WagyuSwap verbrandt de WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Je betaalt voor de nieuwe tokens met WAGYU-VLX FLIP-tokens, wat betekent dat je gelijke hoeveelheden WAGYU en VLX moet staken in een liquiditeitspool om deel te nemen.",
+  "Get WAGYU-VLX LP >": "Ontvang WAGYU-VLX FLIP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Het project ontvangt de VLX, WagyuSwap verbrandt de WAGYU.",
   "You get the tokens.": "Je ontvangt de tokens.",
   "Want to launch your own IFO?": "Wil je je eigen IFO starten?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Start je project met WagyuSwap, Binance Smart Chain's meest gebruikte AMM-project en liquiditeitsverschaffer, om je token direct naar de meest actieve en snel groeiende gemeenschap op BSC te brengen.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️Telkens wanneer je FLIP-tokens staked en weer unstaked, zal het contract automatisch WAGYU-beloningen voor je oogsten!",
   "How to take part": "Hoe deel te nemen",
   "Before Sale": "Voor de verkoop",
-  "Buy WAGYU and BNB tokens": "WAGYU en BNB-tokens kopen",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Ontvang WAGYU-BNB FLIP-tokens door WAGYU en BNB-liquiditeit toe te voegen",
+  "Buy WAGYU and VLX tokens": "WAGYU en VLX-tokens kopen",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Ontvang WAGYU-VLX FLIP-tokens door WAGYU en VLX-liquiditeit toe te voegen",
   "During Sale": "Tijdens de verkoop",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Terwijl de verkoop live is, zet je je WAGYU-FLIP tokens in om de IFO-tokens te kopen",
   "After Sale": "Na de verkoop",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Activeer je profiel",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Je hebt een actief WagyuSwap-profiel nodig om deel te nemen aan een IFO!",
   "Profile Active!": "Profiel actief!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP-tokens kopen",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Stake WAGYU en BNB in de liquiditeitspool om LP-tokens te krijgen.",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP-tokens kopen",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Stake WAGYU en VLX in de liquiditeitspool om LP-tokens te krijgen.",
   "You’ll spend them to buy IFO sale tokens.": "Je besteedt ze om IFO-verkooptokens te kopen.",
   "Commit LP Tokens": "LP-tokens inleggen",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Als de IFO-verkoop live is, kun je je LP-tokens \"inleggen\" om de tokens te kopen die verkocht worden.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "We raden aan eerst in te leggen op de basisverkoop, maar je kunt beide doen als je wilt.",
   "Claim your tokens and achievement": "Claim je tokens en prestatie",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Nadat de IFO-verkopen zijn beëindigd, kun je IFO-tokens claimen die je hebt gekocht en worden onbestede WAGYU-BNB LP-tokens geretourneerd naar je wallet.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Nadat de IFO-verkopen zijn beëindigd, kun je IFO-tokens claimen die je hebt gekocht en worden onbestede WAGYU-VLX LP-tokens geretourneerd naar je wallet.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "De sluitingstransactie van deze ronde is ingediend bij de blockchain en wacht op bevestiging.",
   "No prediction history available": "Geen prognosegeschiedenis beschikbaar",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Als je zeker weet dat je hier geschiedenis zou moeten zien, zorg dan dat je verbonden bent met de juiste wallet en probeer het opnieuw.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Nadat je een positie hebt genomen, kun je deze niet meer annuleren of aanpassen.",
   "All losses are final.": "Alle verliezen zijn definitief.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Ik begrijp dat ik dit product op eigen risico gebruik. Elk verlies ontstaan door mijn acties is mijn eigen verantwoordelijkheid.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stake WAGYU en BNB in de liquiditeitspool om LP-tokens te krijgen. Je besteedt ze om IFO-verkooptokens te kopen.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stake WAGYU en VLX in de liquiditeitspool om LP-tokens te krijgen. Je besteedt ze om IFO-verkooptokens te kopen.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Je hebt een actief WagyuSwap-profiel nodig om deel te nemen aan een IFO!",
   "Your LP tokens committed": "Je ingelegde LP-tokens",
   "Max. Committed": "Max. ingelegd",
@@ -483,8 +483,8 @@
   "Achievement": "Prestatie",
   "Commit ~%minLp% LP in total to earn!": "Leg in totaal ~%minLp% LP in om te verdienen!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Wat is het verschil tussen een basisverkoop en een onbeperkte verkoop?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "In de basisverkoop kan elke gebruiker maximaal ongeveer 100 USD aan WAGYU-BNB LP-tokens inleggen. We berekenen het maximum LP-bedrag ongeveer 30 minuten voor elke IFO. De basisverkoop heeft geen deelnamekosten.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "In de onbeperkte verkoop is er geen limiet aan de hoeveelheid WAGYU-BNB LP-tokens die je kunt inleggen. Er is echter wel een deelnamevergoeding: zie hieronder.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "In de basisverkoop kan elke gebruiker maximaal ongeveer 100 USD aan WAGYU-VLX LP-tokens inleggen. We berekenen het maximum LP-bedrag ongeveer 30 minuten voor elke IFO. De basisverkoop heeft geen deelnamekosten.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "In de onbeperkte verkoop is er geen limiet aan de hoeveelheid WAGYU-VLX LP-tokens die je kunt inleggen. Er is echter wel een deelnamevergoeding: zie hieronder.",
   "Which sale should I commit to? Can I do both?": "Aan welke verkoop moet ik me verbinden? Kan ik ze allebei doen?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Je kunt er een kiezen of allebei tegelijk! Als je maar een klein bedrag inlegt, raden we je eerst de basisverkoop aan. Denk er alleen aan dat je een WagyuSwap-profiel nodig bent om mee te kunnen doen.",
   "How much is the participation fee?": "Hoeveel bedraagt de deelnamevergoeding?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "De vergoeding begint bij 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "De 1% deelnamevergoeding neemt af in stappen, op basis van het percentage overloop van het \"onbeperkte\" deel van de verkoop.",
   "Where does the participation fee go?": "Waar gaat de deelnamevergoeding naartoe?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "We verbranden het. De WAGYU-BNB LP-tokens van de deelnamevergoeding worden ontleed. Vervolgens gebruiken we het BNB-aandeel om het WAGYU-equivalent op de markt te kopen en tenslotte gooien we alle WAGYU in de wekelijkse tokenverbranding.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "We verbranden het. De WAGYU-VLX LP-tokens van de deelnamevergoeding worden ontleed. Vervolgens gebruiken we het VLX-aandeel om het WAGYU-equivalent op de markt te kopen en tenslotte gooien we alle WAGYU in de wekelijkse tokenverbranding.",
   "How can I get an achievement for participating in the IFO?": "Hoe kan ik een prestatie krijgen voor deelname aan de IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Je moet minimaal ongeveer 10 USD aan WAGYU-BNB LP-tokens bijdragen aan een van beide verkopen.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Je moet minimaal ongeveer 10 USD aan WAGYU-VLX LP-tokens bijdragen aan een van beide verkopen.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Je kunt aan een van beide bijdragen of aan beide, het maakt niet uit. Alleen je totale bijdrage telt mee voor de prestatie.",
   "The Lottery Is Changing!": "De loterij wordt gewijzigd!",
   "Come back soon!": "Kom snel terug!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Voer OMLAAG in",
   "An error occurred, unable to enter your position": "Er is een fout opgetreden, kon je positie niet invoeren",
   "Set Position": "Positie instellen",
-  "Insufficient BNB balance": "Onvoldoende BNB-saldo",
+  "Insufficient VLX balance": "Onvoldoende VLX-saldo",
   "A minimum amount of %num% %token% is required": "Een minimum bedrag van %num% %token% is vereist",
   "Enter an amount": "Voer een bedrag in",
   "You won’t be able to remove or change your position once you enter it.": "Je kunt je positie niet meer verwijderen of wijzigen als je hem eenmaal hebt ingevoerd.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-profiel",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "registreer je vervolgens voor de wedstrijd door op de knop \"Ik wil vechten\" hierboven te klikken.",
   "Battle Time": "Tijd om te vechten",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Ruil BNB/BUSD, WAGYU/BNB, ETH/BNB en BTCB/BNB tijdens de gevechtsperiode om zowel jouw score als die van je team te verhogen. Zie de sectie Regels hieronder voor meer.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Ruil VLX/BUSD, WAGYU/VLX, ETH/VLX en BTCB/VLX tijdens de gevechtsperiode om zowel jouw score als die van je team te verhogen. Zie de sectie Regels hieronder voor meer.",
   "Prize Claim": "Claim prijs",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Teams en handelaars worden gerangschikt op volgorde van het handelsvolume. Verzamel je prijzen en vier feest!",
   "Registration starting April 5": "De registratie start op 5 april",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Deze beslissing kan niet worden teruggedraaid.",
   "I understand that my address may be displayed publicly throughout the competition.": "Ik begrijp dat mijn adres tijdens de wedstrijd publiekelijk kan worden weergegeven.",
   "Eligible trading pairs": "In aanmerking komende handelsparen",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Alleen transacties op BNB/BUSD-, WAGYU/BNB-, ETH/BNB- en BTCB/BNB-paren worden in de volumeberekeningen meegenomen.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Alleen transacties op VLX/BUSD-, WAGYU/VLX-, ETH/VLX- en BTCB/VLX-paren worden in de volumeberekeningen meegenomen.",
   "Calculating team ranks and winners": "Teamrangschikkingen en winnaars berekenen",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Teamrangschikkingen worden berekend aan de hand van het totale gecombineerde volume van de top 500 leden van elk respectief team.",
   "Prize distribution": "Prijsverdeling",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Hoe claim ik mij prijzen?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Ga na afloop van het gevecht naar de evenementpagina en klik op de knop \"Prijzen claimen\" in de bovenste sectie of in de sectie \"Je score\". Als je je prijzen succesvol hebt geclaimd verandert de tekst van de knop in \"Prijzen geclaimed\".",
   "Trade to increase your rank": "Ruil om je rang te verhogen",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "In aanmerking komende paren: BNB/BUSD, WAGYU/BNB, ETH/BNB en BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "In aanmerking komende paren: VLX/BUSD, WAGYU/VLX, ETH/VLX en BTCB/VLX",
   "Play as a team": "Speel als een team",
   "The higher your team’s rank, the better your prizes": "Hoe hoger de rangschikking van je team, hoe beter de prijzen",
   "Top Traders": "Tophandelaren",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Geef machtiging voor toegang tot je account",
   "Unable to find connector": "Connector niet gevonden",
   "The connector config is wrong": "De connectorconfiguratie is verkeerd",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Je hebt %amount% WAGYU-BNB LP-tokens bijgedraden aan deze IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Je hebt WAGYU-BNB LP-tokens nodig om aan de IFO deel te nemen!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Je hebt %amount% WAGYU-VLX LP-tokens bijgedraden aan deze IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Je hebt WAGYU-VLX LP-tokens nodig om aan de IFO deel te nemen!",
   "Your %symbol% committed": "Je %symbol% ingelegd",
   "Your %symbol% RECLAIMED": "Je %symbol% teruggeclaimd",
   "Your %symbol% TO RECLAIM": "Je %symbol% OM TERUG TE CLAIMEN",
