--- a/public/locales/pl-PL.json
+++ b/public/locales/pl-PL.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Zatwierdź WAGYU",
   "IFO: Initial Farm Offerings": "IFO: pierwsze oferty farm",
   "Buy new tokens with a brand new token sale model.": "Kupuj nowe tokeny za pomocą zupełnie nowego modelu sprzedaży tokenów.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Za nowe tokeny zapłacisz tokenami WAGYU-BNB LP, co znaczy, że aby wziąć udział, musisz stakować równe ilości WAGYU i BNB w puli płynności.",
-  "Get WAGYU-BNB LP >": "Uzyskaj pulę płynności WAGYU-BNB >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Projekt otrzymuje BNB, WagyuSwap spala WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Za nowe tokeny zapłacisz tokenami WAGYU-VLX LP, co znaczy, że aby wziąć udział, musisz stakować równe ilości WAGYU i VLX w puli płynności.",
+  "Get WAGYU-VLX LP >": "Uzyskaj pulę płynności WAGYU-VLX >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Projekt otrzymuje VLX, WagyuSwap spala WAGYU.",
   "You get the tokens.": "Ty otrzymujesz tokeny.",
   "Want to launch your own IFO?": "Czy chcesz uruchomić własną IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Uruchom swój projekt z WagyuSwap, najczęściej używanym projektem AMM i dostawcą płynności Binance Smart Chain, aby dostarczyć swój token bezpośrednio do najaktywniejszej i szybko rozwijającej się społeczności w BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Za każdym razem, gdy stakujesz i odbierasz tokeny w puli płynności, kontrakt automatycznie zbiera dla Ciebie naliczone nagrody WAGYU!",
   "How to take part": "Jak wziąć udział",
   "Before Sale": "Przed sprzedażą",
-  "Buy WAGYU and BNB tokens": "Kup WAGYU i tokeny BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Uzyskaj tokeny LP WAGYU-BNB poprzez dodanie płynności WAGYU i BNB",
+  "Buy WAGYU and VLX tokens": "Kup WAGYU i tokeny VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Uzyskaj tokeny LP WAGYU-VLX poprzez dodanie płynności WAGYU i VLX",
   "During Sale": "W trakcie sprzedaży",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "W czasie trwania sprzedaży przeznacz swoje tokeny WAGYU-LP na zakup tokenów IFO",
   "After Sale": "Po sprzedaży",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktywuj swój profil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Aby móc wziąć udział w IFO, musisz mieć aktywny profil WagyuSwap!",
   "Profile Active!": "Profil aktywny!",
-  "Get WAGYU-BNB LP Tokens": "Uzyskaj tokeny puli płynności WAGYU-BNB",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Stakuj WAGYU i BNB w puli płynności, aby uzyskać tokeny LP.",
+  "Get WAGYU-VLX LP Tokens": "Uzyskaj tokeny puli płynności WAGYU-VLX",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Stakuj WAGYU i VLX w puli płynności, aby uzyskać tokeny LP.",
   "You’ll spend them to buy IFO sale tokens.": "Wydasz je na zakup tokenów sprzedaży IFO.",
   "Commit LP Tokens": "Zainwestuj tokeny LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Podczas sprzedaży IFO możesz zainwestować swoje tokeny LP, aby kupić sprzedawane tokeny.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Zalecamy najpierw zainwestować w sprzedaż podstawową, ale jeśli chcesz, możesz skorzystać z obu.",
   "Claim your tokens and achievement": "Odbierz swoje tokeny i osiągnięcie",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Po zakończeniu sprzedaży IFO możesz odebrać wszystkie zakupione tokeny IFO, a wszystkie niewydane tokeny LP WAGYU-BNB zostaną zwrócone do Twojego portfela.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Po zakończeniu sprzedaży IFO możesz odebrać wszystkie zakupione tokeny IFO, a wszystkie niewydane tokeny LP WAGYU-VLX zostaną zwrócone do Twojego portfela.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Transakcja zamykająca tę rundę została zgłoszona do blockchainu i czeka na potwierdzenie.",
   "No prediction history available": "Brak dostępnej historii prognoz",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Jeśli historia na pewno powinna widnieć tutaj, upewnij się, że masz połączenie z właściwym portfelem i spróbuj ponownie.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Po wprowadzeniu pozycji nie można jej anulować ani skorygować.",
   "All losses are final.": "Wszystkie straty są ostateczne.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Rozumiem, że używam tego produktu na własne ryzyko. Odpowiadam za wszelkie straty poniesione w wyniku moich działań.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stakuj WAGYU i BNB w puli płynności, aby otrzymać tokeny LP. Wydasz je, aby kupić tokeny sprzedaży IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stakuj WAGYU i VLX w puli płynności, aby otrzymać tokeny LP. Wydasz je, aby kupić tokeny sprzedaży IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Aby móc wziąć udział w IFO, musisz mieć aktywny profil WagyuSwap!",
   "Your LP tokens committed": "Twoje zainwestowane tokeny LP",
   "Max. Committed": "Maks. inwestycja",
@@ -483,8 +483,8 @@
   "Achievement": "Osiągnięcie",
   "Commit ~%minLp% LP in total to earn!": "Aby zarobić, zainwestuj łącznie ~%minLp% LP!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Jaka jest różnica między sprzedażą podstawową a sprzedażą bez ograniczeń?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "W przypadku sprzedaży podstawowej każdy użytkownik może zainwestować maksymalnie około 100 USD w tokeny LP WAGYU-BNB. Maksymalną kwotę LP obliczamy na około 30 minut przed każdym IFO. W przypadku sprzedaży podstawowej nie ma prowizji za uczestnictwo.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "W przypadku sprzedaży bez ograniczeń nie ma ograniczeń liczby tokenów LP WAGYU-BNB, które można zainwestować. Za uczestnictwo pobierana jest jednak prowizja: patrz niżej.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "W przypadku sprzedaży podstawowej każdy użytkownik może zainwestować maksymalnie około 100 USD w tokeny LP WAGYU-VLX. Maksymalną kwotę LP obliczamy na około 30 minut przed każdym IFO. W przypadku sprzedaży podstawowej nie ma prowizji za uczestnictwo.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "W przypadku sprzedaży bez ograniczeń nie ma ograniczeń liczby tokenów LP WAGYU-VLX, które można zainwestować. Za uczestnictwo pobierana jest jednak prowizja: patrz niżej.",
   "Which sale should I commit to? Can I do both?": "W którą sprzedaż należy zainwestować? Czy można w obie?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Można wybrać jedną lub obie opcje naraz! Jeśli chcesz przeznaczyć tylko niewielką kwotę, polecamy najpierw sprzedaż podstawową. Pamiętaj tylko, że musisz mieć profil WagyuSwap, aby móc w niej uczestniczyć.",
   "How much is the participation fee?": "Ile wynosi prowizja za uczestnictwo?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Prowizje zaczynają się od 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Prowizja za uczestnictwo w wysokości 1% maleje skokowo, odpowiednio do procentu przepełnienia z części sprzedaży „bez ograniczeń”.",
   "Where does the participation fee go?": "Gdzie trafia prowizja za uczestnictwo?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Spalamy ją. Rozkładamy tokeny LP WAGYU-BNB z prowizji za uczestnictwo, następnie wykorzystujemy część BNB do rynkowego zakupu ekwiwalentu w WAGYU, a na koniec wrzucamy całość WAGYU do cotygodniowego spalania tokenów.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Spalamy ją. Rozkładamy tokeny LP WAGYU-VLX z prowizji za uczestnictwo, następnie wykorzystujemy część VLX do rynkowego zakupu ekwiwalentu w WAGYU, a na koniec wrzucamy całość WAGYU do cotygodniowego spalania tokenów.",
   "How can I get an achievement for participating in the IFO?": "Jak otrzymać nagrodę za udział w IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Aby wziąć udział w obu sprzedażach, należy wnieść minimum 10 USD w tokenach LP WAGYU-BNB.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Aby wziąć udział w obu sprzedażach, należy wnieść minimum 10 USD w tokenach LP WAGYU-VLX.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Możesz wziąć udział w jednej lub obu, nie ma to znaczenia: tylko Twój całkowity wkład jest liczony do osiągnięcia.",
   "The Lottery Is Changing!": "Loteria się zmienia!",
   "Come back soon!": "Zapraszamy wkrótce!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Wprowadź W DÓŁ",
   "An error occurred, unable to enter your position": "Wystąpił błąd, nie można wprowadzić Twojej pozycji",
   "Set Position": "Ustaw pozycję",
-  "Insufficient BNB balance": "Niewystarczające saldo BNB",
+  "Insufficient VLX balance": "Niewystarczające saldo VLX",
   "A minimum amount of %num% %token% is required": "Wymagana jest minimalna kwota równa %num% %token%",
   "Enter an amount": "Wprowadź kwotę",
   "You won’t be able to remove or change your position once you enter it.": "Nie będziesz w stanie usunąć ani zmienić swojej pozycji po jej wprowadzeniu.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "następnie zarejestruj się w konkursie, klikając powyższy przycisk „CHCĘ WALCZYĆ”.",
   "Battle Time": "Czas bitwy",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handluj BNB/BUSD, WAGYU/BNB, ETH/BNB i BTCB/BNB w okresie bitwy, aby podnieść wynik zarówno swój, jak i swojego zespołu. Więcej informacji zawiera poniższa sekcja Zasady.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handluj VLX/BUSD, WAGYU/VLX, ETH/VLX i BTCB/VLX w okresie bitwy, aby podnieść wynik zarówno swój, jak i swojego zespołu. Więcej informacji zawiera poniższa sekcja Zasady.",
   "Prize Claim": "Odbiór nagrody",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Pozycje zespołów i traderów w rankingu zostaną określone na podstawie wolumenu obrotów. Odbierz swoje nagrody i świętuj!",
   "Registration starting April 5": "Rejestracja zaczyna się 5 kwietnia",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Tej decyzji nie można cofnąć.",
   "I understand that my address may be displayed publicly throughout the competition.": "Rozumiem, że mój adres może być publicznie wyświetlany podczas konkursu.",
   "Eligible trading pairs": "Kwalifikujące się pary transakcyjne",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "W obliczeniach wolumenu będą uwzględniane tylko transakcje na parach BNB/BUSD, WAGYU/BNB, ETH/BNB i BTCB/BNB.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "W obliczeniach wolumenu będą uwzględniane tylko transakcje na parach VLX/BUSD, WAGYU/VLX, ETH/VLX i BTCB/VLX.",
   "Calculating team ranks and winners": "Obliczanie pozycji zespołów w rankingu i zwycięzców",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Pozycje zespołów w rankingu są obliczane na podstawie łącznej sumy obrotów 500 najlepszych członków każdego z zespołów.",
   "Prize distribution": "Rozdział nagród",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Jak odebrać nagrody?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Po zakończeniu bitwy odwiedź stronę wydarzenia i kliknij przycisk „Odbierz nagrody” w górnej części lub w sekcji „Twój wynik”. Po odebraniu nagród tekst przycisku zmieni się na „Nagrody odebrane”.",
   "Trade to increase your rank": "Handluj, aby podnieść swoją pozycję w rankingu",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Kwalifikujące się pary: BNB/BUSD, WAGYU/BNB, ETH/BNB oraz BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kwalifikujące się pary: VLX/BUSD, WAGYU/VLX, ETH/VLX oraz BTCB/VLX",
   "Play as a team": "Grajcie jako zespół",
   "The higher your team’s rank, the better your prizes": "Im wyższa pozycja Twojego zespołu w rankingu, tym lepsze nagrody",
   "Top Traders": "Najlepsi traderzy",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Autoryzuj, aby uzyskać dostęp do swojego konta",
   "Unable to find connector": "Nie można znaleźć konektora",
   "The connector config is wrong": "Konfiguracja konektora jest nieprawidłowa",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Wnosisz tokeny LP WAGYU-BNB (%amount%) do tego IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Aby wziąć udział w IFO, będziesz potrzebować tokenów LP WAGYU-BNB!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Wnosisz tokeny LP WAGYU-VLX (%amount%) do tego IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Aby wziąć udział w IFO, będziesz potrzebować tokenów LP WAGYU-VLX!",
   "Your %symbol% committed": "Zainwestowane przez Ciebie %symbol%",
   "Your %symbol% RECLAIMED": "ODZYSKANE przez Ciebie %symbol%",
   "Your %symbol% TO RECLAIM": "%symbol% DO ODZYSKANIA przez Ciebie",
