--- a/public/locales/ro-RO.json
+++ b/public/locales/ro-RO.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Aprobă WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Oferte Ferme Inițiale",
   "Buy new tokens with a brand new token sale model.": "Cumpără jetoane noi cu un model de vânzare a jetoanelor complet nou.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Vei plăti pentru jetoanele noi folosind jetoane WAGYU-BNB LP, ceea ce înseamnă că trebuie să investești sume egale de WAGYU și BNB în protofoliul de lichidități pentru a participa.",
-  "Get WAGYU-BNB LP >": "Obține WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Proiectul obține BNB, WagyuSwap consumă WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Vei plăti pentru jetoanele noi folosind jetoane WAGYU-VLX LP, ceea ce înseamnă că trebuie să investești sume egale de WAGYU și VLX în protofoliul de lichidități pentru a participa.",
+  "Get WAGYU-VLX LP >": "Obține WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Proiectul obține VLX, WagyuSwap consumă WAGYU.",
   "You get the tokens.": "Obții jetoane.",
   "Want to launch your own IFO?": "Vrei să lansezi propriul IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lansează-ți proiectul în WagyuSwap, cel mai utilizat proiect AMM al Binance Smart Chain și furnizor de lichidități, pentru a-ți duce jetonul direct la comunitatea cea mai activă și cu cea mai rapidă creștere de pe BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ De fiecare dată când investești și retragi jetoanele LP, contractul va colecta automat recompense WAGYU pentru tine!",
   "How to take part": "Cum să participi",
   "Before Sale": "Înainte de vânzare",
-  "Buy WAGYU and BNB tokens": "Cumpără jetoane WAGYU și BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Obține jetoane WAGYU-BNB LP adăugând lichidități WAGYU și BNB",
+  "Buy WAGYU and VLX tokens": "Cumpără jetoane WAGYU și VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Obține jetoane WAGYU-VLX LP adăugând lichidități WAGYU și VLX",
   "During Sale": "În timpul vânzării",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "În perioada în care vânzarea este activă, depune jetoanele WAGYU-LP pentru a cumpăra jetoate IFO",
   "After Sale": "După vânzare",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Activează-ți profilul",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Vei avea nevoie de un Profil Wagyu activ pentru a participa la un IFO!",
   "Profile Active!": "Profil activ!",
-  "Get WAGYU-BNB LP Tokens": "Obține jetoane WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Investește WAGYU și BNB în portofoliul de lichidități pentru a obține jetoane LP.",
+  "Get WAGYU-VLX LP Tokens": "Obține jetoane WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Investește WAGYU și VLX în portofoliul de lichidități pentru a obține jetoane LP.",
   "You’ll spend them to buy IFO sale tokens.": "Le vei cheltui pentru a cumpăra jetoane de vânzare IFO.",
   "Commit LP Tokens": "Depune jetoanele LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Când vânzările IFO sunt live, poți depune jetoanele LP pentru a cumpăra jetoanele vândute.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Recomandăm depunerea Vânzării de bază mai întâi, dar le poți face pe ambele dacă dorești.",
   "Claim your tokens and achievement": "Revendică-ți jetoanele și realizarea",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "După ce vânzările IFO se încheie, poți revendica orice jetoane IFO pe care le-ai cumpărat și orice jetoane WAGYU-BNB LP necheltuite vor fi returnate în portofelul tău.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "După ce vânzările IFO se încheie, poți revendica orice jetoane IFO pe care le-ai cumpărat și orice jetoane WAGYU-VLX LP necheltuite vor fi returnate în portofelul tău.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Tranzacția de închidere a acestei runde a fost trimisă în blockchain și așteaptă să fie confirmată.",
   "No prediction history available": "Nu există istoric al predicțiilor disponibil",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Dacă ești sigur că ar trebui să vezi istoricul aici, asigură-te că ești conectat la portofelul corect și încearcă din nou.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "După ce introduci o poziție, nu o poți anula sau ajusta.",
   "All losses are final.": "Toate pierderile sunt definitive.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Înțeleg că utilizez acest produs pe propriul risc. Orice pierdere suferită din cauza acțiunilor mele este responsabilitatea mea.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Investește WAGYU și BNB în portofoliul de lichidități pentru a obține jetoane LP. Le vei cheltui pentru a cumpăra jetoane IFO de vânzare.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Investește WAGYU și VLX în portofoliul de lichidități pentru a obține jetoane LP. Le vei cheltui pentru a cumpăra jetoane IFO de vânzare.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Vei avea nevoie de un Profil Wagyu activ pentru a participa la un IFO!",
   "Your LP tokens committed": "Jetoanele tale LP depuse",
   "Max. Committed": "Max. depus",
@@ -483,8 +483,8 @@
   "Achievement": "Realizare",
   "Commit ~%minLp% LP in total to earn!": "Depune ~%minLp% LP în total pentru a câștiga!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Care este diferența dintre o vânzare de bază și o vânzare nelimitată?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "În vânzarea de bază, fiecare utilizator poate depune maximum de aproximativ 100 USD în jetoane WAGYU-BNB LP. Calculăm suma maximă LP cu aproximativ 30 de minute înainte de IFO. Vânzarea de bază nu implică un comision de participare.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "La vânzarea nelimitată, nu există limită în ceea ce privește jetoanele WAGYU-BNB LP pe care le poți depune. Există, totuși, un comision de participare: vezi mai jos.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "În vânzarea de bază, fiecare utilizator poate depune maximum de aproximativ 100 USD în jetoane WAGYU-VLX LP. Calculăm suma maximă LP cu aproximativ 30 de minute înainte de IFO. Vânzarea de bază nu implică un comision de participare.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "La vânzarea nelimitată, nu există limită în ceea ce privește jetoanele WAGYU-VLX LP pe care le poți depune. Există, totuși, un comision de participare: vezi mai jos.",
   "Which sale should I commit to? Can I do both?": "Pentru ce vânzare ar trebui să depun? Pot depune pentru ambele?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Poți alege una sau ambele în același timp! Dacă depui doar o sumă mică, recomandăm vânzarea de bază mai întâi. Reține că ai nevoie de un profil WagyuSwap pentru a participa.",
   "How much is the participation fee?": "Ce valoare are comisionul de participare?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Comisionul va începe de la 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Comisionul de 1% scade în punctele maxime, pe baza procentului de depășire din porțiunea „Nelimitată” a vânzării.",
   "Where does the participation fee go?": "Unde ajunge comisionul de participare?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Îl consumăm. Jetoanele WAGYU-BNB LP din comisionul de participare vor fi descompuse. Apoi folosim partea BNB pentru a cumpăra pe piață WAGYU echivalent, iar în cele din urmă introducem toate WAGYU în consumul săptămânal de jetoane.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Îl consumăm. Jetoanele WAGYU-VLX LP din comisionul de participare vor fi descompuse. Apoi folosim partea VLX pentru a cumpăra pe piață WAGYU echivalent, iar în cele din urmă introducem toate WAGYU în consumul săptămânal de jetoane.",
   "How can I get an achievement for participating in the IFO?": "Cum pot obține o realizare din participarea la IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Trebuie să contribui cu minimum în jur de 100 USD în jetoane WAGYU-BNB LP la oricare dintre vânzări.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Trebuie să contribui cu minimum în jur de 100 USD în jetoane WAGYU-VLX LP la oricare dintre vânzări.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Poți contribui la una sau la ambele, nu contează. Numai combinația totală este luată în calcul pentru realizare.",
   "The Lottery Is Changing!": "Loteria se modifică!",
   "Come back soon!": "Revino în curând!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Introdus JOS",
   "An error occurred, unable to enter your position": "S-a produs o eroare. Nu se poate introduce poziția ta",
   "Set Position": "Setează poziția",
-  "Insufficient BNB balance": "Sold BNB insuficient",
+  "Insufficient VLX balance": "Sold VLX insuficient",
   "A minimum amount of %num% %token% is required": "Este necesar un număr minim de %num% %token%",
   "Enter an amount": "Introdu o sumă",
   "You won’t be able to remove or change your position once you enter it.": "Nu vei putea șterge sau modifica poziția după ce o introduci.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profilul Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "apoi înscrie-te pentru competiție făcând clic pe butonul „VREAU SĂ MĂ LUPT” de mai sus.",
   "Battle Time": "Momentul bătăliei",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Tranzacționează BNB/BUSD, WAGYU/BNB, ETH/BNB și BTCB/BNB în timpul bătăliei pentru a crește punctajul tău și pe cel al echipei. Pentru mai multe detalii, vezi secțiunea reguli mai jos.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Tranzacționează VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX în timpul bătăliei pentru a crește punctajul tău și pe cel al echipei. Pentru mai multe detalii, vezi secțiunea reguli mai jos.",
   "Prize Claim": "Revendicarea premiului",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Echipele și traderii vor fi clasați în ordinea volumului de tranzacționare. Colectează premiile și sărbătorește!",
   "Registration starting April 5": "Înscrierea începe pe 5 aprilie",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Nu se poate reveni asupra acestei decizii.",
   "I understand that my address may be displayed publicly throughout the competition.": "Înțeleg că adresa mea poate fi afișată public pe durata competiției.",
   "Eligible trading pairs": "Perechi de tranzacționare eligibile",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Numai tranzacțiile cu perechile BNB/BUSD, WAGYU/BNB, ETH/BNB și BTCB/BNB vor fi incluse în calcularea volumelor.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Numai tranzacțiile cu perechile VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX vor fi incluse în calcularea volumelor.",
   "Calculating team ranks and winners": "Calcularea pozițiilor în clasament ale echipelor și câștigătorilor",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Pozițiile în clasament ale echipelor sunt calculate în funcție de volumul total combinat al primilor 500 de membri ai fiecărei echipe.",
   "Prize distribution": "Distribuirea premiilor",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Cum îmi revendic premiul (premiile)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "După ce bătălia se încheie, vizitează pagina de evenimente și fă clic pe butonul „Revendică premii” din secțiunea superioară sau din secțiunea „Punctajul tău”. După ce revendici premiile cu succes, textul butonului se va modifica la „Premii revendicate”.",
   "Trade to increase your rank": "Tranzacționează pentru a-ți îmbunătăți poziția în clasament",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Perechi eligibile: BNB/BUSD, WAGYU/BNB, ETH/BNB și BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Perechi eligibile: VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX",
   "Play as a team": "Joacă în echipă",
   "The higher your team’s rank, the better your prizes": "Cu cât poziția echipei tale în clasament este mai înaltă, cu atât premiile sunt mai mari",
   "Top Traders": "Traderi de top",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Te rugăm să autorizezi accesul la contul tău",
   "Unable to find connector": "Nu se poate găsi conectorul",
   "The connector config is wrong": "Configurația conectorului este greșită",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Ai contribuit cu %amount% jetoane WAGYU-BNB LP la acest IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Vei avea nevoie de jetoane WAGYU-BNB LP pentru a participa la IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Ai contribuit cu %amount% jetoane WAGYU-VLX LP la acest IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Vei avea nevoie de jetoane WAGYU-VLX LP pentru a participa la IFO!",
   "Your %symbol% committed": "%symbol% s-a depus",
   "Your %symbol% RECLAIMED": "%symbol% REVENDICAT DE TINE",
   "Your %symbol% TO RECLAIM": "%symbol% DE REVENDICAT",
