--- a/public/locales/sv-SE.json
+++ b/public/locales/sv-SE.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Godkänn WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Inledande farmerbjudanden",
   "Buy new tokens with a brand new token sale model.": "Köp nya tokens med en helt ny försäljningsmodell för tokens.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Du betalar för nya tokens med WAGYU-BNB LP-tokens, vilket innebär att du måste satsa samma belopp av WAGYU och BNB i en likviditetspool för att delta.",
-  "Get WAGYU-BNB LP >": "Skaffa WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Projektet får BNB, WagyuSwap bränner WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Du betalar för nya tokens med WAGYU-VLX LP-tokens, vilket innebär att du måste satsa samma belopp av WAGYU och VLX i en likviditetspool för att delta.",
+  "Get WAGYU-VLX LP >": "Skaffa WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Projektet får VLX, WagyuSwap bränner WAGYU.",
   "You get the tokens.": "Du får tokens.",
   "Want to launch your own IFO?": "Vill du starta din egen IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Starta ditt projekt med WagyuSwap, Binance Smart Chains mest använda AMM-projekt och likviditetsleverantör för att ta din token direkt till den mest aktiva och snabbast växande communityn på BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Varje gång du sätter in eller tar ut LP-tokens kommer kontraktet automatiskt skörda WAGYU-belöningar åt dig!",
   "How to take part": "Hur man deltar",
   "Before Sale": "Innan försäljning",
-  "Buy WAGYU and BNB tokens": "Köp WAGYU- och BNB-tokens",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Skaffa WAGYU-BNB LP-tokens genom att lägga till WAGYU- och BNB-likviditet",
+  "Buy WAGYU and VLX tokens": "Köp WAGYU- och VLX-tokens",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Skaffa WAGYU-VLX LP-tokens genom att lägga till WAGYU- och VLX-likviditet",
   "During Sale": "Under försäljning",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Medan försäljningen pågår kan du avsätta dina WAGYU-LP-tokens för att köpa IFO-tokens",
   "After Sale": "Efter försäljning",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktivera din profil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Du behöver en aktiv WagyuSwap-profil för att delta i en IFO!",
   "Profile Active!": "Profilen är aktiv!",
-  "Get WAGYU-BNB LP Tokens": "Skaffa WAGYU-BNB LP-tokens",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Satsa WAGYU och BNB i likviditetspoolen för att få LP-tokens.",
+  "Get WAGYU-VLX LP Tokens": "Skaffa WAGYU-VLX LP-tokens",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Satsa WAGYU och VLX i likviditetspoolen för att få LP-tokens.",
   "You’ll spend them to buy IFO sale tokens.": "Du kommer att spendera dem på att köpa IFO-försäljningstokens.",
   "Commit LP Tokens": "Avsätt LP-tokens",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Medan IFO-försäljningen pågår kan du \"avsätta\" dina LP-tokens för att köpa de tokens som säljs.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Vi rekommenderar att du avsätter basförsäljningen först, men du kan göra båda om du vill.",
   "Claim your tokens and achievement": "Lös in dina tokens och prestationer",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Efter att IFO-försäljningen avslutats kan du lösa in alla köpta IFO-tokens och alla WAGYU-BNB LP-tokens som inte spenderats lämnas tillbaka till din plånbok.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Efter att IFO-försäljningen avslutats kan du lösa in alla köpta IFO-tokens och alla WAGYU-VLX LP-tokens som inte spenderats lämnas tillbaka till din plånbok.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Denna rundas avslutande överföring har skickats till blockchain och inväntar bekräftelse.",
   "No prediction history available": "Ingen prognoshistorik tillgänglig",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Om du är säker på att du borde se din historik här ser du till att du är ansluten till rätt plånbok och försöker igen.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "När du väl introducerar en position kan du inte annullera eller justera den.",
   "All losses are final.": "Alla förluster är slutgiltiga.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Jag förstår att jag använder den här produkten på egen risk. Alla förluster som beror på mina handlingar är mitt eget ansvar.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Satsa WAGYU och BNB i likviditetspoolen för att få LP-tokens. Du spenderar dem för att köpa IFO-försäljningstokens.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Satsa WAGYU och VLX i likviditetspoolen för att få LP-tokens. Du spenderar dem för att köpa IFO-försäljningstokens.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Du behöver en aktiv WagyuSwap-profil för att delta i en IFO!",
   "Your LP tokens committed": "Dina avsatta LP-tokens",
   "Max. Committed": "Maximalt avsatt",
@@ -483,8 +483,8 @@
   "Achievement": "Prestation",
   "Commit ~%minLp% LP in total to earn!": "Satsa ~%minLp% LP totalt för att tjäna!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Vad är skillnaden mellan en basförsäljning och obegränsad försäljning?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "I basförsäljningen kan alla användare avsätta maximalt cirka WAGYU-BNB LP-tokens till ett värde av 100 USD. Vi beräknar det maximala LP-beloppet cirka 30 minuter innan varje IFO. Basförsäljningen har ingen deltagaravgift.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "I den obegränsade försäljningen finns det ingen gräns för beloppet av WAGYU-BNB LP-tokens du kan avsätta. Men det finns en deltagaravgift: se nedan.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "I basförsäljningen kan alla användare avsätta maximalt cirka WAGYU-VLX LP-tokens till ett värde av 100 USD. Vi beräknar det maximala LP-beloppet cirka 30 minuter innan varje IFO. Basförsäljningen har ingen deltagaravgift.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "I den obegränsade försäljningen finns det ingen gräns för beloppet av WAGYU-VLX LP-tokens du kan avsätta. Men det finns en deltagaravgift: se nedan.",
   "Which sale should I commit to? Can I do both?": "Vilken försäljning ska jag avsätta till? Kan det vara båda?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Du kan välja en eller båda samtidigt! Om du bara avsätter ett litet belopp rekommenderar vi basförsäljningen först. Kom bara ihåg att du behöver en WagyuSwap-profil för att kunna delta.",
   "How much is the participation fee?": "Hur mycket kostar deltagaravgiften?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Avgiften startar på 1 %.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Deltagaravgiften på 1 % sjunker i steg, baserat på procenten av överflödet från den \"obegränsade\" delen av försäljningen.",
   "Where does the participation fee go?": "Vart går deltagaravgiften?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Vi bränner den. WAGYU-BNB LP-tokens från deltagaravgiften kommer att upplösas. Därefter använder vi BNB-delen för att köpa WAGYU-motsvarigheten på marknaden och slutligen kastar vi all WAGYU på veckans tokenbränning.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Vi bränner den. WAGYU-VLX LP-tokens från deltagaravgiften kommer att upplösas. Därefter använder vi VLX-delen för att köpa WAGYU-motsvarigheten på marknaden och slutligen kastar vi all WAGYU på veckans tokenbränning.",
   "How can I get an achievement for participating in the IFO?": "Hur kan jag få en prestation för att delta i IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Du måste bidra med minst WAGYU-BNB LP-tokens till ett värde av cirka 10 USD för varje försäljning.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Du måste bidra med minst WAGYU-VLX LP-tokens till ett värde av cirka 10 USD för varje försäljning.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Du kan bidra till en eller både, det spelar ingen roll. Endast ditt övergripande bidrag räknas med i prestationen.",
   "The Lottery Is Changing!": "Lotteriet förändras!",
   "Come back soon!": "Kom snart tillbaka!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Introducera NER",
   "An error occurred, unable to enter your position": "Ett fel uppstod, det går inte att introducera din position",
   "Set Position": "Introducera position",
-  "Insufficient BNB balance": "Otillräckligt BNB-saldo",
+  "Insufficient VLX balance": "Otillräckligt VLX-saldo",
   "A minimum amount of %num% %token% is required": "En minimibelopp på %num% %token% krävs",
   "Enter an amount": "Ange ett belopp",
   "You won’t be able to remove or change your position once you enter it.": "Du kommer inte att kunna ta bort eller ändra din position när du har introducerat den.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-profil",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "anmäl dig sedan till tävlingen genom att klicka på knappen \"JAG VILL STRIDA\" ovan.",
   "Battle Time": "Dags för strid",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Växla BNB/BUSD, WAGYU/BNB, ETH/BNB och BTCB/BNB under stridsperioden för att förbättra både din och ditt teams poäng. Se avsnittet Regler nedan för mer.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Växla VLX/BUSD, WAGYU/VLX, ETH/VLX och BTCB/VLX under stridsperioden för att förbättra både din och ditt teams poäng. Se avsnittet Regler nedan för mer.",
   "Prize Claim": "Inlösning av priser",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Teams och växlare kommer att rankas efter växlad volym. Samla in dina priser och fira!",
   "Registration starting April 5": "Registreringen startar 5 april",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Detta beslut kan inte återkallas.",
   "I understand that my address may be displayed publicly throughout the competition.": "Jag förstår att min adress kan visas offentligt under tävlingens gång.",
   "Eligible trading pairs": "Valbara växlingspar",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Endast växlingar med BNB/BUSD-, WAGYU/BNB-, ETH/BNB- och BTCB/BNB-par kommer att inkluderas i volymberäkningarna.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Endast växlingar med VLX/BUSD-, WAGYU/VLX-, ETH/VLX- och BTCB/VLX-par kommer att inkluderas i volymberäkningarna.",
   "Calculating team ranks and winners": "Beräknar lagrankningar och vinnare",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Lagrankningar beräknas genom en total kombinerad volym av de 500 bästa medlemmarna i varje lag.",
   "Prize distribution": "Prisdistribuering",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Hur löser jag in mitt pris?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Efter stridens slut besöker du evenemangssidan och klickar på knappen \"Lös in priser\" längst upp eller i avsnittet \"Din poäng\". När du väl har löst in dina priser kommer texten på knappen att ändras till \"Priserna har lösts in\".",
   "Trade to increase your rank": "Växla för att förbättra din rankning",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Valbara par: BNB/BUSD, WAGYU/BNB, ETH/BNB och BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Valbara par: VLX/BUSD, WAGYU/VLX, ETH/VLX och BTCB/VLX",
   "Play as a team": "Spela som ett lag",
   "The higher your team’s rank, the better your prizes": "Ju högre ditt lags rankning, desto bättre priser",
   "Top Traders": "Toppväxlare",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Auktorisera för att få åtkomst till ditt konto",
   "Unable to find connector": "Det går inte att hitta kontakten",
   "The connector config is wrong": "Kontaktens konfiguration är felaktig",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Du har bidragit med %amount% WAGYU-BNB LP-tokens till denna IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Du behöver WAGYU-BNB LP-tokens för att delta i IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Du har bidragit med %amount% WAGYU-VLX LP-tokens till denna IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Du behöver WAGYU-VLX LP-tokens för att delta i IFO!",
   "Your %symbol% committed": "Din avsatta %symbol%",
   "Your %symbol% RECLAIMED": "Din ÅTERINLÖSTA %symbol%",
   "Your %symbol% TO RECLAIM": "Din %symbol% ATT ÅTERINLÖSA",
