--- a/public/locales/tr-TR.json
+++ b/public/locales/tr-TR.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU Onayı Ver",
   "IFO: Initial Farm Offerings": "IFO: İlk Farm Arzları",
   "Buy new tokens with a brand new token sale model.": "Yepyeni bir jeton satış modeli ile yeni jetonlar satın alın.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Yeni jetonlar edinmek için WAGYU-BNB LP jetonlarını kullanarak ödeme yapacaksınız, bu da katılmak için bir likidite havuzunda eşit miktarda WAGYU ve BNB jetonlarından yatırmanız gerektiği anlamına gelir.",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP alın>",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Proje BNB jetonları alırken, WagyuSwap WAGYU jetonlarını yakar.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Yeni jetonlar edinmek için WAGYU-VLX LP jetonlarını kullanarak ödeme yapacaksınız, bu da katılmak için bir likidite havuzunda eşit miktarda WAGYU ve VLX jetonlarından yatırmanız gerektiği anlamına gelir.",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP alın>",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Proje VLX jetonları alırken, WagyuSwap WAGYU jetonlarını yakar.",
   "You get the tokens.": "Jetonları alırsınız.",
   "Want to launch your own IFO?": "Kendi IFO'nuzu başlatmak ister misiniz?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Projenizi doğrudan BSC'deki en aktif ve hızla büyüyen topluluğuna getirmek için, Binance Smart Chain’in en çok kullanılan AMM projesi ve likidite sağlayıcısı olan WagyuSwap ile projenizi başlatın.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ WAGYU Jetonlarınızı her yatırıp, tekrar çektiğinizde, sözleşme sizin için otomatik olarak WAGYU ödüllerinizi toplayacaktır!",
   "How to take part": "Nasıl Katılım Sağlanır",
   "Before Sale": "Satış Öncesi",
-  "Buy WAGYU and BNB tokens": "WAGYU ve BNB jetonları satın alın",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYU ve BNB için likidite ekleyerek WAGYU-BNB LP jetonlarını alın",
+  "Buy WAGYU and VLX tokens": "WAGYU ve VLX jetonları satın alın",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYU ve VLX için likidite ekleyerek WAGYU-VLX LP jetonlarını alın",
   "During Sale": "Satış Esnasında",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Satış devam ederken, WAGYU-LP tokenlarınızı IFO tokenlarını satın almak için kullanın",
   "After Sale": "Satış Sonrası",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Profilinizi etkinleştirin",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Bir IFO'ya katılmak için aktif bir WagyuSwap Profiline sahip olmanız gerekir!",
   "Profile Active!": "Profil Aktif!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP Tokenları alın",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "LP tokenları almak için likidite havuzuna WAGYU ve BNB yatırın (stake edin).",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP Tokenları alın",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "LP tokenları almak için likidite havuzuna WAGYU ve VLX yatırın (stake edin).",
   "You’ll spend them to buy IFO sale tokens.": "Bunları IFO satış tokenları satın almak için harcayacaksınız.",
   "Commit LP Tokens": "LP Tokenları taahhüt et",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "IFO satışları başladığında, satılan tokenları almak üzere LP tokenlarınızı \"taahhüt edebilirsiniz\".",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Önce Temel Satışta işlem yapmanızı öneririz ama isterseniz ikisini de yapabilirsiniz.",
   "Claim your tokens and achievement": "Tokenlarınızı ve başarınızı talep edin",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO satışı bittikten sonra, satın aldığınız her türlü IFO tokenını talep edebilirsiniz ve her türlü harcanmamış WAGYU-BNB LP tokenları cüzdanınıza iade edilir.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO satışı bittikten sonra, satın aldığınız her türlü IFO tokenını talep edebilirsiniz ve her türlü harcanmamış WAGYU-VLX LP tokenları cüzdanınıza iade edilir.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Bu turun kapanış işlemi, blok zincire teslim edildi ve onay için bekliyor.",
   "No prediction history available": "Hiçbir tahmin geçmişi yok",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Geçmişi burada görmeniz gerektiğinden eminseniz, doğru cüzdana bağlı olduğunuzdan emin olun ve tekrar deneyin.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Bir pozisyona girdiğinizde, onu iptal edemez veya düzeltemezsiniz.",
   "All losses are final.": "Tüm kayıplar nihaidir.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Bu ürünü kendi sorumluluğumda kullandığımı anlıyorum. Eylemlerimden kaynaklanan herhangi bir kayıp kendi sorumluluğumdadır.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP tokenları almak için likidite havuzunda WAGYU ve BNB stake edin. Bunları IFO satış tokenları satın almak için harcayacaksınız.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP tokenları almak için likidite havuzunda WAGYU ve VLX stake edin. Bunları IFO satış tokenları satın almak için harcayacaksınız.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Bir IFO'ya katılmak için aktif bir WagyuSwap Profiline sahip olmanız gerekir!",
   "Your LP tokens committed": "Taahhüt ettiğiniz LP tokenları",
   "Max. Committed": "Taahhüt Edilen Maksimum",
@@ -483,8 +483,8 @@
   "Achievement": "Başarı",
   "Commit ~%minLp% LP in total to earn!": "Kazanmak için toplam ~%minLp% LP taahhüt edin!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Temel Satış ve Sınırsız Satış arasında ne gibi bir fark vardır?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Temel Satışta, her kullanıcı en fazla yaklaşık 100 USD değerinde WAGYU-BNB LP Tokenı taahhüt edebilir. Her IFO'dan yaklaşık 30 dakika önce maksimum LP miktarını hesaplıyoruz. Temel Satışa katılım ücreti yoktur.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Sınırsız Satışta, taahhüt edebileceğiniz WAGYU-BNB LP Tokenlarının miktarı için bir sınır yoktur. Ancak katılım için bir ücret vardır: aşağıya bakın.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Temel Satışta, her kullanıcı en fazla yaklaşık 100 USD değerinde WAGYU-VLX LP Tokenı taahhüt edebilir. Her IFO'dan yaklaşık 30 dakika önce maksimum LP miktarını hesaplıyoruz. Temel Satışa katılım ücreti yoktur.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Sınırsız Satışta, taahhüt edebileceğiniz WAGYU-VLX LP Tokenlarının miktarı için bir sınır yoktur. Ancak katılım için bir ücret vardır: aşağıya bakın.",
   "Which sale should I commit to? Can I do both?": "Hangi satışta taahhütte bulunmalıyım? Her ikisini yapabilir miyim?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Aynı anda birini veya ikisini birden seçebilirsiniz! Yalnızca küçük bir miktar taahhüt ediyorsanız, önce Temel Satışı öneririz. Katılmak için bir WagyuSwap Profiline ihtiyacınız olduğunu unutmayın.",
   "How much is the participation fee?": "Katılım ücreti ne kadardır?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Ücret, %1'den başlayacaktır.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "%1 katılım ücreti, satışın \"Sınırsız\" kısmından gelen yüksek akış miktarının yüzdesine dayalı olarak aşamalı şekilde azalır.",
   "Where does the participation fee go?": "Katılım ücreti nereye gider?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Bizim tarafımızdan yakılır. Katılım ücretinden WAGYU-BNB LP tokenları ayrıştırılacaktır. Daha sonra BNB bölümünü WAGYU eşdeğerini piyasadan satın almak için kullanacağız ve sonunda tüm WAGYU'i haftalık token yakma işlemine atacağız.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Bizim tarafımızdan yakılır. Katılım ücretinden WAGYU-VLX LP tokenları ayrıştırılacaktır. Daha sonra VLX bölümünü WAGYU eşdeğerini piyasadan satın almak için kullanacağız ve sonunda tüm WAGYU'i haftalık token yakma işlemine atacağız.",
   "How can I get an achievement for participating in the IFO?": "IFO'ya katıldığım için nasıl bir başarı elde edebilirim?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Her iki satışa da minimum 10 USD değerinde WAGYU-BNB LP Tokenı katkısı koymanız gerekir.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Her iki satışa da minimum 10 USD değerinde WAGYU-VLX LP Tokenı katkısı koymanız gerekir.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Birine veya ikisine birden katkıda bulunabilirsiniz, fark etmez. Başarı için yalnızca genel katkınız sayılır.",
   "The Lottery Is Changing!": "Piyango Değişiyor!",
   "Come back soon!": "Yakında geri dönün!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "AŞAĞI Gidin",
   "An error occurred, unable to enter your position": "Bir hata oluştu, pozisyonunuz açılamıyor",
   "Set Position": "Pozisyon Belirleyin",
-  "Insufficient BNB balance": "Yetersiz BNB bakiyesi",
+  "Insufficient VLX balance": "Yetersiz VLX bakiyesi",
   "A minimum amount of %num% %token% is required": "Minimum %num% %token% tutarı gerekli",
   "Enter an amount": "Tutar girin",
   "You won’t be able to remove or change your position once you enter it.": "Bir pozisyona girdikten sonra bunu kaldıramaz veya değiştiremezsiniz.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu Profili",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "daha sonra yukarıdaki \"SAVAŞMAK İSTİYORUM\" düğmesine tıklayarak yarışma için kaydolun.",
   "Battle Time": "Savaş Zamanı",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Hem kendi puanınızı hem de takımınızın puanı artırmak için savaş dönemi sırasında BNB/BUSD, WAGYU/BNB, ETH/BNB ve BTCB/BNB takası yapın. Daha fazla bilgi için aşağıdaki Kurallar bölümüne bakın.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Hem kendi puanınızı hem de takımınızın puanı artırmak için savaş dönemi sırasında VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX takası yapın. Daha fazla bilgi için aşağıdaki Kurallar bölümüne bakın.",
   "Prize Claim": "Ödül Alma",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Takımlar ve yatırımcılar işlem hacmine göre sıralanacaktır. Ödüllerinizi toplayın ve kutlayın!",
   "Registration starting April 5": "Kayıt 5 Nisanda başlıyor",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Bu karar geri alınamaz.",
   "I understand that my address may be displayed publicly throughout the competition.": "Adresimin yarışma boyunca herkese açık olarak gösterilebileceğini anlıyorum.",
   "Eligible trading pairs": "Uygun takas çiftleri",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Hacim hesaplamalarına yalnızca BNB/BUSD, WAGYU/BNB, ETH/BNB ve BTCB/BNB çiftlerinde yapılan işlemler dahil edilecektir.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hacim hesaplamalarına yalnızca VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX çiftlerinde yapılan işlemler dahil edilecektir.",
   "Calculating team ranks and winners": "Takım sıralamalarını ve kazananları hesaplama",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Takım sıralamaları, her bir takımın ilk 500 üyesinin toplam hacmine göre hesaplanır.",
   "Prize distribution": "Ödül dağıtımı",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Ödüllerimi nasıl alabilirim?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Savaş bittikten sonra, etkinlik sayfasını ziyaret edin ve üst bölümdeki veya \"Puanınız\" bölümündeki \"Ödülleri topla\" düğmesine tıklayın. Ödüllerinizi başarıyla aldığınızda, düğme metni \"Ödüller Alındı\" olarak değişecektir.",
   "Trade to increase your rank": "Sıranızı yükseltmek için takas yapın",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Geçerli çiftler: BNB/BUSD, WAGYU/BNB, ETH/BNB ve BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Geçerli çiftler: VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX",
   "Play as a team": "Takım olarak oyna",
   "The higher your team’s rank, the better your prizes": "Takımınızın sırası ne kadar yüksek olursa, ödüller o kadar iyi olur",
   "Top Traders": "En İyi Yatırımcılar",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Lütfen hesaba erişmek için yetki verin",
   "Unable to find connector": "Konektör bulunamıyor",
   "The connector config is wrong": "Konektör yapılandırması yanlış",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Bu IFO'ya %amount% WAGYU-BNB LP tokenlarıyla katkı sağladınız!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "IFO'ya katılmak için WAGYU-BNB LP tokenlarına ihtiyacınız olacak!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Bu IFO'ya %amount% WAGYU-VLX LP tokenlarıyla katkı sağladınız!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "IFO'ya katılmak için WAGYU-VLX LP tokenlarına ihtiyacınız olacak!",
   "Your %symbol% committed": "%symbol% taahhüt edildi",
   "Your %symbol% RECLAIMED": "%symbol% GERİ ALINDI",
   "Your %symbol% TO RECLAIM": " %symbol% GERİ ALINACAK",
