--- a/public/locales/uk-UA.json
+++ b/public/locales/uk-UA.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Схвалити WAGYU",
   "IFO: Initial Farm Offerings": "IFO: перший публічний випуск токенів",
   "Buy new tokens with a brand new token sale model.": "Придбайте нові токени за абсолютно новою моделлю.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Ви оплачуватимете нові токени токенами пулу ліквідності WAGYU-BNB. Це означає, що вам потрібно внести рівну кількість WAGYU і BNB в пул ліквідності, щоб узяти участь.",
-  "Get WAGYU-BNB LP >": "Отримати WAGYU-BNB ПЛ >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Проєкт отримує BNB, WagyuSwap спалює WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Ви оплачуватимете нові токени токенами пулу ліквідності WAGYU-VLX. Це означає, що вам потрібно внести рівну кількість WAGYU і VLX в пул ліквідності, щоб узяти участь.",
+  "Get WAGYU-VLX LP >": "Отримати WAGYU-VLX ПЛ >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Проєкт отримує VLX, WagyuSwap спалює WAGYU.",
   "You get the tokens.": "Ви отримуєте токени.",
   "Want to launch your own IFO?": "Хочете запустити власне IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Запустіть власний проєкт із WagyuSwap – найбільш використовуваного проєкту з автоматизованого маркет-мейкінгу та постачальника ліквідності Binance Smart Chain – і виведіть свій токен безпосередньо в найактивнішу та найдинамічнішу спільноту в BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Щоразу, як ви вносите чи виводите токени пулу ліквідності, контракт автоматично збирає для вас нагороди WAGYU!",
   "How to take part": "Як узяти участь",
   "Before Sale": "До продажу",
-  "Buy WAGYU and BNB tokens": "Придбайте токени WAGYU і BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Отримайте токени пулу ліквідності WAGYU-BNB, додавши ліквідність WAGYU і BNB",
+  "Buy WAGYU and VLX tokens": "Придбайте токени WAGYU і VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Отримайте токени пулу ліквідності WAGYU-VLX, додавши ліквідність WAGYU і VLX",
   "During Sale": "Під час продажу",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Поки продаж триває, виділіть свої токени пулу ліквідності WAGYU, щоб придбати токени IFO",
   "After Sale": "Після продажу",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Активуйте свій профіль",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Щоб узяти участь в IFO, потрібен активний профіль WagyuSwap.",
   "Profile Active!": "Профіль активний!",
-  "Get WAGYU-BNB LP Tokens": "Отримати токени пулу ліквідності WAGYU-BNB >",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Вносьте WAGYU і BNB у пул ліквідності, щоб отримувати токени ПЛ.",
+  "Get WAGYU-VLX LP Tokens": "Отримати токени пулу ліквідності WAGYU-VLX >",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Вносьте WAGYU і VLX у пул ліквідності, щоб отримувати токени ПЛ.",
   "You’ll spend them to buy IFO sale tokens.": "Ви витрачатимете їх на придбання токенів продажу IFO.",
   "Commit LP Tokens": "Виділити токени пулу ліквідності",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Поки продаж IFO триває, ви можете «виділити» свої токени в пул ліквідності, щоб придбати токени, що продаються.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Радимо спочатку виділити токени в базовому продажі, але ви можете скористатись обома варіантами.",
   "Claim your tokens and achievement": "Заберіть свої токени та досягнення",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Коли продаж IFO завершиться, ви зможете забрати придбані токени IFO, а всі невитрачені токени пулу ліквідності WAGYU-BNB повернуться у ваш гаманець.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Коли продаж IFO завершиться, ви зможете забрати придбані токени IFO, а всі невитрачені токени пулу ліквідності WAGYU-VLX повернуться у ваш гаманець.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Заключну транзакцію цього раунду передано в блокчейн. Очікується підтвердження.",
   "No prediction history available": "Історія прогнозів недоступна",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Якщо ви впевнені, що тут має відображатись історія, перевірте, чи до правильного гаманця ви підключились, і спробуйте ще раз.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Відкривши позицію, ви не зможете скасувати її або внести в неї зміни.",
   "All losses are final.": "Усі збитки незворотні.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Я розумію, що я використовую цей продукт на власний ризик. Усі збитки, що виникли внаслідок моїх дій, є моєю відповідальністю.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Вносьте WAGYU і BNB у пул ліквідності, щоб отримувати токени ПЛ. Ви витрачатимете їх на придбання токенів IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Вносьте WAGYU і VLX у пул ліквідності, щоб отримувати токени ПЛ. Ви витрачатимете їх на придбання токенів IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Щоб узяти участь в IFO, потрібен активний профіль WagyuSwap.",
   "Your LP tokens committed": "Ваші токени ПЛ виділено",
   "Max. Committed": "Виділено максимум",
@@ -483,8 +483,8 @@
   "Achievement": "Досягнення",
   "Commit ~%minLp% LP in total to earn!": "Щоб отримати, виділіть ~%minLp% ПЛ!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "У чому відмінність між базовим і необмеженим продажем?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "У випадку базового продажу кожен користувач може виділити токени ПЛ WAGYU-BNB на суму не більше 100 доларів США. Ми обчислюємо максимальну суму ПЛ приблизно за 30 хвилин до кожного IFO. Комісія за участь у базовому продажі відсутня.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "У необмеженому продажі ви можете виділяти необмежену суму токенів ПЛ WAGYU-BNB. За участь стягується комісія. Докладні відомості наведено нижче.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "У випадку базового продажу кожен користувач може виділити токени ПЛ WAGYU-VLX на суму не більше 100 доларів США. Ми обчислюємо максимальну суму ПЛ приблизно за 30 хвилин до кожного IFO. Комісія за участь у базовому продажі відсутня.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "У необмеженому продажі ви можете виділяти необмежену суму токенів ПЛ WAGYU-VLX. За участь стягується комісія. Докладні відомості наведено нижче.",
   "Which sale should I commit to? Can I do both?": "У якому продажі слід взяти участь? Чи можна взяти участь в обох?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Можна вибрати один варіант чи взяти участь в обох одночасно! Якщо ви виділяєте невелику суму, радимо почати з базового продажу. Зверніть увагу: щоб узяти участь, потрібен профіль WagyuSwap.",
   "How much is the participation fee?": "Скільки складає комісія за участь?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Комісія починається з 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Комісія за участь у розмірі 1% зменшується поетапно залежно від відсотка надлишків від необмеженої частини продажу.",
   "Where does the participation fee go?": "Куди йде комісія за участь?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Ми спалюємо її. Токени ПЛ WAGYU-BNB, отримані з комісії за участь, розбираються. Ми використовуємо частину BNB, щоб придбати еквівалентну кількість WAGYU, і передаємо всі токени WAGYU на щотижневе спалення токенів.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Ми спалюємо її. Токени ПЛ WAGYU-VLX, отримані з комісії за участь, розбираються. Ми використовуємо частину VLX, щоб придбати еквівалентну кількість WAGYU, і передаємо всі токени WAGYU на щотижневе спалення токенів.",
   "How can I get an achievement for participating in the IFO?": "Як отримати досягнення за участь в IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Вам потрібно внести токени ПЛ WAGYU-BNB на суму мінімум приблизно 10 доларів США в будь-який продаж.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Вам потрібно внести токени ПЛ WAGYU-VLX на суму мінімум приблизно 10 доларів США в будь-який продаж.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Ви можете брати участь в одному продажі чи в обох – це не має значення. У залік досягнення йде лише повна сума внеску.",
   "The Lottery Is Changing!": "Лотерея змінюється!",
   "Come back soon!": "Повертайтеся незабаром!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Відкрити ПОНИЖЕННЯ",
   "An error occurred, unable to enter your position": "Сталася помилка, тому не вдалося відкрити вашу позицію",
   "Set Position": "Указати позицію",
-  "Insufficient BNB balance": "Занизький баланс BNB",
+  "Insufficient VLX balance": "Занизький баланс VLX",
   "A minimum amount of %num% %token% is required": "Потрібно мінімум %num% %token%",
   "Enter an amount": "Введіть суму",
   "You won’t be able to remove or change your position once you enter it.": "Ви не зможете вилучити відкриту позицію або змінити її.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "профіль Wagyu,",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "а потім зареєструйтеся в змаганні, натиснувши кнопку «Я ХОЧУ В БІЙ» вище.",
   "Battle Time": "Час битви",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Обмінюйте BNB/BUSD, WAGYU/BNB, ETH/BNB і BTCB/BNB протягом битви, щоб піднімати свої бали та бали своєї команди. Докладні відомості наведено в розділі «Правила» нижче.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Обмінюйте VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX протягом битви, щоб піднімати свої бали та бали своєї команди. Докладні відомості наведено в розділі «Правила» нижче.",
   "Prize Claim": "Отримання призу",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Рейтинг команд і трейдерів визначається за обсягами торгівлі. Зберіть свої призи та відсвяткуйте!",
   "Registration starting April 5": "Реєстрація починається з 5 квітня",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Це рішення не можна буде відмінити.",
   "I understand that my address may be displayed publicly throughout the competition.": "Я розумію, що до завершення моя адреса відображатиметься для широкого загалу.",
   "Eligible trading pairs": "Відповідні торгові пари",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "В обсяг торгівлі включатимуться тільки пари BNB/BUSD, WAGYU/BNB, ETH/BNB і BTCB/BNB.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "В обсяг торгівлі включатимуться тільки пари VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX.",
   "Calculating team ranks and winners": "Обчислення рейтингу команд і визначення переможців",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Рейтинги команд обчислюються за загальним обсягом, що є сумою обсягів найкращих 500 учасників кожної команди.",
   "Prize distribution": "Розподіл призів",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Як мені отримати призи?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Коли битва завершиться, перейдіть на сторінку події та натисніть кнопку «Отримати призи» у верхній частині розділу «Ваші бали». Щойно ви отримаєте призи, надпис на кнопці зміниться на «Призи отримано».",
   "Trade to increase your rank": "Ведіть торгівлю, щоб підвищувати свій рейтинг",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Припустимі пари: BNB/BUSD, WAGYU/BNB, ETH/BNB і BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Припустимі пари: VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX",
   "Play as a team": "Дійте як команда",
   "The higher your team’s rank, the better your prizes": "Що вищий рейтинг вашої команди, то кращі призи",
   "Top Traders": "Найкращі трейдери",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Авторизуйте доступ до свого акаунта",
   "Unable to find connector": "Не вдалося знайти з’єднувач",
   "The connector config is wrong": "Конфігурація з’єднувача неправильна",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Ви внесли стільки токенів ПЛ WAGYU-BNB у цей IFO: %amount%",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Вам знадобляться токени ПЛ WAGYU-BNB, щоб узяти участь у цьому IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Ви внесли стільки токенів ПЛ WAGYU-VLX у цей IFO: %amount%",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Вам знадобляться токени ПЛ WAGYU-VLX, щоб узяти участь у цьому IFO!",
   "Your %symbol% committed": "%symbol% виділено",
   "Your %symbol% RECLAIMED": "%symbol% ПОВЕРНУТО",
   "Your %symbol% TO RECLAIM": "%symbol% ДОСТУПНО ДЛЯ ПОВЕРНЕННЯ",
