--- a/public/locales/vi-VN.json
+++ b/public/locales/vi-VN.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Phê duyệt WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings (Chào bán lần đầu qua trang trại)",
   "Buy new tokens with a brand new token sale model.": "Mua token mới với mô hình bán token hoàn toàn mới.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Bạn sẽ trả tiền cho token mới bằng cách dùng các token WAGYU-BNB LP, nghĩa là bạn cần đặt cọc số lượng WAGYU và BNB tương đương trong nhóm thanh khoản để tham gia vào.",
-  "Get WAGYU-BNB LP >": "Nhận WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Dự án này nhận BNB, WagyuSwap đốt WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Bạn sẽ trả tiền cho token mới bằng cách dùng các token WAGYU-VLX LP, nghĩa là bạn cần đặt cọc số lượng WAGYU và VLX tương đương trong nhóm thanh khoản để tham gia vào.",
+  "Get WAGYU-VLX LP >": "Nhận WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Dự án này nhận VLX, WagyuSwap đốt WAGYU.",
   "You get the tokens.": "Bạn nhận token.",
   "Want to launch your own IFO?": "Muốn triển khai IFO của riêng mình?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Triển khai dự án của bạn với WagyuSwap, dự án AMM và nhà cung cấp thanh khoản được dùng nhiều nhất của Binance Smart Chain, nhằm mang trực tiếp token của bạn đến với cộng đồng năng động nhất và đang phát triển mạnh trên BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Mỗi lần bạn đặt cọc hoặc huỷ đặt cọc token LP, hợp đồng sẽ tự động thu hoạch phần thưởng WAGYU cho bạn!",
   "How to take part": "Cách tham gia",
   "Before Sale": "Trước khi bán",
-  "Buy WAGYU and BNB tokens": "Mua token WAGYU và BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Nhận token WAGYU-BNB LP bằng cách thêm vào thanh khoản WAGYU và BNB",
+  "Buy WAGYU and VLX tokens": "Mua token WAGYU và VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Nhận token WAGYU-VLX LP bằng cách thêm vào thanh khoản WAGYU và VLX",
   "During Sale": "Trong thời gian bán",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Trong lúc giai đoạn bán được lên sóng, hãy gán token WAGYU-LP của bạn để mua token IFO",
   "After Sale": "Sau đợt bán",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Kích hoạt hồ sơ của bạn",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Bạn sẽ cần một Hồ sơ WagyuSwap đang hoạt động để tham gia vào một IFO!",
   "Profile Active!": "Hồ sơ đang hoạt động!",
-  "Get WAGYU-BNB LP Tokens": "Nhận token LP của WAGYU-BNB",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Cọc WAGYU và BNB trong nhóm thanh khoản để nhận token LP.",
+  "Get WAGYU-VLX LP Tokens": "Nhận token LP của WAGYU-VLX",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Cọc WAGYU và VLX trong nhóm thanh khoản để nhận token LP.",
   "You’ll spend them to buy IFO sale tokens.": "Bạn sẽ tiêu chúng để mua token bán IFO.",
   "Commit LP Tokens": "Gắn kết token LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Khi thương vụ IFO được triển khai, bạn có thể “cam kết” các token LP của mình để mua token đang được bán.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Chúng tôi khuyên bạn nên cam kết với thương vụ Bán cơ bản trước tiên, nhưng bạn có thể thực hiện cả hai nếu muốn.",
   "Claim your tokens and achievement": "Nhận lấy token và thành tựu của bạn",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Sau đợt bán IFO này, bạn có thể nhận lấy bất kì token IFO nào mà bạn mua, và bất kì token LP chưa tiêu nào của WAGYU-BNB đều sẽ được trả về ví bạn.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Sau đợt bán IFO này, bạn có thể nhận lấy bất kì token IFO nào mà bạn mua, và bất kì token LP chưa tiêu nào của WAGYU-VLX đều sẽ được trả về ví bạn.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Giao dịch khép lại của vòng này đã được gửi đến chuỗi khối, và đang chờ được xác nhận.",
   "No prediction history available": "Không có lịch sử tiên đoán nào",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Nếu bạn chắc bạn có thể thấy lịch sử ở đây, hãy bảo đảm là bạn kết nối đúng ví và thử lại.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Sau khi đã nhập một vị trí, bạn không thể huỷ hay điều chỉnh nó.",
   "All losses are final.": "Tất cả các phần thua đều là chung quyết.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Tôi hiểu là tôi đang dùng sản phẩm này với mọi nguy cơ tự chịu lấy. Bất kì mất mát nào phát sinh do thao tác của tôi đều thuộc trách nhiệm của riêng tôi.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Đặt cọc WAGYU và BNB trong nhóm thanh khoản để nhận token LP. Bạn sẽ chi tiêu chúng để mua token bán IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Đặt cọc WAGYU và VLX trong nhóm thanh khoản để nhận token LP. Bạn sẽ chi tiêu chúng để mua token bán IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Bạn sẽ cần một Hồ sơ WagyuSwap đang hoạt động để tham gia vào một IFO!",
   "Your LP tokens committed": "Token LP của bạn vốn đã được gán",
   "Max. Committed": "Số tối đa được gán",
@@ -483,8 +483,8 @@
   "Achievement": "Thành tích",
   "Commit ~%minLp% LP in total to earn!": "Cam kết tổng cộng ~%minLp% LP để kiếm tiền!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Sự khác biệt giữa một giao dịch Bán cơ bản và Bán không giới hạn là gì?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Trong Bán cơ bản, mọi người dùng đều có thể cam kết tối đa khoảng 100 USD token LP WAGYU-BNB. Chúng tôi sẽ tính số LP tối đa khoảng 30 phút trước mỗi kỳ IFO. Bán cơ bản không mất phí tham gia.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Trong Bán không giới hạn, không có giới hạn về số token LP WAGYU-BNB mà bạn có thể cam kết. Tuy nhiên sẽ có phí tham gia: xem dưới đây.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Trong Bán cơ bản, mọi người dùng đều có thể cam kết tối đa khoảng 100 USD token LP WAGYU-VLX. Chúng tôi sẽ tính số LP tối đa khoảng 30 phút trước mỗi kỳ IFO. Bán cơ bản không mất phí tham gia.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Trong Bán không giới hạn, không có giới hạn về số token LP WAGYU-VLX mà bạn có thể cam kết. Tuy nhiên sẽ có phí tham gia: xem dưới đây.",
   "Which sale should I commit to? Can I do both?": "Tôi nên cam kết với thương vụ bán nào? Tôi có thể làm cả hai không?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Bạn có thể chọn một thương vụ hoặc cả hai! Nếu bạn chỉ cam kết một số tiền nhỏ, chúng tôi khuyên bạn nên tham gia Bán cơ bản trước. Hãy nhớ rằng bạn cần một Hồ sơ WagyuSwap để tham gia.",
   "How much is the participation fee?": "Phí tham gia là bao nhiêu?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Phí sẽ bắt đầu từ 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Phí tham gia 1% sẽ giảm theo bậc, dựa trên phần trăm tràn từ phần “Không giới hạn” của thương vụ bán.",
   "Where does the participation fee go?": "Phí tham gia này sẽ đi đâu?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Chúng tôi sẽ đốt nó. Token LP WAGYU-BNB từ phí tham gia sẽ được tiêu hủy. Sau đó, chúng tôi sẽ sử dụng phần BNB để mua lượng WAGYU tương ứng theo giá thị trường, và cuối cùng, ném tất cả WAGYU vào đợt đốt token hàng tuần.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Chúng tôi sẽ đốt nó. Token LP WAGYU-VLX từ phí tham gia sẽ được tiêu hủy. Sau đó, chúng tôi sẽ sử dụng phần VLX để mua lượng WAGYU tương ứng theo giá thị trường, và cuối cùng, ném tất cả WAGYU vào đợt đốt token hàng tuần.",
   "How can I get an achievement for participating in the IFO?": "Làm thế nào tôi có thể nhận thành tích tham gia IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Bạn cần đóng góp tối thiểu khoảng 10 USD token LP WAGYU-BNB cho một trong hai thương vụ.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Bạn cần đóng góp tối thiểu khoảng 10 USD token LP WAGYU-VLX cho một trong hai thương vụ.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Bạn có thể đóng góp cho một thương vụ hoặc cả hai, việc này không quan trọng. Chỉ đóng góp tổng quát của bạn sẽ được tính cho thành tích.",
   "The Lottery Is Changing!": "Xổ số đang thay đổi!",
   "Come back soon!": "Hãy sớm quay lại!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Nhập GIẢM",
   "An error occurred, unable to enter your position": "Đã có lỗi xảy ra, không thể nhập vị thế của bạn",
   "Set Position": "Đặt Vị thế",
-  "Insufficient BNB balance": "Số dư BNB không đủ",
+  "Insufficient VLX balance": "Số dư VLX không đủ",
   "A minimum amount of %num% %token% is required": "Cần số lượng tối thiểu là %num% %token%",
   "Enter an amount": "Nhập số lượng",
   "You won’t be able to remove or change your position once you enter it.": "Bạn sẽ không thể xóa hoặc thay đổi vị thế của mình sau khi đã nhập nó.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Hồ sơ Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "của bạn, sau đó đăng ký tham gia cuộc thi bằng cách nhấn nút “TÔI MUỐN CHIẾN ĐẤU” ở trên.",
   "Battle Time": "Thời gian chiến đấu",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Giao dịch BNB/BUSD, WAGYU/BNB, ETH/BNB và BTCB/BNB trong thời gian chiến đấu để tăng điểm của bạn và đội của bạn. Xem phần Quy tắc dưới đây để biết thêm.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Giao dịch VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX trong thời gian chiến đấu để tăng điểm của bạn và đội của bạn. Xem phần Quy tắc dưới đây để biết thêm.",
   "Prize Claim": "Nhận Giải thưởng",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Các nhóm và nhà giao dịch sẽ được xếp hạng theo thứ tự khối lượng giao dịch. Hãy thu thập giải thưởng của bạn và ăn mừng!",
   "Registration starting April 5": "Đăng ký bắt đầu từ ngày 5 tháng 4",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Quyết định này không thể được đảo ngược.",
   "I understand that my address may be displayed publicly throughout the competition.": "Tôi hiểu rằng địa chỉ của mình có thể được hiển thị công khai trong suốt cuộc so tài.",
   "Eligible trading pairs": "Cặp giao dịch đủ điều kiện",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Chỉ các giao dịch cho các cặp BNB/BUSD, WAGYU/BNB, ETH/BNB và BTCB/BNB mới được bao gồm trong tính toán khối lượng.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Chỉ các giao dịch cho các cặp VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX mới được bao gồm trong tính toán khối lượng.",
   "Calculating team ranks and winners": "Đang tính xếp hạng đội và người chiến thắng",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Xếp hạng đội được tính bởi tổng khối lượng kết hợp cho 500 thành viên hàng đầu của mỗi đội.",
   "Prize distribution": "Phân phối giải thưởng",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Làm thế nào tôi có thể nhận giải thưởng của mình?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Sau khi trận chiến kết thúc, vào trang sự kiện và nhấn nút “Nhận giải thưởng” ở phần trên cùng hoặc trong phần “Điểm của bạn”. Sau khi bạn đã nhận thành công giải thưởng của mình, nội dung nút sẽ đổi thành “Giải thưởng đã được nhận”.",
   "Trade to increase your rank": "Giao dịch để tăng xếp hạng của bạn",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Các cặp đủ điều kiện: BNB/BUSD, WAGYU/BNB, ETH/BNB và BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Các cặp đủ điều kiện: VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX",
   "Play as a team": "Chơi như một đội",
   "The higher your team’s rank, the better your prizes": "Xếp hạng của đội bạn càng cao thì giải thưởng của bạn càng lớn hơn",
   "Top Traders": "Nhà giao dịch hàng đầu",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Vui lòng xác thực để truy cập tài khoản của bạn",
   "Unable to find connector": "Không thể tìm thấy đầu nối",
   "The connector config is wrong": "Cấu hình đầu nối bị sai",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Bạn đã đóng góp %amount% token LP WAGYU-BNB vào IFO này!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Bạn sẽ cần token LP WAGYU-BNB để tham gia vào IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Bạn đã đóng góp %amount% token LP WAGYU-VLX vào IFO này!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Bạn sẽ cần token LP WAGYU-VLX để tham gia vào IFO!",
   "Your %symbol% committed": "%symbol% của bạn đã được cam kết",
   "Your %symbol% RECLAIMED": "%symbol% của bạn đã được NHẬN LẠI",
   "Your %symbol% TO RECLAIM": "%symbol% của bạn để NHẬN LẠI",
