--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "批准 WAGYU",
   "IFO: Initial Farm Offerings": "IFO：首次挖矿发行",
   "Buy new tokens with a brand new token sale model.": "使用全新的代币销售模型购买新代币。",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "您将使用 WAGYU-BNB LP 代币来支付新代币的费用，这意味着您需要在流动性资金池中质押等量的 WAGYU 和 BNB 才能参与。",
-  "Get WAGYU-BNB LP >": "获取 WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "此项目获得了 BNB，WagyuSwap 会焚毁 WAGYU。",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "您将使用 WAGYU-VLX LP 代币来支付新代币的费用，这意味着您需要在流动性资金池中质押等量的 WAGYU 和 VLX 才能参与。",
+  "Get WAGYU-VLX LP >": "获取 WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "此项目获得了 VLX，WagyuSwap 会焚毁 WAGYU。",
   "You get the tokens.": "您获得了代币。",
   "Want to launch your own IFO?": "想要发起您自己的 IFO？",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "通过 Binance Smart Chain 上最常用的 AMM 项目和流动性供应商 WagyuSwap 发起您的项目，将您的代币直接引入 BSC 上最活跃且快速发展的社区。",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ 每次您质押和取消质押 LP 代币时，合约都会自动为您收割 WAGYU 奖励！",
   "How to take part": "如何参与",
   "Before Sale": "销售前",
-  "Buy WAGYU and BNB tokens": "购买 WAGYU 和 BNB 代币",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "通过添加 WAGYU 和 BNB 流动性获取 WAGYU-BNB LP 代币",
+  "Buy WAGYU and VLX tokens": "购买 WAGYU 和 VLX 代币",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "通过添加 WAGYU 和 VLX 流动性获取 WAGYU-VLX LP 代币",
   "During Sale": "销售期间",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "在销售过程中，提交您的 WAGYU-LP 代币来购买 IFO 代币",
   "After Sale": "销售后",
@@ -399,14 +399,14 @@
   "Activate your Profile": "激活您的个人资料",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "您需要有效的 Wagyuswap 个人资料才能参与 IFO！",
   "Profile Active!": "个人资料有效！",
-  "Get WAGYU-BNB LP Tokens": "获取 WAGYU-BNB LP 代币",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "在流动性资金池中质押 WAGYU 和 BNB 以获取 LP 代币。",
+  "Get WAGYU-VLX LP Tokens": "获取 WAGYU-VLX LP 代币",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "在流动性资金池中质押 WAGYU 和 VLX 以获取 LP 代币。",
   "You’ll spend them to buy IFO sale tokens.": "您将花费它们来购买 IFO 销售代币。",
   "Commit LP Tokens": "提交 LP 代币",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "在 IFO 销售过程中，您可以“提交”您的 LP 代币以购买正在出售的代币。",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "我们建议您先参与基础销售，但是如果您愿意，可以同时参与两者。",
   "Claim your tokens and achievement": "领取您的代币和成就",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "在 IFO 销售完成后，您可以领取您购买的任何 IFO 代币，任何未花费的 WAGYU-BNB LP 代币都将退回您的钱包。",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "在 IFO 销售完成后，您可以领取您购买的任何 IFO 代币，任何未花费的 WAGYU-VLX LP 代币都将退回您的钱包。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "此回合的平仓交易已提交给区块链，正在等待确认。",
   "No prediction history available": "无可用的预测历史记录",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "如果您确定应该在此处查看历史记录，请确保您已连接到正确的钱包，然后重试。",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "输入后，您将无法取消或调整头寸。",
   "All losses are final.": "所有损失都不可更改。",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "我了解，我使用本产品的风险由我自己承担。由于我的行为而造成的任何损失均由我自己负责。",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "在流动性资金池中质押 WAGYU 和 BNB 以获取 LP 代币。您将花费这些代币来购买 IFO 销售代币。",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "在流动性资金池中质押 WAGYU 和 VLX 以获取 LP 代币。您将花费这些代币来购买 IFO 销售代币。",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "您需要有效的 WagyuSwap 个人资料才能参与 IFO！",
   "Your LP tokens committed": "您的 LP 代币已提交",
   "Max. Committed": "最大参与金额",
@@ -483,8 +483,8 @@
   "Achievement": "成就",
   "Commit ~%minLp% LP in total to earn!": "提交总计 ~%minLp% LP 即可赚取！",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "基础销售和无限销售有什么区别？",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "在基础销售中，每个用户最多可以提交价值约 100 美元的 WAGYU-BNB LP 代币。我们会在每次 IFO 之前约 30 分钟计算最大 LP 金额。基础销售不包含任何参与费用。",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "在无限销售中，您可以提交的 WAGYU-BNB LP 代币金额没有限制。但是，存在参与费用：请参见下文。",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "在基础销售中，每个用户最多可以提交价值约 100 美元的 WAGYU-VLX LP 代币。我们会在每次 IFO 之前约 30 分钟计算最大 LP 金额。基础销售不包含任何参与费用。",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "在无限销售中，您可以提交的 WAGYU-VLX LP 代币金额没有限制。但是，存在参与费用：请参见下文。",
   "Which sale should I commit to? Can I do both?": "我应该参与哪种销售？我可以同时参与两者吗？",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "您可以同时选择一种或两种！如果您只提交较少金额，我们建议先参与基础销售。请记住，您只需要 WagyuSwap 个人资料即可参与。",
   "How much is the participation fee?": "参与费用是多少？",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "起步费用为 1%。",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "1% 的参与费用呈阶梯式下降，具体取决于销售的“无限”部分中溢出的百分比。",
   "Where does the participation fee go?": "参与费用会去往何处？",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "我们会将其焚毁。参与费用中的 WAGYU-BNB LP 代币将被分解。我们随后会使用 BNB 部分在市场上购买等价的 WAGYU，最终将所有 WAGYU 投入到每周的代币焚毁量中。",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "我们会将其焚毁。参与费用中的 WAGYU-VLX LP 代币将被分解。我们随后会使用 VLX 部分在市场上购买等价的 WAGYU，最终将所有 WAGYU 投入到每周的代币焚毁量中。",
   "How can I get an achievement for participating in the IFO?": "如何获得参与 IFO 的成就？",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "您需要为任意一种销售贡献价值至少为约 10 美元的 WAGYU-BNB LP 代币。",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "您需要为任意一种销售贡献价值至少为约 10 美元的 WAGYU-VLX LP 代币。",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "您可以为一种或两种销售做贡献，但这无关紧要。成就仅计算您的整体贡献。",
   "The Lottery Is Changing!": "彩票正在变化！",
   "Come back soon!": "马上回来！",
@@ -570,7 +570,7 @@
   "Enter DOWN": "输入下降",
   "An error occurred, unable to enter your position": "发生错误，无法输入您的头寸",
   "Set Position": "设置头寸",
-  "Insufficient BNB balance": "BNB 余额不足",
+  "Insufficient VLX balance": "VLX 余额不足",
   "A minimum amount of %num% %token% is required": "最少需要 %num% %token% 金额",
   "Enter an amount": "输入金额",
   "You won’t be able to remove or change your position once you enter it.": "输入后，您将无法移除或更改自己的头寸。",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu 个人资料",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "然后点击上方的“我想战斗”报名参赛。",
   "Battle Time": "战斗时间",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在战斗期间交易 BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB，以提高您和您团队的得分。请参阅下面的“规则”部分以了解更多信息。",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在战斗期间交易 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您团队的得分。请参阅下面的“规则”部分以了解更多信息。",
   "Prize Claim": "奖金领取",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "团队和交易者将按交易量排名。收集您的奖金并庆祝！",
   "Registration starting April 5": "注册从 4 月 5 日开始",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "此决定无法撤消。",
   "I understand that my address may be displayed publicly throughout the competition.": "我了解我的地址可能会在整个比赛期间公开显示。",
   "Eligible trading pairs": "符合条件的交易对",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "交易量计算中仅包括 BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB 对的交易。",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量计算中仅包括 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 对的交易。",
   "Calculating team ranks and winners": "正在计算团队排名和获胜者",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "团队排名是根据各自团队中取得排行榜前 500 名的成员的合计交易量计算得出的。",
   "Prize distribution": "奖金分发",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "如何领取奖金？",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "战斗结束后，请访问活动页面，然后点击顶部或“您的分数”部分中的“领取奖金”按钮。成功领取奖金后，按钮文本将变为“已领取奖金”。",
   "Trade to increase your rank": "交易以提高您的排名",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "符合条件的货币对：BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合条件的货币对：VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
   "Play as a team": "以团队形式参与",
   "The higher your team’s rank, the better your prizes": "团队排名越高，奖金就越多",
   "Top Traders": "排名前列的交易者",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "请授权访问您的帐户",
   "Unable to find connector": "无法找到连接器",
   "The connector config is wrong": "连接器配置错误",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "您已经为此 IFO 贡献 %amount% WAGYU-BNB LP LP 代币！",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "您需要 WAGYU-BNB LP 代币才能参与 IFO！",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "您已经为此 IFO 贡献 %amount% WAGYU-VLX LP LP 代币！",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "您需要 WAGYU-VLX LP 代币才能参与 IFO！",
   "Your %symbol% committed": "您的 %symbol% 已提交",
   "Your %symbol% RECLAIMED": "您的 %symbol% 已收回",
   "Your %symbol% TO RECLAIM": "您的 %symbol% 待收回",
