--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Approve WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Buy new tokens with a brand new token sale model.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.",
-  "Get WAGYU-BNB LP >": "Get WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "The project gets the BNB, WagyuSwap burns the WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.",
+  "Get WAGYU-VLX LP >": "Get WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "The project gets the VLX, WagyuSwap burns the WAGYU.",
   "You get the tokens.": "You get the tokens.",
   "Want to launch your own IFO?": "Want to launch your own IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!",
   "How to take part": "How to take part",
   "Before Sale": "Before Sale",
-  "Buy WAGYU and BNB tokens": "Buy WAGYU and BNB tokens",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity",
+  "Buy WAGYU and VLX tokens": "Buy WAGYU and VLX tokens",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity",
   "During Sale": "During Sale",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens",
   "After Sale": "After Sale",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Activate your Profile",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "You’ll need an active WagyuSwap Profile to take part in an IFO!",
   "Profile Active!": "Profile Active!",
-  "Get WAGYU-BNB LP Tokens": "Get WAGYU-BNB LP Tokens",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Stake WAGYU and BNB in the liquidity pool to get LP tokens.",
+  "Get WAGYU-VLX LP Tokens": "Get WAGYU-VLX LP Tokens",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Stake WAGYU and VLX in the liquidity pool to get LP tokens.",
   "You’ll spend them to buy IFO sale tokens.": "You’ll spend them to buy IFO sale tokens.",
   "Commit LP Tokens": "Commit LP Tokens",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "We recommend committing to the Basic Sale first, but you can do both if you like.",
   "Claim your tokens and achievement": "Claim your tokens and achievement",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.",
   "No prediction history available": "No prediction history available",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Once you enter a position, you cannot cancel or adjust it.",
   "All losses are final.": "All losses are final.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "You'll need an active WagyuSwap Profile to take part in an IFO!",
   "Your LP tokens committed": "Your LP tokens committed",
   "Max. Committed": "Max. Committed",
@@ -483,8 +483,8 @@
   "Achievement": "Achievement",
   "Commit ~%minLp% LP in total to earn!": "Commit ~%minLp% LP in total to earn!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "What’s the difference between a Basic Sale and Unlimited Sale?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.",
   "Which sale should I commit to? Can I do both?": "Which sale should I commit to? Can I do both?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.",
   "How much is the participation fee?": "How much is the participation fee?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "The fee will start at 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.",
   "Where does the participation fee go?": "Where does the participation fee go?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.",
   "How can I get an achievement for participating in the IFO?": "How can I get an achievement for participating in the IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.",
   "The Lottery Is Changing!": "The Lottery Is Changing!",
   "Come back soon!": "Come back soon!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Enter DOWN",
   "An error occurred, unable to enter your position": "An error occurred, unable to enter your position",
   "Set Position": "Set Position",
-  "Insufficient BNB balance": "Insufficient BNB balance",
+  "Insufficient VLX balance": "Insufficient VLX balance",
   "A minimum amount of %num% %token% is required": "A minimum amount of %num% %token% is required",
   "Enter an amount": "Enter an amount",
   "You won’t be able to remove or change your position once you enter it.": "You won’t be able to remove or change your position once you enter it.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu Profile",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "then register for the competition by clicking “I WANT TO BATTLE” button above.",
   "Battle Time": "Battle Time",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.",
   "Prize Claim": "Prize Claim",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!",
   "Registration starting April 5": "Registration starting April 5",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "This decision cannot be reversed.",
   "I understand that my address may be displayed publicly throughout the competition.": "I understand that my address may be displayed publicly throughout the competition.",
   "Eligible trading pairs": "Eligible trading pairs",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.",
   "Calculating team ranks and winners": "Calculating team ranks and winners",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.",
   "Prize distribution": "Prize distribution",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "How do I claim my prize(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.",
   "Trade to increase your rank": "Trade to increase your rank",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX",
   "Play as a team": "Play as a team",
   "The higher your team’s rank, the better your prizes": "The higher your team’s rank, the better your prizes",
   "Top Traders": "Top Traders",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Please authorize to access your account",
   "Unable to find connector": "Unable to find connector",
   "The connector config is wrong": "The connector config is wrong",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "You’ll need WAGYU-BNB LP tokens to participate in the IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "You’ll need WAGYU-VLX LP tokens to participate in the IFO!",
   "Your %symbol% committed": "Your %symbol% committed",
   "Your %symbol% RECLAIMED": "Your %symbol% RECLAIMED",
   "Your %symbol% TO RECLAIM": "Your %symbol% TO RECLAIM",
