--- a/public/locales/ar-SA.json
+++ b/public/locales/ar-SA.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "الموافقة على WAGYU",
   "IFO: Initial Farm Offerings": "IFO: العرض الأولي للمزرعة",
   "Buy new tokens with a brand new token sale model.": "يمكنك شراء رموز مميزة جديدة من خلال نموذج جديد تمامًا لبيع الرموز المميزة.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "ستدفع ثمن الرموز المميزة الجديدة باستخدام رموز WAGYU-BNB LP المميزة، ما يعني أنك بحاجة إلى رهن كميات متساوية من WAGYU وBNB في تجمُّعٍ للسيولة من أجل المشاركة.",
-  "Get WAGYU-BNB LP >": "الحصول على WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "يحصل المشروع على BNB ويقوم WagyuSwap بحرق WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "ستدفع ثمن الرموز المميزة الجديدة باستخدام رموز WAGYU-VLX LP المميزة، ما يعني أنك بحاجة إلى رهن كميات متساوية من WAGYU وVLX في تجمُّعٍ للسيولة من أجل المشاركة.",
+  "Get WAGYU-VLX LP >": "الحصول على WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "يحصل المشروع على VLX ويقوم WagyuSwap بحرق WAGYU.",
   "You get the tokens.": "وتحصل أنت على الرموز المميزة.",
   "Want to launch your own IFO?": "هل تريد إطلاق IFO الخاص بك؟",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "أطلق مشروعك مع WagyuSwap، وهو مشروع AMM (صانع سوق آلي) وموفِّر السيولة الأكثر استخدامًا على Binance Smart Chain، لإحضار رمزك المميز مباشرةً إلى أكثر المجتمعات نشاطًا وسرعةً في النمو على BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ في كل مرة ترهن فيها رموز LP المميزة أو تفك رهنها، سيحصد عقدك مكافآت WAGYU تلقائيًا من أجلك!",
   "How to take part": "كيفية المشاركة",
   "Before Sale": "قبل البيع",
-  "Buy WAGYU and BNB tokens": "شراء رموز WAGYU وBNB المميزة",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "احصل على رموز WAGYU-BNB LP المميزة عن طريق إضافة سيولة من WAGYU وBNB.",
+  "Buy WAGYU and VLX tokens": "شراء رموز WAGYU وVLX المميزة",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "احصل على رموز WAGYU-VLX LP المميزة عن طريق إضافة سيولة من WAGYU وVLX.",
   "During Sale": "خلال البيع",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "بينما يكون البيع جاريًا، استخدام رموز WAGYU-LP المميزة لشراء رموز IFO (العرض الأولي للمزرعة) المميزة.",
   "After Sale": "بعد البيع",
@@ -399,14 +399,14 @@
   "Activate your Profile": "تنشيط ملفك التعريفي",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "ستحتاج إلى ملف تعريفي نشط في WagyuSwap للمشاركة في IFO!",
   "Profile Active!": "الملف التعريفي نشط!",
-  "Get WAGYU-BNB LP Tokens": "الحصول على رموز WAGYU-BNB LP المميزة",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "ارهن WAGYU وBNB في تجمُّع السيولة للحصول على رموز LP المميزة.",
+  "Get WAGYU-VLX LP Tokens": "الحصول على رموز WAGYU-VLX LP المميزة",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "ارهن WAGYU وVLX في تجمُّع السيولة للحصول على رموز LP المميزة.",
   "You’ll spend them to buy IFO sale tokens.": "ستنفقها لشراء رموز بيع IFO المميزة.",
   "Commit LP Tokens": "تخصيص رموز LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "عندما تكون عمليات بيع IFO جارية، خصِّص رموز WAGYU-LP المميزة لشراء رموز IFO المميزة.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "نوصيك بالتخصيص لعملية البيع الأساسية أولًا، ولكن يمكنك القيام بالأمرين معًا إذا أردت.",
   "Claim your tokens and achievement": "المطالبة برموزك المميزة والإنجازات",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "بعد انتهاء عمليات بيع IFO الأساسية، يمكنك المطالبة بأي رموز IFO مميزة اشتريتها، وستتم إعادة أي رموز WAGYU-BNB LP لم تنفقها إلى محفظتك.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "بعد انتهاء عمليات بيع IFO الأساسية، يمكنك المطالبة بأي رموز IFO مميزة اشتريتها، وستتم إعادة أي رموز WAGYU-VLX LP لم تنفقها إلى محفظتك.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "تم إرسال معاملة الإغلاق لهذه الجولة إلى سلسلة الكتل، وفي انتظار التأكيد.",
   "No prediction history available": "لا يتوفَّر سجل تنبؤات",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "إذا كنت واثقًا أنه من المفترض عرض سجل هنا، فتأكَّد من ربطك للمحفظة الصحيحة وحاول مجددًا.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "لا يمكنك إدخال أو تعديل مبلغ الرهان بعد إدخاله.",
   "All losses are final.": "جميع الخسائر نهائية.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "أتفهم أنني أستخدم هذا المنتج على مسؤوليتي الشخصية، وأن أي خسارة بسبب إجراءاتي هي مسؤوليتي الخاصة.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "ارهن WAGYU وBNB في تجمُّع السيولة للحصول على رموز LP المميزة. ستنفقها لشراء رموز بيع IFO المميزة.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "ارهن WAGYU وVLX في تجمُّع السيولة للحصول على رموز LP المميزة. ستنفقها لشراء رموز بيع IFO المميزة.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "ستحتاج إلى ملف تعريفي نشط في WagyuSwap للمشاركة في IFO!",
   "Your LP tokens committed": "رموز LP المميزة التي خصَّصتها",
   "Max. Committed": "الحد الأقصى للتخصيص",
@@ -483,8 +483,8 @@
   "Achievement": "الإنجاز",
   "Commit ~%minLp% LP in total to earn!": "خصِّص ~%minLp% من LP إجمالًا للربح!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "ما الفارق بين البيع الأساسي والبيع غير المحدود؟",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "في البيع الأساسي، يخصِّص كل مستخدم رموز WAGYU-BNB LP المميزة بقيمة 100 دولار أمريكي تقريبًا كحدٍ أقصى. ونحتسب أقصى عدد من LP قبل 30 دقيقة تقريبًا من كل IFO. لا يتضمَّن البيع الأساسي رسوم اشتراك.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "في البيع غير المحدود، لا يوجد حد لعدد رموز WAGYU-BNB LP المميزة التي يمكنك تخصيصها، ولكن توجد رسوم للمشاركة: انظر أدناه.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "في البيع الأساسي، يخصِّص كل مستخدم رموز WAGYU-VLX LP المميزة بقيمة 100 دولار أمريكي تقريبًا كحدٍ أقصى. ونحتسب أقصى عدد من LP قبل 30 دقيقة تقريبًا من كل IFO. لا يتضمَّن البيع الأساسي رسوم اشتراك.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "في البيع غير المحدود، لا يوجد حد لعدد رموز WAGYU-VLX LP المميزة التي يمكنك تخصيصها، ولكن توجد رسوم للمشاركة: انظر أدناه.",
   "Which sale should I commit to? Can I do both?": "أي بيع يجدر بي تخصيص الرموز المميزة له؟ هل يمكنني التخصيص لكليهما؟",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "يمكنك اختيار أحدهما أو كليهما في الوقت نفسه! إذا كنت تخصِّص مقدارًا صغيرًا فقط، فإننا نوصي بالبيع الأساسي. تذكَّر فقط أنك بحاجة إلى ملف تعريفي في WagyuSwap للمشاركة.",
   "How much is the participation fee?": "كم تبلغ رسوم المشاركة؟",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "ستبدأ الرسوم من 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "تنخفض رسوم المشاركة البالغة 1% عند المنحدرات بناءً على نسبة الفائض من الحصة \"غير المحدودة\" من البيع.",
   "Where does the participation fee go?": "أين تذهب رسوم المشاركة؟",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "إننا نحرقها. ستتحلل رموز WAGYU-BNB LP المميزة المستمدة من رسوم المشاركة، ثم سنستخدم حصة BNB لشراء مكافئ WAGYU في السوق، وأخيرًا سنلقي كل WAGYU في حرق الرموز المميزة الأسبوعي.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "إننا نحرقها. ستتحلل رموز WAGYU-VLX LP المميزة المستمدة من رسوم المشاركة، ثم سنستخدم حصة VLX لشراء مكافئ WAGYU في السوق، وأخيرًا سنلقي كل WAGYU في حرق الرموز المميزة الأسبوعي.",
   "How can I get an achievement for participating in the IFO?": "كيف يمكنني تحقيق إنجاز من المشاركة في IFO؟",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "أنت بحاجة إلى المساهمة برموز WAGYU-BNB LP المميزة بقيمة 10 دولارت أمريكية تقريبًا في أحد نوعي البيع.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "أنت بحاجة إلى المساهمة برموز WAGYU-VLX LP المميزة بقيمة 10 دولارت أمريكية تقريبًا في أحد نوعي البيع.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "يمكنك المساهمة في أحدهما أو كليهما، لا يهم. سيتم الأخذ بمساهمتك الإجمالية فقط في الإنجاز.",
   "The Lottery Is Changing!": "اليانصيب قيد التغيير!",
   "Come back soon!": "تحقَّق قريبًا!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "إدخال \"للأسفل\"",
   "An error occurred, unable to enter your position": "حدث خطأ، ويتعذَّر إدخال مبلغ الرهان",
   "Set Position": "تحديد مبلغ الرهان",
-  "Insufficient BNB balance": "رصيد BNB غير كافٍ",
+  "Insufficient VLX balance": "رصيد VLX غير كافٍ",
   "A minimum amount of %num% %token% is required": "يلزم توفير الحد الأدنى %num% %token%",
   "Enter an amount": "إدخال كمية",
   "You won’t be able to remove or change your position once you enter it.": "لن تتمكَّن من إزالة مبلغ الرهان أو تغييره بعد إدخاله.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "الملف التعريفي في Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "ثم سجِّل في المسابقة بالنقر على زر \"أريد خوض المعركة\" أعلاه.",
   "Battle Time": "وقت المعركة",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "تداول BNB/BUSD، وWAGYU/BNB، وETH/BNB، وBTCB/BNB خلال فترة المعركة لتعزيز نتيجتك ونتيجة فريقك. انظر قسم القواعد أدناه لمعرفة المزيد.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "تداول VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX خلال فترة المعركة لتعزيز نتيجتك ونتيجة فريقك. انظر قسم القواعد أدناه لمعرفة المزيد.",
   "Prize Claim": "المطالبة بالجائزة",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "سيتم ترتيب الفريق والمتداولين حسب حجم التداول. قم بتحصيل جوائزك واحتفل!",
   "Registration starting April 5": "سيبدأ التسجيل في 5 أبريل",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "لن يتم التراجع عن هذا القرار.",
   "I understand that my address may be displayed publicly throughout the competition.": "أتفهم أن عنواني قد يتم عرضه علنًا خلال فترة المسابقة.",
   "Eligible trading pairs": "أزواج التداول المؤهلة",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "سيتم تضمين التداولات على BNB/BUSD، وWAGYU/BNB، وETH/BNB، وBTCB/BNB فقط في حسابات حجم التداول.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "سيتم تضمين التداولات على VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX فقط في حسابات حجم التداول.",
   "Calculating team ranks and winners": "حساب ترتيبات الفرق والفائزين",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "يتم حساب ترتيبات الفرق من خلال إجمالي حجم التداول المجمَّع لأعلى 500 عضو في كل فريق.",
   "Prize distribution": "توزيع الجوائز",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "كيف يمكنني المطالبة بجائزتي؟",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "بعد انتهاء المعركة، قم بزيارة صفحة الفعالية وانقر على زر \"المطالبة بالجوائز\" في القسم العلوي أو في قسم \"نتيجتك\". بعد المطالبة بجوائزك بنجاح، سيتغيَّر نص الزر إلى \"تمت المطلبة بالجوائز\".",
   "Trade to increase your rank": "تداول لزيادة ترتيبك",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "الأزواج المؤهلة: BNB/BUSD، وWAGYU/BNB، وETH/BNB، وBTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "الأزواج المؤهلة: VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX",
   "Play as a team": "العب ضمن فريق",
   "The higher your team’s rank, the better your prizes": "كلما ارتفع ترتيب فريقك، أصبحت جوائزك أفضل",
   "Top Traders": "أفضل المتداولين",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "يُرجى المصادقة للوصول إلى حسابك",
   "Unable to find connector": "يتعذَّر العثور على موصل",
   "The connector config is wrong": "تهيئة الموصل غير صحيحة",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "لقد ساهمت بعدد %amount% من رموز WAGYU-BNB LP المميزة في IFO هذا!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "ستحتاج إلى رموز WAGYU-BNB LP المميزة للمشاركة في IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "لقد ساهمت بعدد %amount% من رموز WAGYU-VLX LP المميزة في IFO هذا!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "ستحتاج إلى رموز WAGYU-VLX LP المميزة للمشاركة في IFO!",
   "Your %symbol% committed": "تم تخصيص %symbol%",
   "Your %symbol% RECLAIMED": "تمت استعادة %symbol%",
   "Your %symbol% TO RECLAIM": "%symbol% لاستعادتها",
