--- a/public/locales/de-DE.json
+++ b/public/locales/de-DE.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU genehmigen",
   "IFO: Initial Farm Offerings": "IFO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Kaufen Sie neue Tokens mit einem brandneuen Token-Verkaufsmodell.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Sie werden für die neuen Tokens mit WAGYU-BNB LP-Tokens bezahlen. Das bedeutet, dass Sie gleiche Mengen an WAGYU und BNB in einem Liquiditätspool einsetzen müssen, um teilzunehmen.",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP kaufen >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Das Projekt erzielt BNB, WagyuSwap vernichtet WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Sie werden für die neuen Tokens mit WAGYU-VLX LP-Tokens bezahlen. Das bedeutet, dass Sie gleiche Mengen an WAGYU und VLX in einem Liquiditätspool einsetzen müssen, um teilzunehmen.",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP kaufen >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Das Projekt erzielt VLX, WagyuSwap vernichtet WAGYU.",
   "You get the tokens.": "Sie erhalten die Tokens.",
   "Want to launch your own IFO?": "Möchten Sie Ihr eigenes IFO starten?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Starten Sie Ihr Projekt mit WagyuSwap, dem meistgenutzten AMM-Projekt und Liquiditätsanbieter von Binance Smart Chain, um Ihren Token direkt in die aktivste und schnell wachsende Community in der BSC zu bringen.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "Jedes Mal, wenn Sie LP-Tokens einsetzen bzw. den Einsatz aufheben, bringt Ihnen der Contract automatisch WAGYU-Belohnungen ein!",
   "How to take part": "Wie man teilnimmt",
   "Before Sale": "Vor dem Verkauf",
-  "Buy WAGYU and BNB tokens": "WAGYU- und BNB-Tokens kaufen",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Erhalten Sie WAGYU-BNB LP-Token, indem Sie WAGYU- und BNB-Liquidität hinzufügen",
+  "Buy WAGYU and VLX tokens": "WAGYU- und VLX-Tokens kaufen",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Erhalten Sie WAGYU-VLX LP-Token, indem Sie WAGYU- und VLX-Liquidität hinzufügen",
   "During Sale": "Während des Verkaufs",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Während der Verkauf stattfindet, kaufen Sie mit Ihren WAGYU-LP-Tokens IFO-Tokens",
   "After Sale": "Nach dem Verkauf",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Aktivieren Sie Ihr Profil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Sie benötigen ein aktives WagyuSwap-Profil, um an einem IFO teilzunehmen!",
   "Profile Active!": "Profil aktiv!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP-Tokens kaufen",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Setzen Sie WAGYU und BNB in den Liquiditäts-Pool ein, um LP-Tokens zu erhalten.",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP-Tokens kaufen",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Setzen Sie WAGYU und VLX in den Liquiditäts-Pool ein, um LP-Tokens zu erhalten.",
   "You’ll spend them to buy IFO sale tokens.": "Sie werden sie ausgeben, um IFO-Verkaufs-Token zu kaufen.",
   "Commit LP Tokens": "LP-Tokens einsetzen",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Wenn die IFO-Verkäufe live sind, können Sie Ihre LP-Token \"festlegen\", um die verkauften Token zu kaufen.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Wir empfehlen, sich zuerst für den Basisverkauf zu entscheiden, aber Sie können auch beides machen, wenn Sie möchten.",
   "Claim your tokens and achievement": "Beanspruchen Sie Ihre Token und Achievement",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Nach dem Ende des IFO-Verkaufs können Sie alle IFO-Tokens einfordern, die Sie gekauft haben, und alle nicht ausgegebenen WAGYU-BNB LP-Tokens gehen in Ihr Wallet zurück.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Nach dem Ende des IFO-Verkaufs können Sie alle IFO-Tokens einfordern, die Sie gekauft haben, und alle nicht ausgegebenen WAGYU-VLX LP-Tokens gehen in Ihr Wallet zurück.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Die abschließende Transaktion dieser Runde wurde an die Blockchain übermittelt und wartet darauf, bestätigt zu werden.",
   "No prediction history available": "Kein Prognoseverlauf verfügbar",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Wenn Sie sicher sind, dass Sie hier einen Verlauf sehen sollten, stellen Sie sicher, dass Sie mit dem richtigen Wallet verbunden sind, und versuchen Sie es erneut.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Sobald Sie eine Position eingetragen haben, können Sie sie nicht mehr stornieren oder anpassen.",
   "All losses are final.": "Alle Verluste sind endgültig.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Ich verstehe, dass ich dieses Produkt auf eigene Gefahr benutze. Für Schäden, die durch meine Handlungen entstehen, bin ich selbst verantwortlich.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Setzen Sie WAGYU und BNB in den Liquiditätspool ein, um LP-Tokens zu erhalten. Diese können Sie für den Kauf von IFO-Verkaufs-Token ausgeben.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Setzen Sie WAGYU und VLX in den Liquiditätspool ein, um LP-Tokens zu erhalten. Diese können Sie für den Kauf von IFO-Verkaufs-Token ausgeben.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Sie benötigen ein aktives WagyuSwap-Profil, um an einem IFO teilzunehmen!",
   "Your LP tokens committed": "Eingesetzte LP-Tokens",
   "Max. Committed": "Max. eingesetzt",
@@ -483,8 +483,8 @@
   "Achievement": "Leistung",
   "Commit ~%minLp% LP in total to earn!": "Setzen Sie insgesamt ~%minLp% LP zum Verdienen ein!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Was ist der Unterschied zwischen einem Basic Sale und einem Unlimited Sale?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Im Basic Sale kann jeder Nutzer maximal ca. 100 USD an WAGYU-BNB LP Token einsetzen. Wir berechnen den maximalen LP-Betrag etwa 30 Minuten vor jedem IFO. Der Basic Sale hat keine Teilnahmegebühr.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Beim Unlimited Sale gibt es kein Limit für die Anzahl der WAGYU-BNB LP Token, die Sie einsetzen können. Allerdings gibt es eine Gebühr für die Teilnahme: siehe unten.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Im Basic Sale kann jeder Nutzer maximal ca. 100 USD an WAGYU-VLX LP Token einsetzen. Wir berechnen den maximalen LP-Betrag etwa 30 Minuten vor jedem IFO. Der Basic Sale hat keine Teilnahmegebühr.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Beim Unlimited Sale gibt es kein Limit für die Anzahl der WAGYU-VLX LP Token, die Sie einsetzen können. Allerdings gibt es eine Gebühr für die Teilnahme: siehe unten.",
   "Which sale should I commit to? Can I do both?": "Für welchen Verkauf soll ich mich entscheiden? Kann ich beides machen?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Sie können einen oder beide gleichzeitig wählen! Wenn Sie nur einen kleinen Betrag beisteuern wollen, empfehlen wir zuerst den Basic Sale. Denken Sie nur daran, dass Sie ein WagyuSwap-Profil für die Teilnahme benötigen.",
   "How much is the participation fee?": "Wie hoch ist die Teilnahmegebühr?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Die Gebühr beginnt bei 1 %.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Die Teilnahmegebühr von 1 % sinkt in Stufen, basierend auf dem Prozentsatz des Überlaufs aus dem Unlimited Sale.",
   "Where does the participation fee go?": "Wohin fließt die Teilnahmegebühr?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Wir verbrennen sie. Die WAGYU-BNB LP-Token aus der Teilnahmegebühr werden zerlegt, dann verwenden wir den BNB-Anteil, um das WAGYU-Äquivalent auf dem Markt zu kaufen, und werfen dann schließlich alle WAGYU in die wöchentliche Token-Verbrennung.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Wir verbrennen sie. Die WAGYU-VLX LP-Token aus der Teilnahmegebühr werden zerlegt, dann verwenden wir den VLX-Anteil, um das WAGYU-Äquivalent auf dem Markt zu kaufen, und werfen dann schließlich alle WAGYU in die wöchentliche Token-Verbrennung.",
   "How can I get an achievement for participating in the IFO?": "Wie kann ich eine Leistung für die Teilnahme an der IFO erhalten?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Sie müssen bei beiden Verkäufen mindestens ca. 10 USD an WAGYU-BNB LP Token einbringen.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Sie müssen bei beiden Verkäufen mindestens ca. 10 USD an WAGYU-VLX LP Token einbringen.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Sie können zu einem oder beiden beitragen, es spielt keine Rolle: nur Ihr Gesamtbeitrag wird für die Leistung gezählt.",
   "The Lottery Is Changing!": "Die Lotterie ändert sich!",
   "Come back soon!": "Kommen Sie bald wieder!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "RUNTER eingeben",
   "An error occurred, unable to enter your position": "Es ist ein Fehler aufgetreten, Ihre Position kann nicht eingegeben werden",
   "Set Position": "Position festlegen",
-  "Insufficient BNB balance": "Unzureichendes BNB-Guthaben",
+  "Insufficient VLX balance": "Unzureichendes VLX-Guthaben",
   "A minimum amount of %num% %token% is required": "Ein Mindestbetrag von %num% %token% ist erforderlich",
   "Enter an amount": "Geben Sie einen Betrag ein",
   "You won’t be able to remove or change your position once you enter it.": "Sie können Ihre Position nicht mehr entfernen oder ändern, wenn Sie sie einmal eingegeben haben.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-Profil ein,",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "dann registrieren Sie sich für den Wettbewerb, indem Sie oben auf die Schaltfläche „I WANT TO BATTLE“ klicken.",
   "Battle Time": "Battle Time",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handeln Sie BNB/BUSD, WAGYU/BNB, ETH/BNB und BTCB/BNB während der Kampfperiode, um Ihren Punktestand und den Ihres Teams zu erhöhen. Weitere Informationen finden Sie im Abschnitt „Regeln“ weiter unten.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handeln Sie VLX/BUSD, WAGYU/VLX, ETH/VLX und BTCB/VLX während der Kampfperiode, um Ihren Punktestand und den Ihres Teams zu erhöhen. Weitere Informationen finden Sie im Abschnitt „Regeln“ weiter unten.",
   "Prize Claim": "Preis beanspruchen",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Die Teams und Händler werden in der Reihenfolge des Handelsvolumens gereiht. Sammeln Sie Ihre Preise und feiern Sie!",
   "Registration starting April 5": "Anmeldung ab 5. April",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Diese Entscheidung kann nicht rückgängig gemacht werden.",
   "I understand that my address may be displayed publicly throughout the competition.": "Mir ist bekannt, dass meine Adresse während des Wettbewerbs öffentlich angezeigt werden kann.",
   "Eligible trading pairs": "Geeignete Handelspaare",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Nur Trades mit den Paaren BNB/BUSD, WAGYU/BNB, ETH/BNB und BTCB/BNB werden in die Volumenberechnung einbezogen.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Nur Trades mit den Paaren VLX/BUSD, WAGYU/VLX, ETH/VLX und BTCB/VLX werden in die Volumenberechnung einbezogen.",
   "Calculating team ranks and winners": "Berechnen von Teamrängen und Gewinnern",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Die Teamränge werden durch das kombinierte Gesamtvolumen der 500 besten Mitglieder des jeweiligen Teams berechnet.",
   "Prize distribution": "Preisverteilung",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Wie fordere ich meine(n) Preis(e) an?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Besuchen Sie nach dem Ende des Kampfes die Eventseite und klicken Sie im oberen Bereich oder im Bereich „Your Score“ (Ihr Ergebnis) auf die Schaltfläche „Claim Prizes“ (Preis beanspruchen). Sobald Sie Ihre Preise erfolgreich beansprucht haben, ändert sich der Text der Schaltfläche in „Prizes Claimed“ (Beanspruchte Preise).",
   "Trade to increase your rank": "Handeln Sie, um Ihren Rang zu erhöhen",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Zulässige Paare: BNB/BUSD, WAGYU/BNB, ETH/BNB und BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Zulässige Paare: VLX/BUSD, WAGYU/VLX, ETH/VLX und BTCB/VLX",
   "Play as a team": "Als Team spielen",
   "The higher your team’s rank, the better your prizes": "Je höher der Rang Ihres Teams, desto besser Ihre Preise",
   "Top Traders": "Top-Händler",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Bitte autorisieren Sie sich für den Zugriff auf Ihr Konto",
   "Unable to find connector": "Kann den Connector nicht finden",
   "The connector config is wrong": "Die Connector-Konfiguration ist falsch",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Sie haben %amount% WAGYU-BNB LP Token zu diesem IFO beigetragen!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Für die Teilnahme am IFO benötigen Sie WAGYU-BNB LP-Token!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Sie haben %amount% WAGYU-VLX LP Token zu diesem IFO beigetragen!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Für die Teilnahme am IFO benötigen Sie WAGYU-VLX LP-Token!",
   "Your %symbol% committed": "Ihre eingesetzten %symbol%",
   "Your %symbol% RECLAIMED": "Ihre zurückgeforderten %symbol%",
   "Your %symbol% TO RECLAIM": "Ihre zurückzufordernden %symbol%",
