--- a/public/locales/es-ES.json
+++ b/public/locales/es-ES.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU aprobado",
   "IFO: Initial Farm Offerings": "IFO: Oferta inicial de la granja",
   "Buy new tokens with a brand new token sale model.": "Compra nuevos tokens con un nuevo modelo de venta de tokens.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "El pago de los nuevos tokens se realizará con tokens WAGYU-BNB LP, lo que significa que para participar hay que invertir cantidades iguales de WAGYU y BNB en un pool de liquidez.",
-  "Get WAGYU-BNB LP >": "Obtén WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "El proyecto obtiene los BNB, WagyuSwap quema los WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "El pago de los nuevos tokens se realizará con tokens WAGYU-VLX LP, lo que significa que para participar hay que invertir cantidades iguales de WAGYU y VLX en un pool de liquidez.",
+  "Get WAGYU-VLX LP >": "Obtén WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "El proyecto obtiene los VLX, WagyuSwap quema los WAGYU.",
   "You get the tokens.": "Tú obtienes los tokens.",
   "Want to launch your own IFO?": "¿Deseas lanzar tu propio IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lanza tu proyecto con WagyuSwap, el proyecto AMM más utilizado de Binance Smart Chain y distribuidor de liquidez, para llevar tu token directamente a la comunidad más activa y de rápido crecimiento en BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Cada vez que inviertas o retires tokens LP, ¡el contrato inteligente automáticamente cosechará las recompensas de WAGYU para ti!",
   "How to take part": "Cómo participar",
   "Before Sale": "Antes de la venta",
-  "Buy WAGYU and BNB tokens": "Compra WAGYU y tokens BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Obtén tokens WAGYU-BNB LP agregando liquidez en WAGYU y BNB",
+  "Buy WAGYU and VLX tokens": "Compra WAGYU y tokens VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Obtén tokens WAGYU-VLX LP agregando liquidez en WAGYU y VLX",
   "During Sale": "Durante la venta",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Mientras la venta esté activa, asigna tus tokens WAGYU-LP para comprar los tokens IFO",
   "After Sale": "Posventa",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Activa tu perfil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "¡Para participar en un IFO debes tener un perfil activo en WagyuSwap!",
   "Profile Active!": "¡Perfil activo!",
-  "Get WAGYU-BNB LP Tokens": "Obtén tokens WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Invierte WAGYU y BNB en la liquidez del pool para obtener tokens LP.",
+  "Get WAGYU-VLX LP Tokens": "Obtén tokens WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Invierte WAGYU y VLX en la liquidez del pool para obtener tokens LP.",
   "You’ll spend them to buy IFO sale tokens.": "Los gastarás para comprar tokens de venta IFO.",
   "Commit LP Tokens": "Asignar tokens LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Cuando las ventas de IFO estén en curso, puedes \"asignar\" tus tokens LP para comprar los tokens que se hayan vendido.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Te recomendamos que primero asignes la Venta básica, pero puedes hacer ambas cosas si lo prefieres.",
   "Claim your tokens and achievement": "Reclama tus tokens y logros",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Cuando concluyan las ventas de IFO, podrás recuperar cualquier token IFO que hayas comprado, y cualquier token WAGYU-BNB LP sin gastar se devolverá a tu monedero.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Cuando concluyan las ventas de IFO, podrás recuperar cualquier token IFO que hayas comprado, y cualquier token WAGYU-VLX LP sin gastar se devolverá a tu monedero.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "El cierre de la transacción para esta ronda se envió a la cadena de bloques y está en espera de la confirmación.",
   "No prediction history available": "No hay un historial de predicciones disponible",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Si estás seguro de que deberías ver un historial aquí, asegúrate de estár conectado en el monedero correcto y vuelve a intentarlo.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Una vez que ingresas una posición, no puedes cancelarla ni modificarla.",
   "All losses are final.": "Todas las pérdidas son definitivas.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Entiendo que estoy utilizando este producto bajo mi propio riesgo. Cualquier pérdida que resulte debido a mis acciones, es responsabilidad mía.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Invierte WAGYU y BNB en el pool de liquidez para obtener tokens LP. Los gastarás para comprar tokens de venta IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Invierte WAGYU y VLX en el pool de liquidez para obtener tokens LP. Los gastarás para comprar tokens de venta IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "¡Para participar en un IFO debes tener un perfil activo en WagyuSwap!",
   "Your LP tokens committed": "Tus tokens LP asignados",
   "Max. Committed": "Cantidad máxima asignada",
@@ -483,8 +483,8 @@
   "Achievement": "Logro",
   "Commit ~%minLp% LP in total to earn!": "¡Asigna ~%minLp% LP en total para ganar!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "¿Cuál es la diferencia entre una venta básica y una venta ilimitada?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "En una venta básica, cada usuario puede asignar un máximo de 100 dólares en tokens WAGYU-BNB LP. Calculamos la cantidad máxima de LP aproximadamente 30 minutos antes de cada IFO. La venta básica no incluye ninguna cuota por participación.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "En una venta ilimitada, no hay límite en la cantidad de tokens WAGYU-BNB LP que puedes asignar. Sin embargo, hay una comisión por participación: consulta cuál es a continuación.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "En una venta básica, cada usuario puede asignar un máximo de 100 dólares en tokens WAGYU-VLX LP. Calculamos la cantidad máxima de LP aproximadamente 30 minutos antes de cada IFO. La venta básica no incluye ninguna cuota por participación.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "En una venta ilimitada, no hay límite en la cantidad de tokens WAGYU-VLX LP que puedes asignar. Sin embargo, hay una comisión por participación: consulta cuál es a continuación.",
   "Which sale should I commit to? Can I do both?": "¿Cuál es la venta que debo realizar? ¿Puedo hacer ambas cosas?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Puedes participar en una o en ambas ventas al mismo tiempo. Si solo vas a comprometerte con una pequeña cantidad, te recomendamos que realices primero la venta básica. Recuerda que necesitas un perfil de WagyuSwap para poder participar.",
   "How much is the participation fee?": "¿Cuánto cuesta la comisión por participación?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "La comisión será a partir del 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "La comisión por participación del 1% disminuye en los momentos de peligro, según el porcentaje que exceda la parte \"ilimitada\" de la venta.",
   "Where does the participation fee go?": "¿A dónde se destina la comisión por participación?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Los quemamos. Los tokens WAGYU-BNB LP de la comisión por participación se desglosarán, después utilizaremos la parte del BNB para comprar el equivalente en WAGYU en el mercado, y finalmente lanzaremos todo el WAGYU en la quema semanal de tokens.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Los quemamos. Los tokens WAGYU-VLX LP de la comisión por participación se desglosarán, después utilizaremos la parte del VLX para comprar el equivalente en WAGYU en el mercado, y finalmente lanzaremos todo el WAGYU en la quema semanal de tokens.",
   "How can I get an achievement for participating in the IFO?": "¿Cómo puedo obtener un logro por participar en la IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Necesitas contribuir con un mínimo de 10 dólares en los tokens WAGYU-BNB LP que están a la venta.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Necesitas contribuir con un mínimo de 10 dólares en los tokens WAGYU-VLX LP que están a la venta.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Puedes contribuir en uno o en ambos, no importa. Solo se toma en cuenta tu contribución global para obtener el logro.",
   "The Lottery Is Changing!": "¡La lotería está cambiando!",
   "Come back soon!": "¡Regresa pronto!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Ingresar MENOS",
   "An error occurred, unable to enter your position": "Ocurrió un error, no se puede ingresar tu posición",
   "Set Position": "Establecer la posición",
-  "Insufficient BNB balance": "El saldo BNB es insuficiente",
+  "Insufficient VLX balance": "El saldo VLX es insuficiente",
   "A minimum amount of %num% %token% is required": "Se requiere una cantidad mínima de %num% %token%",
   "Enter an amount": "Escribe una cantidad",
   "You won’t be able to remove or change your position once you enter it.": "No podrás eliminar o modificar tu posición una vez que la hayas ingresado.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil de Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "luego, regístrate en la competencia haciendo clic en el botón de arriba \"QUIERO IR A LA BATALLA\".",
   "Battle Time": "Hora de la batalla",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocia con BNB/BUSD, WAGYU BNB, ETH/BNB y BTCB/BNB en el tiempo que dure la batalla para aumentar tanto la puntuación de tu equipo como la tuya. Para obtener más información, consulta la sección Reglas.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocia con VLX/BUSD, WAGYU VLX, ETH/VLX y BTCB/VLX en el tiempo que dure la batalla para aumentar tanto la puntuación de tu equipo como la tuya. Para obtener más información, consulta la sección Reglas.",
   "Prize Claim": "Cobrar premio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Los equipos y los traders se clasificarán por el orden del volumen de operaciones. ¡Recoge tus premios y celebra!",
   "Registration starting April 5": "La inscripción inicia el 5 de abril",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Esta decisión no podrá revertirse.",
   "I understand that my address may be displayed publicly throughout the competition.": "Entiendo que mi dirección puede mostrarse públicamente durante la competencia.",
   "Eligible trading pairs": "Pares comerciales elegibles",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "En los cálculos del volumen solo se incluirán las operaciones con los pares BNB/BUSD, WAGYU/BNB, ETH/BNB y BTCB/BNB.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "En los cálculos del volumen solo se incluirán las operaciones con los pares VLX/BUSD, WAGYU/VLX, ETH/VLX y BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo de la clasificación y de los equipos ganadores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Las clasificaciones de los equipos se calculan a partir del volumen total combinado respecto a los 500 mejores miembros de cada equipo.",
   "Prize distribution": "Repartición de premios",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "¿Cómo puedo cobrar mis premios?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Después de que termine la batalla, visita la página del evento y haz clic en el botón \"Cobrar premios\" que se encuentra en la parte superior de la sección o en la pestaña \"Tu puntuación\". Cuando hayas cobrado correctamente tus premios, el texto del botón cambiará a \"Premios cobrados\".",
   "Trade to increase your rank": "Haz negociaciones para mejorar tu clasificación",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Pares elegibles: BNB/BUSD, WAGYU/BNB, ETH/BNB y BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegibles: VLX/BUSD, WAGYU/VLX, ETH/VLX y BTCB/VLX",
   "Play as a team": "Juega en equipo",
   "The higher your team’s rank, the better your prizes": "Entre más alta sea la clasificación de tu equipo, mejores serán tus premios",
   "Top Traders": "Los mejores traders",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Autoriza el acceso a tu cuenta",
   "Unable to find connector": "No se puede encontrar el conector",
   "The connector config is wrong": "La configuración del conector es incorrecta",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "¡Asignaste %amount% tokens WAGYU-BNB LP a esta IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "¡Necesitarás tokens WAGYU-BNB LP para participar en la IFO!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "¡Asignaste %amount% tokens WAGYU-VLX LP a esta IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "¡Necesitarás tokens WAGYU-VLX LP para participar en la IFO!",
   "Your %symbol% committed": "Tu %symbol% asignado",
   "Your %symbol% RECLAIMED": "RECUPERASTE tu %symbol%",
   "Your %symbol% TO RECLAIM": "PARA RECUPERAR tu %symbol%",
