--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Autoriser WAGYU",
   "IFO: Initial Farm Offerings": "IFO : Intitial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Achetez de nouveaux tokens via un mécanisme de vente innovant.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Vous achetez les nouveaux tokens à l'aide de tokens LP WAGYU-BNB, ce qui signifie que vous devez ajouter des WAGYU et des BNB dans un pool de liquidités pour pouvoir participer.",
-  "Get WAGYU-BNB LP >": "Obtenir des LP WAGYU-BNB >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Le projet obtient les BNB, WagyuSwap détruit les WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Vous achetez les nouveaux tokens à l'aide de tokens LP WAGYU-VLX, ce qui signifie que vous devez ajouter des WAGYU et des VLX dans un pool de liquidités pour pouvoir participer.",
+  "Get WAGYU-VLX LP >": "Obtenir des LP WAGYU-VLX >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Le projet obtient les VLX, WagyuSwap détruit les WAGYU.",
   "You get the tokens.": "Vous obtenez les tokens.",
   "Want to launch your own IFO?": "Vous voulez lancer votre propre IFO ?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lancez votre projet avec WagyuSwap, le projet AMM et fournisseur de liquidités le plus utilisé de Binance Smart Chain, afin d'offrir directement votre token à la communauté la plus active et à la plus grosse croissance de BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Chaque fois que vous empilez et retirez (staking) des jetons LP, le contrat vous versera les WAGYU accumulés automatiquement !",
   "How to take part": "Comment participer",
   "Before Sale": "Avant la vente",
-  "Buy WAGYU and BNB tokens": "Acheter des tokens WAGYU et BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Obtenez des LP WAGYU-BNB en ajoutant de la liquidité en WAGYU et en BNB",
+  "Buy WAGYU and VLX tokens": "Acheter des tokens WAGYU et VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Obtenez des LP WAGYU-VLX en ajoutant de la liquidité en WAGYU et en VLX",
   "During Sale": "Pendant la vente",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Lorsque la vente est active, faites une demande d'achat pour les tokens de l'IFO avec vos WAGYU-LP.",
   "After Sale": "Après la vente",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Activez votre profil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Vous aurez besoin d'un profil WagyuSwap actif pour participer à une IFO !",
   "Profile Active!": "Profil actif !",
-  "Get WAGYU-BNB LP Tokens": "Obtenir des jetons LP WAGYU-BNB",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Placez des WAGYU et des BNB dans le pool de liquidité pour obtenir des jetons LP.",
+  "Get WAGYU-VLX LP Tokens": "Obtenir des jetons LP WAGYU-VLX",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Placez des WAGYU et des VLX dans le pool de liquidité pour obtenir des jetons LP.",
   "You’ll spend them to buy IFO sale tokens.": "Vous les dépenserez pour acheter des jetons de vente IFO.",
   "Commit LP Tokens": "Engager des jetons LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Lorsque les ventes IFO sont en cours, vous pouvez « placer » vos jetons LP pour acheter les jetons vendus.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Nous vous recommandons de vous engager d'abord dans la vente de base, mais vous pouvez faire les deux si vous le souhaitez.",
   "Claim your tokens and achievement": "Récupérez vos jetons et votre réalisation",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Une fois les ventes IFO terminées, vous pouvez récupérer tous les jetons IFO que vous avez achetés, et tous les jetons WAGYU-BNB LP non dépensés seront renvoyés dans votre portefeuille.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Une fois les ventes IFO terminées, vous pouvez récupérer tous les jetons IFO que vous avez achetés, et tous les jetons WAGYU-VLX LP non dépensés seront renvoyés dans votre portefeuille.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "La transaction de clôture de ce tirage a été soumise à la blockchain et attend d'être confirmée.",
   "No prediction history available": "Aucun historique de prédiction disponible",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Si vous êtes sûr(e) que vous devriez voir un historique ici, assurez-vous que d'être connecté(e) au bon portefeuille et réessayez.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Une fois que vous avez pris une position, vous ne pouvez plus l'annuler ou l'ajuster.",
   "All losses are final.": "Toutes les pertes sont définitives.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Je comprends que j'utilise ce produit à mes propres risques. Toute perte encourue en raison de mes actes relève de ma propre responsabilité.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Mettez des WAGYU et des BNB dans le pool de liquidité pour obtenir des jetons LP. Vous les dépenserez pour acheter des jetons de vente IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Mettez des WAGYU et des VLX dans le pool de liquidité pour obtenir des jetons LP. Vous les dépenserez pour acheter des jetons de vente IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Vous aurez besoin d'un profil WagyuSwap actif pour participer à une IFO !",
   "Your LP tokens committed": "Vos jetons LP engagés",
   "Max. Committed": "Montant max. placé",
@@ -483,8 +483,8 @@
   "Achievement": "Réalisation",
   "Commit ~%minLp% LP in total to earn!": "Placez ~%minLp% LP au total pour gagner !",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Quelle est la différence entre une vente de base et une vente illimitée ?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Dans une vente de base, chaque utilisateur peut placer un maximum d'environ 100 USD de jetons LP WAGYU-BNB. Nous calculons le montant maximal de LP environ 30 minutes avant chaque IFO. La vente de base ne comprend aucun frais de participation.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Dans une vente illimitée, il n'y a pas de limite au nombre de jetons LP WAGYU-BNB que vous pouvez placer. Cependant, des frais de participation s'appliquent : voir ci-dessous.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Dans une vente de base, chaque utilisateur peut placer un maximum d'environ 100 USD de jetons LP WAGYU-VLX. Nous calculons le montant maximal de LP environ 30 minutes avant chaque IFO. La vente de base ne comprend aucun frais de participation.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Dans une vente illimitée, il n'y a pas de limite au nombre de jetons LP WAGYU-VLX que vous pouvez placer. Cependant, des frais de participation s'appliquent : voir ci-dessous.",
   "Which sale should I commit to? Can I do both?": "Dans quelle vente dois-je m'engager ? Puis-je faire les deux ?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Vous pouvez en choisir une vente ou les deux en même temps ! Si vous n'engagez qu'un petit montant, nous vous recommandons d'abord la vente de base. N'oubliez pas que vous avez besoin d'un profil WagyuSwap pour participer.",
   "How much is the participation fee?": "Quel est le montant des frais de participation ?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Les frais commenceront à 1 %.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Les frais de participation de 1 % diminuent par paliers, en fonction du pourcentage de débordement de la partie « illimitée » de la vente.",
   "Where does the participation fee go?": "Où vont les frais de participation ?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nous les brûlons. Les jetons LP WAGYU-BNB provenant des frais de participation seront décomposés, puis nous utiliserons la partie BNB pour acheter l'équivalent en WAGYU sur le marché, et nous jetterons enfin tous les WAGYU dans la destruction hebdomadaire de jetons.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nous les brûlons. Les jetons LP WAGYU-VLX provenant des frais de participation seront décomposés, puis nous utiliserons la partie VLX pour acheter l'équivalent en WAGYU sur le marché, et nous jetterons enfin tous les WAGYU dans la destruction hebdomadaire de jetons.",
   "How can I get an achievement for participating in the IFO?": "Comment puis-je obtenir une réalisation en participant à l'IFO ?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Vous devez apporter un minimum d'environ 10 USD de jetons LP WAGYU-BNB dans l'une ou l'autre des ventes.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Vous devez apporter un minimum d'environ 10 USD de jetons LP WAGYU-VLX dans l'une ou l'autre des ventes.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Vous pouvez participer à l'une ou l'autre, ou aux deux, peu importe : seule votre contribution globale est prise en compte pour la réalisation.",
   "The Lottery Is Changing!": "La loterie change !",
   "Come back soon!": "Revenez bientôt !",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Entrer BAS",
   "An error occurred, unable to enter your position": "Une erreur est survenue, impossible d'engager votre position",
   "Set Position": "Configurer la position",
-  "Insufficient BNB balance": "Solde BNB insuffisant",
+  "Insufficient VLX balance": "Solde VLX insuffisant",
   "A minimum amount of %num% %token% is required": "Un montant minimal de %num% %token% est nécessaire",
   "Enter an amount": "Saisissez un montant",
   "You won’t be able to remove or change your position once you enter it.": "Vous ne pourrez pas supprimer ou modifier votre position une fois que vous l'aurez validée.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "puis inscrivez-vous au concours en cliquant sur le bouton « JE VEUX TENTER MA CHANCE » ci-dessus.",
   "Battle Time": "Heure de la bataille",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Échangez des BNB/BUSD, WAGYU BNB, ETH/BNB et BTCB/BNB pendant la période de bataille pour augmenter votre score et celui de votre équipe. Consultez la section Règles ci-dessous pour en savoir plus.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Échangez des VLX/BUSD, WAGYU VLX, ETH/VLX et BTCB/VLX pendant la période de bataille pour augmenter votre score et celui de votre équipe. Consultez la section Règles ci-dessous pour en savoir plus.",
   "Prize Claim": "Récupération des récompenses",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Les équipes et les traders seront classés par ordre de volume de trading. Récupérez vos récompenses et célébrez l'événement !",
   "Registration starting April 5": "Les inscriptions commencent le 5 avril",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Cette décision ne peut être annulée.",
   "I understand that my address may be displayed publicly throughout the competition.": "Je comprends que mon adresse peut être affichée publiquement tout au long du concours.",
   "Eligible trading pairs": "Paires éligibles au trading",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Seules les transactions sur les paires BNB/BUSD, WAGYU/BNB, ETH/BNB et BTCB/BNB seront incluses dans les calculs de volume.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Seules les transactions sur les paires VLX/BUSD, WAGYU/VLX, ETH/VLX et BTCB/VLX seront incluses dans les calculs de volume.",
   "Calculating team ranks and winners": "Calcul du classement et des équipes gagnantes",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Les classements des équipes sont calculés en fonction du volume total combiné des 500 meilleurs membres de chaque équipe respective.",
   "Prize distribution": "Distribution des récompenses",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Comment puis-je récupérer ma ou mes récompenses ?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Une fois la bataille terminée, visitez la page de l'événement et cliquez sur le bouton « Récupérer les récompenses » dans la section supérieure ou dans la section « Votre score ». Une fois que vous aurez récupéré vos récompenses avec succès, le texte du bouton deviendra « Récompenses récupérées ».",
   "Trade to increase your rank": "Réalisez des opérations de trading pour grimper dans le classement",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Paires éligibles : BNB/BUSD, WAGYU/BNB, ETH/BNB et BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Paires éligibles : VLX/BUSD, WAGYU/VLX, ETH/VLX et BTCB/VLX",
   "Play as a team": "Jouer en équipe",
   "The higher your team’s rank, the better your prizes": "Plus le classement de votre équipe est élevé, meilleurs seront vos récompenses",
   "Top Traders": "Meilleurs traders",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Veuillez autoriser pour accéder à votre compte",
   "Unable to find connector": "Impossible de trouver le connecteur",
   "The connector config is wrong": "La configuration du connecteur est incorrecte",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Vous avez placé %amount% jetons LP WAGYU-BNB dans cette IFO !",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Vous aurez besoin de jetons LP WAGYU-BNB pour participer à l'IFO !",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Vous avez placé %amount% jetons LP WAGYU-VLX dans cette IFO !",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Vous aurez besoin de jetons LP WAGYU-VLX pour participer à l'IFO !",
   "Your %symbol% committed": "Vos %symbol% engagés",
   "Your %symbol% RECLAIMED": "Vos %symbol% RÉCUPÉRÉS",
   "Your %symbol% TO RECLAIM": "Vos %symbol% À RÉCUPÉRER",
