--- a/public/locales/ja-JP.json
+++ b/public/locales/ja-JP.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYUを承認",
   "IFO: Initial Farm Offerings": "IFO：イニシャルファームオファリング",
   "Buy new tokens with a brand new token sale model.": "新しいトークン販売モデルで新しいトークンを購入。",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "WAGYU-BNBのLPトークンを使用して、新しいトークンの代金を支払うことになります。つまり、参加する流動性プールに同量のWAGYUとBNBをステーキングする必要があります。",
-  "Get WAGYU-BNB LP >": "WAGYU-BNBのLPを入手 >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "プロジェクトがBNBを取得すると、WagyuSwapがWAGYUをバーン。",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "WAGYU-VLXのLPトークンを使用して、新しいトークンの代金を支払うことになります。つまり、参加する流動性プールに同量のWAGYUとVLXをステーキングする必要があります。",
+  "Get WAGYU-VLX LP >": "WAGYU-VLXのLPを入手 >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "プロジェクトがVLXを取得すると、WagyuSwapがWAGYUをバーン。",
   "You get the tokens.": "あなたはトークンを入手。",
   "Want to launch your own IFO?": "自分のIFOをローンチしませんか？",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Binance Smart Chainで最も利用されているAMMプロジェクトで流動性供給者であるWagyuSwapを利用してプロジェクトをローンチし、BSCで最も活発で急速に成長しているコミュニティにあなたのトークンを直接届けることができます。",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ LPトークンをステーキングしてステーキング解除するたびに、WAGYU報酬はスマートコントラクトによって自動的に収穫されます！",
   "How to take part": "参加方法",
   "Before Sale": "販売前",
-  "Buy WAGYU and BNB tokens": "WAGYUとBNBトークンを購入しよう",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYUとBNBの流動性を追加し、WAGYU-BNB LPトークンを入手しよう",
+  "Buy WAGYU and VLX tokens": "WAGYUとVLXトークンを購入しよう",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYUとVLXの流動性を追加し、WAGYU-VLX LPトークンを入手しよう",
   "During Sale": "販売期間中",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "販売期間中、WAGYU-LPトークンをコミットしてIFOトークンを購入しよう",
   "After Sale": "販売後",
@@ -399,14 +399,14 @@
   "Activate your Profile": "プロファイルを有効化",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "IFOに参加するには、有効化されたWagyuSwapのプロファイルが必要です！",
   "Profile Active!": "プロファイルが有効です！",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNBのLPトークンを入手",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "流動性プールにWAGYUとBNBをステーキングしてLPトークンを入手しましょう。",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLXのLPトークンを入手",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "流動性プールにWAGYUとVLXをステーキングしてLPトークンを入手しましょう。",
   "You’ll spend them to buy IFO sale tokens.": "IFO販売トークンを買うために使います。",
   "Commit LP Tokens": "LPトークンを投資",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "IFO販売期間中、WAGYU-LPトークンを投資して販売されているIFOトークンを購入できます。",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "まずは、基本販売に投資することをお勧めしますが、両方に投資することもできます。",
   "Claim your tokens and achievement": "トークンと実績を請求",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO販売が終了すると、あなたが買ったどのIFOトークンでも請求できます。そして、使われていないWAGYU-BNB LPトークンはあなたのウォレットに戻されます。",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO販売が終了すると、あなたが買ったどのIFOトークンでも請求できます。そして、使われていないWAGYU-VLX LPトークンはあなたのウォレットに戻されます。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "このラウンドの最後の取引はブロックチェーンに提出され、承認待ち状態です。",
   "No prediction history available": "予測履歴がありません",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "ここに表示されるべき履歴が表示されない場合は、正しいウォレットに繋がっているかどうかを確認してからもう一度お試しください。",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "1度ポジションに入ると、キャンセルもしくは調整をすることはできません。",
   "All losses are final.": "全損失は返金不可。",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "私は、この製品を自分の責任で使用していることを理解しています。私の行動から生じるいかなる損失も私の責任です。",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "流動性プールにWAGYUとBNBをステーキングしてLPトークンを獲得しましょう。LPトークンは、IFO販売トークンの購入に使用できます。",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "流動性プールにWAGYUとVLXをステーキングしてLPトークンを獲得しましょう。LPトークンは、IFO販売トークンの購入に使用できます。",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "IFOに参加するには、有効化されたWagyuSwapのプロファイルが必要です！",
   "Your LP tokens committed": "あなたが投資したLPトークン",
   "Max. Committed": "最大投資",
@@ -483,8 +483,8 @@
   "Achievement": "実績",
   "Commit ~%minLp% LP in total to earn!": "獲得するには、合計~%minLp%LPを投資しましょう！",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "基本販売と無制限販売の違いはなんですか？",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "基本販売では、各々のユーザーが最大100ドル分のWAGYU-BNB LPトークンを投資できます。LPの最大額は、各IFOの約30分前に計算します。基本販売には参加手数料がありません。",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "無制限販売では、投資できるWAGYU-BNB LPトークンの数に上限はありません。ただし、参加手数料はあります。以下をご覧ください。",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "基本販売では、各々のユーザーが最大100ドル分のWAGYU-VLX LPトークンを投資できます。LPの最大額は、各IFOの約30分前に計算します。基本販売には参加手数料がありません。",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "無制限販売では、投資できるWAGYU-VLX LPトークンの数に上限はありません。ただし、参加手数料はあります。以下をご覧ください。",
   "Which sale should I commit to? Can I do both?": "どちらの販売に投資したほうがいいですか？両方に投資することも可能ですか？",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "1つの販売もしくは両方の販売に同時に投資できます！少額しか投資しない場合は、基本販売から始めることをおすすめします。しかし、参加するにはWagyuSwapプロファイルが必要なので、ご注意ください。",
   "How much is the participation fee?": "参加手数料はいくらですか？",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "手数料は1%からとなります。",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "1%の参加手数料は、販売の「無制限」な部分からのオーバーフローの割合によって段階的に減っていきます。",
   "Where does the participation fee go?": "参加手数料は何に使われますか？",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "弊社は手数料をバーンします。参加手数料のWAGYU-BNB LPトークンは分解され、BNBの部分を使って市場でWAGYUの相当額を購入し、最後に全てのWAGYUを毎週のトークンバーンに投入します。",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "弊社は手数料をバーンします。参加手数料のWAGYU-VLX LPトークンは分解され、VLXの部分を使って市場でWAGYUの相当額を購入し、最後に全てのWAGYUを毎週のトークンバーンに投入します。",
   "How can I get an achievement for participating in the IFO?": "IFOに参加した実績をどうすれば手に入れることができますか？",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "いずれかの販売に10ドルのWAGYU-BNB LPトークンを投資する必要があります。",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "いずれかの販売に10ドルのWAGYU-VLX LPトークンを投資する必要があります。",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "片方に投資しても両方に投資しても構いません。実績に考慮されるのはあなたの全体貢献額です。",
   "The Lottery Is Changing!": "宝くじは変更中です！",
   "Come back soon!": "後ほどもう一度お試しください！",
@@ -570,7 +570,7 @@
   "Enter DOWN": "下に入る",
   "An error occurred, unable to enter your position": "エラーが発生しました。選択したポジションに入ることができません。",
   "Set Position": "ポジションを設定する",
-  "Insufficient BNB balance": "BNB残高不足",
+  "Insufficient VLX balance": "VLX残高不足",
   "A minimum amount of %num% %token% is required": "最小%num% %token%が必要です",
   "Enter an amount": "数量を入力",
   "You won’t be able to remove or change your position once you enter it.": "1度ポジションに入ると、撤退したりポジションを変更したりすることができなくなります。",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "設定しましょう",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "次に、上にある「参加します」ボタンをクリックして試合に登録しましょう。",
   "Battle Time": "バトルタイム",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "バトル期間中に、BNB/BUSD、WAGYU/BNB、ETH/BNBおよびBTCB/BNBをトレードして、自分や自分のチームのスコアを上げましょう。詳しくは、以下のルールセクションをご覧ください。",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "バトル期間中に、VLX/BUSD、WAGYU/VLX、ETH/VLXおよびBTCB/VLXをトレードして、自分や自分のチームのスコアを上げましょう。詳しくは、以下のルールセクションをご覧ください。",
   "Prize Claim": "賞金請求",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "チームのトレーダーは、トレードのボリューム順に位置付けされます。賞金を回収して祝いましょう！",
   "Registration starting April 5": "登録は4月5日に開始されます",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "このアクションは巻き戻すことができます。",
   "I understand that my address may be displayed publicly throughout the competition.": "私のアドレスが試合中に公開されることを理解しています。",
   "Eligible trading pairs": "取引可能なペア",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "取引量の計算には、BNB/BUSD、WAGYU/BNB、ETH/BNB、BTCB/BNBペアの取引のみが含まれます。",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "取引量の計算には、VLX/BUSD、WAGYU/VLX、ETH/VLX、BTCB/VLXペアの取引のみが含まれます。",
   "Calculating team ranks and winners": "チームランクと勝者の計算方法",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "チームランクは、それぞれのチームメンバーの上位500人の合計取引量を使用して計算されます。",
   "Prize distribution": "賞金分配",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "賞金を受け取る方法",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "バトルが終わった後、イベントページに移動し、上のセクションもしくは「あなたのスコア」セクションにある「賞金の請求」ボタンをクリックします。",
   "Trade to increase your rank": "ランクを上げるには取引しましょう",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "取引可能なペア：BNB/BUSD、WAGYU/BNB、ETH/BNB、およびBTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "取引可能なペア：VLX/BUSD、WAGYU/VLX、ETH/VLX、およびBTCB/VLX",
   "Play as a team": "チームとして参加",
   "The higher your team’s rank, the better your prizes": "チームのランクが高いほど、より優れた賞金を獲得できます",
   "Top Traders": "トップトレーダー",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "アカウントにアクセスするには承認してください",
   "Unable to find connector": "コネクターが見つかりませんでした",
   "The connector config is wrong": "コネクター設定が間違っています",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "このIFOに%amount% WAGYU-BNBLPトークンを投資しました！",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "IFOに参加するにはWAGYU-BNB LPトークンが必要です！",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "このIFOに%amount% WAGYU-VLXLPトークンを投資しました！",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "IFOに参加するにはWAGYU-VLX LPトークンが必要です！",
   "Your %symbol% committed": "投資している%symbol%",
   "Your %symbol% RECLAIMED": "返金している%symbol%",
   "Your %symbol% TO RECLAIM": "返金の対象である%symbol%",
