--- a/public/locales/pt-BR.json
+++ b/public/locales/pt-BR.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Aprovar WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Oferta inicial da fazenda",
   "Buy new tokens with a brand new token sale model.": "Compre novos tokens com um novo modelo de vendas de token.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Você pagará por novos tokens usando tokens LP WAGYU-BNB, o que significa que você terá que fazer o stake de montantes iguais de WAGYU e BNB em uma reserva de liquidez para participar.",
-  "Get WAGYU-BNB LP >": "Obtenha WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "O projeto obtém o BNB, WagyuSwap queima o WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Você pagará por novos tokens usando tokens LP WAGYU-VLX, o que significa que você terá que fazer o stake de montantes iguais de WAGYU e VLX em uma reserva de liquidez para participar.",
+  "Get WAGYU-VLX LP >": "Obtenha WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "O projeto obtém o VLX, WagyuSwap queima o WAGYU.",
   "You get the tokens.": "Você obtém os tokens.",
   "Want to launch your own IFO?": "Quer lançar seu próprio IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lance seu projeto com WagyuSwap, o provedor de liquidez e projeto AMM mais usado da Binance Smart Chain, para levar seu token diretamente para a comunidade mais ativa e de crescimento mais rápido na BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Sempre que você coloca os tokens de LP em stake e os retina de stake, o contrato colherá automaticamente as recompensas do WAGYU para você!",
   "How to take part": "Como participar",
   "Before Sale": "Antes da venda",
-  "Buy WAGYU and BNB tokens": "Compre tokens de WAGYU e BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Obtenha tokens LP WAGYU-BNB adicionando liquidez de WAGYU e BNB",
+  "Buy WAGYU and VLX tokens": "Compre tokens de WAGYU e VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Obtenha tokens LP WAGYU-VLX adicionando liquidez de WAGYU e VLX",
   "During Sale": "Durante a venda",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Enquanto a venda estiver ativa, comprometa seus tokens de WAGYU-LP para a compra dos tokens de IFO",
   "After Sale": "Depois da venda",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Ativar seu Perfil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Você precisará de um Perfil Wagyuswap ativo para participar de uma IFO!",
   "Profile Active!": "Perfil ativo!",
-  "Get WAGYU-BNB LP Tokens": "Obter Tokens LP WAGYU-BNB",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Faça o stake de WAGYU e BNB na reserva de liquidez para obter tokens LP.",
+  "Get WAGYU-VLX LP Tokens": "Obter Tokens LP WAGYU-VLX",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Faça o stake de WAGYU e VLX na reserva de liquidez para obter tokens LP.",
   "You’ll spend them to buy IFO sale tokens.": "Você usará eles para comprar os tokens da venda de IFO.",
   "Commit LP Tokens": "Comprometer Tokens LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Quando a venda IFO estiver ativa, você pode \"comprometer\" seus tokens LP para a compra dos tokens a serem vendidos.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Recomendamos que você primeiro se comprometa com a venda básica, mas você pode fazer os dois, caso deseje.",
   "Claim your tokens and achievement": "Reivindique seus tokens e conquistas",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Depois da venda de IFO ser concluída, você pode reivindicar qualquer tokens IFO comprado e qualquer tokens LP WAGYU-BNB não utilizado será devolvido para sua carteira.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Depois da venda de IFO ser concluída, você pode reivindicar qualquer tokens IFO comprado e qualquer tokens LP WAGYU-VLX não utilizado será devolvido para sua carteira.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "A transação final desta rodada foi enviada para o blockchain e está aguardando confirmação.",
   "No prediction history available": "Nenhum histórico de previsão disponível",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Se você tem certeza de que deveria ver seu histórico aqui, certifique-se de que você esteja conectado à carteira correta e tente novamente.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Depois de entrar uma posição, você não pode cancelar ou ajustá-la.",
   "All losses are final.": "Todas as perdas são definitivas.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Compreendo que estou usando este produto ao meu próprio risco.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Faça o stake de WAGYU e BNB na reserva de liquidez para obter tokens LP. Você pode usá-los para obter os tokens da venda IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Faça o stake de WAGYU e VLX na reserva de liquidez para obter tokens LP. Você pode usá-los para obter os tokens da venda IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Você precisará de um Perfil Wagyuswap ativo para participar de uma IFO!",
   "Your LP tokens committed": "Você comprometeu Tokens LP",
   "Max. Committed": "Valor max. comprometido",
@@ -483,8 +483,8 @@
   "Achievement": "Conquista",
   "Commit ~%minLp% LP in total to earn!": "Comprometa um total de ~%minLp% LP para ganhar!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Qual a diferença entre a Venda Básica e a Venda Ilimitada?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Na Venda Básica, todos os usuários podem comprometer um valor máximo de cerca de 100 USD de Tokens LP WAGYU-BNB. A quantidade máxima de LP é calculada em cerca de 30 minutos antes de cada IFO. A Venda Básica não possui taxa de participação.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Na Venda Ilimitada, não há limite para a quantidade de Tokens LP WAGYU-BNB que se pode comprometer. No entanto, há uma taxa de participação: ver abaixo.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Na Venda Básica, todos os usuários podem comprometer um valor máximo de cerca de 100 USD de Tokens LP WAGYU-VLX. A quantidade máxima de LP é calculada em cerca de 30 minutos antes de cada IFO. A Venda Básica não possui taxa de participação.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Na Venda Ilimitada, não há limite para a quantidade de Tokens LP WAGYU-VLX que se pode comprometer. No entanto, há uma taxa de participação: ver abaixo.",
   "Which sale should I commit to? Can I do both?": "Com que venda devo comprometer-me? Posso fazer ambas?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Você pode optar por uma ou ambas ao mesmo tempo! Se você estiver comprometendo apenas um pequeno montante, recomendamos primeiro a Venda Básica. Lembre-se de que você precisa de um Perfil WagyuSwap para poder participar.",
   "How much is the participation fee?": "Qual o valor da taxa de participação?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "A taxa começará em 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "A taxa de participação de 1% diminui nas quedas, com base na porcentagem de extravasamento da parte \"Ilimitada\" da venda.",
   "Where does the participation fee go?": "Para onde a taxa de participação vai?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nós a Queimamos. Os tokens LP WAGYU-BNB da taxa de participação serão decompostos. Depois nós utilizamos a porção BNB para comprar o equivalente em WAGYU no mercado e por fim colocamos todo o WAGYU na queima semanal de tokens.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nós a Queimamos. Os tokens LP WAGYU-VLX da taxa de participação serão decompostos. Depois nós utilizamos a porção VLX para comprar o equivalente em WAGYU no mercado e por fim colocamos todo o WAGYU na queima semanal de tokens.",
   "How can I get an achievement for participating in the IFO?": "Como posso obter uma conquista por participar da IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Você precisa contribuir com um mínimo de aproximadamente 10 USD de Tokens LP WAGYU-BNB para qualquer uma das vendas.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Você precisa contribuir com um mínimo de aproximadamente 10 USD de Tokens LP WAGYU-VLX para qualquer uma das vendas.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Você pode contribuir para uma ou ambas, não importa. Apenas a sua contribuição geral é contada para a conquista.",
   "The Lottery Is Changing!": "A Lotaria está mudando!",
   "Come back soon!": "Volte em breve!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Inserir BAIXO",
   "An error occurred, unable to enter your position": "Ocorreu um erro, não foi possível inserir sua posição",
   "Set Position": "Definir Posição",
-  "Insufficient BNB balance": "Saldo de BNB insuficiente",
+  "Insufficient VLX balance": "Saldo de VLX insuficiente",
   "A minimum amount of %num% %token% is required": "É necessária uma quantia mínima de %num% %token%",
   "Enter an amount": "Insira um montante",
   "You won’t be able to remove or change your position once you enter it.": "Você não conseguirá remover ou alterar sua posição depois de inseri-la.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "depois registre-se na competição clicando no botão \"QUERO BATALHAR\" acima.",
   "Battle Time": "Tempo de batalha",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocie BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB durante o período de batalha para aumentar a pontuação tanto da sua equipe quanto a sua. Consulte a seção de Regras abaixo para obter mais informações.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipe quanto a sua. Consulte a seção de Regras abaixo para obter mais informações.",
   "Prize Claim": "Reivindicar Prêmio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Equipes e negociantes serão classificados na ordem de volume de negócios. Colete seus prêmios e comemore!",
   "Registration starting April 5": "O registro começa no dia 5 de abril",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Esta decisão é irreversível.",
   "I understand that my address may be displayed publicly throughout the competition.": "Compreendo que meu endereço possa ser exposto publicamente durante todo o concurso.",
   "Eligible trading pairs": "Pares de negociação elegíveis",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as negociações nos pares BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as negociações nos pares VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo das classificações da equipe e dos vencedores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "As classificações das equipes são calculadas pelo volume total combinado dos 500 melhores membros de cada equipe.",
   "Prize distribution": "Distribuição de prêmios",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Como reivindico meu(s) prêmio(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Depois do término da batalha, visite a página do evento e clique no botão “Reivindicar prêmios” na seção superior ou na seção “Sua Pontuação”. Depois de reivindicar seus prêmios com sucesso, o texto do botão mudará para “Prêmios reivindicados”.",
   "Trade to increase your rank": "Negocie para aumentar sua classificação",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Pares elegíveis: BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Participar como equipe",
   "The higher your team’s rank, the better your prizes": "Quanto mais alta for a classificação da sua equipe, melhores serão os seus prêmios",
   "Top Traders": "Melhores Negociantes",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Autorize para poder acessar sua conta",
   "Unable to find connector": "Não foi possível encontrar o conector",
   "The connector config is wrong": "O conector config está incorreto",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Você contribuiu com %amount% tokens LP WAGYU-BNB para esta IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Para participar na IFO, você precisará de tokens LP WAGYU-BNB!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Você contribuiu com %amount% tokens LP WAGYU-VLX para esta IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Para participar na IFO, você precisará de tokens LP WAGYU-VLX!",
   "Your %symbol% committed": "Seu %symbol% comprometido",
   "Your %symbol% RECLAIMED": "Seu %symbol% REIVINDICADO",
   "Your %symbol% TO RECLAIM": "Seu %symbol% A SER REIVINDICADO",
