--- a/public/locales/pt-PT.json
+++ b/public/locales/pt-PT.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Aprovar WAGYU",
   "IFO: Initial Farm Offerings": "IFO: Oferta Inicial de Farm",
   "Buy new tokens with a brand new token sale model.": "Compre novos tokens com um novo modelo de vendas de token.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Pagará pelos novos tokens utilizando os tokens WAGYU-BNB LP, o que significa que para participar terá de apostar montantes iguais de WAGYU e BNB num pool de liquidez.",
-  "Get WAGYU-BNB LP >": "Obtenha WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "O projeto ganha o BNB, WagyuSwap queima o WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Pagará pelos novos tokens utilizando os tokens WAGYU-VLX LP, o que significa que para participar terá de apostar montantes iguais de WAGYU e VLX num pool de liquidez.",
+  "Get WAGYU-VLX LP >": "Obtenha WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "O projeto ganha o VLX, WagyuSwap queima o WAGYU.",
   "You get the tokens.": "Você ganha os tokens.",
   "Want to launch your own IFO?": "Quer lançar o seu próprio IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Lance o seu projeto com WagyuSwap, o projeto AMM mais utilizado da Binance Smart Chain e fornecedor de liquidez, para levar o seu token directamente à comunidade mais ativa e em rápido crescimento no BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Sempre que apostar e anular os tokens LP, o contrato irá recolher automáticamente recompensas WAGYU para si!",
   "How to take part": "Como participar",
   "Before Sale": "Antes da venda",
-  "Buy WAGYU and BNB tokens": "Compre tokens WAGYU e BNB",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Obtenha tokens WAGYU-BNB LP adicionando liquidez WAGYU e BNB",
+  "Buy WAGYU and VLX tokens": "Compre tokens WAGYU e VLX",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Obtenha tokens WAGYU-VLX LP adicionando liquidez WAGYU e VLX",
   "During Sale": "Durante a venda",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Enquanto a venda estiver ativa, entregue seus tokens WAGYU-LP para comprar os tokens da IFO",
   "After Sale": "Depois da venda",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Ative o seu perfil",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Para participar numa IFO, necessitará de um Perfil WagyuSwap ativo!",
   "Profile Active!": "Perfil Ativo!",
-  "Get WAGYU-BNB LP Tokens": "Obter Tokens WAGYU-BNB LP",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Para obter fichas LP, aposte WAGYU e BNB no pool de liquidez.",
+  "Get WAGYU-VLX LP Tokens": "Obter Tokens WAGYU-VLX LP",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Para obter fichas LP, aposte WAGYU e VLX no pool de liquidez.",
   "You’ll spend them to buy IFO sale tokens.": "Vai gastá-los para comprar tokens de venda IFO.",
   "Commit LP Tokens": "Autorizar Tokens LP",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Quando as vendas IFO são ao vivo, pode \"afetar\" os seus tokens LP para comprar tokens que estão a ser vendidos.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Recomendamos que se comprometa primeiro com a Venda Básica, mas pode efetuar ambas se assim o desejar.",
   "Claim your tokens and achievement": "Reclame os seus tokens e resultados",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "Após o fim das vendas IFO, poderá reclamar as fichas IFO que comprou, e as fichas WAGYU-BNB LP não gastas serão devolvidas à sua carteira.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "Após o fim das vendas IFO, poderá reclamar as fichas IFO que comprou, e as fichas WAGYU-VLX LP não gastas serão devolvidas à sua carteira.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "A transação de encerramento desta ronda foi submetida à blockchain, e está à espera de ser confirmada.",
   "No prediction history available": "Não há historial de previsão disponível",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Se tiver a certeza que deve ver o histórico aqui, verifique se está ligado à carteira correta e tente novamente.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Uma vez inserida uma posição, não pode cancelá-la ou ajustá-la.",
   "All losses are final.": "Todas as perdas são definitivas.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Tenho conhecimento de que estou a utilizar este produto por minha conta e risco. Qualquer perda incorrida devido às minhas ações é da minha própria responsabilidade.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Participe no pool de liquidez com WAGYU e BNB para obter tokens LP. Vai gastá-los para comprar os tokens da venda IFO.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Participe no pool de liquidez com WAGYU e VLX para obter tokens LP. Vai gastá-los para comprar os tokens da venda IFO.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Para participar numa IFO, necessitará de um Perfil WagyuSwap ativo!",
   "Your LP tokens committed": "Os seus tokens LP afetados",
   "Max. Committed": "Máx. afetado",
@@ -483,8 +483,8 @@
   "Achievement": "Conquista",
   "Commit ~%minLp% LP in total to earn!": "Afete um total de ~%minLp% LP para ganhar!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "Qual é a diferença entre uma Venda Básica e uma Venda Ilimitada?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Na Venda Básica, todos os utilizadores podem comprometer um valor máximo de cerca de 100 USD de Tokens WAGYU-BNB LP. Calculamos o montante máximo de LP cerca de 30 minutos antes de cada IFO. A Venda Básica não tem taxa de participação.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "Na Venda Ilimitada, não há limite para a quantidade de Tokens WAGYU-BNB LP que se pode afetar. No entanto, há uma taxa de participação: ver abaixo.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "Na Venda Básica, todos os utilizadores podem comprometer um valor máximo de cerca de 100 USD de Tokens WAGYU-VLX LP. Calculamos o montante máximo de LP cerca de 30 minutos antes de cada IFO. A Venda Básica não tem taxa de participação.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "Na Venda Ilimitada, não há limite para a quantidade de Tokens WAGYU-VLX LP que se pode afetar. No entanto, há uma taxa de participação: ver abaixo.",
   "Which sale should I commit to? Can I do both?": "Com que venda devo comprometer-me? Posso fazer ambas?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Pode optar por um ou ambos ao mesmo tempo! Se estiver apenas a afetar um pequeno montante, recomendamos primeiro a Venda Básica. Lembre-se de que necessita de um Perfil WagyuSwap para poder participar.",
   "How much is the participation fee?": "Qual é o valor da taxa de participação?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "A taxa começará em 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "A taxa de participação de 1% diminui nas falésias, com base na percentagem de transbordo da parte \"Ilimitada\" da venda.",
   "Where does the participation fee go?": "Para onde vai a taxa de participação?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nós queimamo-lo. Os tokens WAGYU-BNB LP da taxa de participação serão decompostos. Depois utilizamos a porção BNB para comprar o equivalente WAGYU no mercado, e finalmente atiramos todo o WAGYU para a queima semanal dos tokens.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Nós queimamo-lo. Os tokens WAGYU-VLX LP da taxa de participação serão decompostos. Depois utilizamos a porção VLX para comprar o equivalente WAGYU no mercado, e finalmente atiramos todo o WAGYU para a queima semanal dos tokens.",
   "How can I get an achievement for participating in the IFO?": "Como posso obter uma conquista por participar no IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Tem de contribuir com um mínimo de cerca de 10 USD de Tokens WAGYU-BNB LP para qualquer das vendas.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Tem de contribuir com um mínimo de cerca de 10 USD de Tokens WAGYU-VLX LP para qualquer das vendas.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Pode contribuir para uma ou ambas, não importa: apenas a sua contribuição global é contada para a realização.",
   "The Lottery Is Changing!": "A lotaria está a mudar!",
   "Come back soon!": "Volte em breve!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Enter BAIXO",
   "An error occurred, unable to enter your position": "Ocorreu um erro, não foi possível introduzir a sua posição",
   "Set Position": "Definir Posição",
-  "Insufficient BNB balance": "Saldo BNB insuficiente",
+  "Insufficient VLX balance": "Saldo VLX insuficiente",
   "A minimum amount of %num% %token% is required": "É necessário um montante mínimo de %num% %token%",
   "Enter an amount": "Introduza um montante",
   "You won’t be able to remove or change your position once you enter it.": "Após ter entrado, não poderá remover ou alterar a sua posição.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "e depois inscreva-se na competição clicando no botão \"QUERO BATALHAR\" acima.",
   "Battle Time": "Tempo de Batalha",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negoceie BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB durante o período de batalha para aumentar a pontuação tanto da sua equipa como sua. Consulte a secção de Regras abaixo para mais informações.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negoceie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipa como sua. Consulte a secção de Regras abaixo para mais informações.",
   "Prize Claim": "Reclamar Prémio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "As equipas e os traders serão classificados por ordem de volume de negociação. Receba os seus prémios e comemore!",
   "Registration starting April 5": "Inscrição a partir de 5 de Abril",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Esta decisão é irreversível.",
   "I understand that my address may be displayed publicly throughout the competition.": "Compreendo que o meu endereço possa ser exposto publicamente durante todo o concurso.",
   "Eligible trading pairs": "Pares de negociação elegíveis",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as transações nos pares BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as transações nos pares VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo das classificações da equipa e dos vencedores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "As classificações das equipas são calculadas pelo volume total combinado dos 500 melhores membros de cada equipa respetiva.",
   "Prize distribution": "Distribuição de prémios",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Como reclamar o(s) meu(s) prémio(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Após a batalha terminar, visite a página do evento e clique no botão \" Reclamar Prémios\" na secção superior ou na secção \"A Sua Pontuação\". Quando reclamar os seus prémios com êxito, o texto do botão mudará para \"Prémios reclamados\".",
   "Trade to increase your rank": "Negoceie para aumentar a sua classificação",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Pares elegíveis: BNB/BUSD, WAGYU/BNB, ETH/BNB e BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Participar como equipa",
   "The higher your team’s rank, the better your prizes": "Quanto mais alta for a classificação da sua equipa, melhores serão os seus prémios",
   "Top Traders": "Principais Traders",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Autorize o acesso à sua conta",
   "Unable to find connector": "Impossível encontrar o conetor",
   "The connector config is wrong": "A configuração do conetor está errada",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Contribuiu com %amount% WAGYU-BNB LP tokens para este IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Para participar na IFO, necessitará de tokens LP WAGYU-BNB!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Contribuiu com %amount% WAGYU-VLX LP tokens para este IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Para participar na IFO, necessitará de tokens LP WAGYU-VLX!",
   "Your %symbol% committed": "O seu %symbol% afetado",
   "Your %symbol% RECLAIMED": "O seu %symbol% RECLAMADO",
   "Your %symbol% TO RECLAIM": "O seu %symbol% A RECLAMAR",
