--- a/public/locales/ru-RU.json
+++ b/public/locales/ru-RU.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "Подтвердить WAGYU",
   "IFO: Initial Farm Offerings": "IFO: первичные предложения фермы",
   "Buy new tokens with a brand new token sale model.": "Купить новые токены с помощью новой модели продаж.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "Вы оплачиваете новые токены с помощью WAGYU-BNB токен LP. Чтобы участвовать, вам необходимо иметь равные вложения WAGYU и BNB в пул ликвидности.",
-  "Get WAGYU-BNB LP >": "Получить WAGYU-BNB LP",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "Проект получает BNB, WagyuSwap сжигает WAGYU.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "Вы оплачиваете новые токены с помощью WAGYU-VLX токен LP. Чтобы участвовать, вам необходимо иметь равные вложения WAGYU и VLX в пул ликвидности.",
+  "Get WAGYU-VLX LP >": "Получить WAGYU-VLX LP",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "Проект получает VLX, WagyuSwap сжигает WAGYU.",
   "You get the tokens.": "Вы получаете новые токены.",
   "Want to launch your own IFO?": "Заинтересованы в запуске своего собственного IFO?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Запустите свой проект с помощью Wagyuswap, самым популярным проектом AMM и поставщиком ликвидности в сети Binance Smart Chain, открывая путь Вашему токену непосредственно в самое активное и быстро развивающееся сообщество на BSC.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ Каждый раз, когда вы вкладываете или снимаете токен LP, контракт автоматически собирает для вас награды WAGYU!",
   "How to take part": "Как принять участие",
   "Before Sale": "До продажи",
-  "Buy WAGYU and BNB tokens": "Купите WAGYU и BNB токены",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "Получите WAGYU-BNB LP токены путём добавления WAGYU и BNB ликвидности",
+  "Buy WAGYU and VLX tokens": "Купите WAGYU и VLX токены",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "Получите WAGYU-VLX LP токены путём добавления WAGYU и VLX ликвидности",
   "During Sale": "Во время продажи",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "Совершите обмен ваших WAGYU-LP токенов на токены предложения",
   "After Sale": "После продажи",
@@ -399,14 +399,14 @@
   "Activate your Profile": "Активируйте свой профиль",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "Для участия в первичном предложении фермы нужно иметь активный профиль WagyuSwap!",
   "Profile Active!": "Профиль активен!",
-  "Get WAGYU-BNB LP Tokens": "Получите токены пула ликвидности WAGYU-BNB",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "Вкладывайте WAGYU и BNB в пул ликвидности, чтобы получить токены пула ликвидности.",
+  "Get WAGYU-VLX LP Tokens": "Получите токены пула ликвидности WAGYU-VLX",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "Вкладывайте WAGYU и VLX в пул ликвидности, чтобы получить токены пула ликвидности.",
   "You’ll spend them to buy IFO sale tokens.": "Вы сможете их потратить на покупку токенов во время первичного предложения фарма.",
   "Commit LP Tokens": "Внести токены пула ликвидности",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "Когда продажа IFO проходит в режиме реального времени, вы можете выделить свои токены пула ликвидности на покупку продаваемых токенов.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "Мы рекомендуем сначала принять участие в Базовой продаже, однако при желании вы можете участвовать в обоих вариантах продажи.",
   "Claim your tokens and achievement": "Получите свои токены и достижение",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "После завершения продажи первичного предложения фарма вы сможете получить приобретённые вами соответствующие токены, а непотраченные вами токены пула ликвидности WAGYU-BNB вернутся на ваш кошелёк.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "После завершения продажи первичного предложения фарма вы сможете получить приобретённые вами соответствующие токены, а непотраченные вами токены пула ликвидности WAGYU-VLX вернутся на ваш кошелёк.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "Завершающая транзакция этого раунда была отправлена в блокчейн и ожидает подтверждения.",
   "No prediction history available": "Отсутствует история прогнозов",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "Если вы уверены, что здесь должна быть история, проверьте, подключились ли вы к правильному кошельку, и повторите попытку.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "Заняв позицию, вы не сможете ее отменить или скорректировать.",
   "All losses are final.": "Все убытки являются окончательными.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "Я понимаю, что пользуюсь этим продуктом на свой риск. Я несу ответственность за любые убытки, понесенные в связи с моими действиями.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Вкладывайте WAGYU и BNB в пул ликвидности, чтобы получить LP-токены. Вы потратите их на покупку токенов IFO на распродаже.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "Вкладывайте WAGYU и VLX в пул ликвидности, чтобы получить LP-токены. Вы потратите их на покупку токенов IFO на распродаже.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "Для участия в первичном предложении фермы нужно иметь активный профиль WagyuSwap!",
   "Your LP tokens committed": "Ваши LP-токены выделены",
   "Max. Committed": "Выделенный максимум",
@@ -483,8 +483,8 @@
   "Achievement": "Достижение",
   "Commit ~%minLp% LP in total to earn!": "Задействуйте в общей сложности около %minLp%, чтобы заработать!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "В чем разница между Базовой продажей и Неограниченной продажей?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "В ходе Базовой продажи каждый пользователь может выделить LP-токены WAGYU-BNB на максимальную сумму около 100 долл.США. Мы рассчитываем максимальную сумму пула ликвидности примерно за 30 минут до начала каждого первичного предложения фермы. За участие в Базовой продаже комиссия не взимается.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "В ходе Неограниченной продажи нет лимита на максимальную сумму токенов пула ликвидности WAGYU-BNB, которую вы можете выделить. Однако за участие в такой продаже взимается комиссия: см. ниже.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "В ходе Базовой продажи каждый пользователь может выделить LP-токены WAGYU-VLX на максимальную сумму около 100 долл.США. Мы рассчитываем максимальную сумму пула ликвидности примерно за 30 минут до начала каждого первичного предложения фермы. За участие в Базовой продаже комиссия не взимается.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "В ходе Неограниченной продажи нет лимита на максимальную сумму токенов пула ликвидности WAGYU-VLX, которую вы можете выделить. Однако за участие в такой продаже взимается комиссия: см. ниже.",
   "Which sale should I commit to? Can I do both?": "В какой продаже мне следует участвовать? Можно ли участвовать в обоих типах продаж?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "Вы можете выбрать один или оба вида одновременно! Если вы планируете выделить лишь небольшую сумму, мы рекомендуем сначала принять участие в Базовой продаже. Не забудьте, что для участия вам понадобится профиль WagyuSwap.",
   "How much is the participation fee?": "Какова комиссия за участие?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "Начальная комиссия составляет 1%.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "Комиссия за участие в размере 1% уменьшается на пиках исходя из процентного количества избытка от Неограниченной части продажи.",
   "Where does the participation fee go?": "Что происходит с уплаченной комиссией за участие?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Мы сжигаем ее. Токены пула ликвидности WAGYU-BNB от комиссии за участие будут разобраны на части, затем мы используем часть BNB для рыночной покупки эквивалента WAGYU, а после этого, наконец, бросим весь WAGYU в еженедельную горелку токенов.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "Мы сжигаем ее. Токены пула ликвидности WAGYU-VLX от комиссии за участие будут разобраны на части, затем мы используем часть VLX для рыночной покупки эквивалента WAGYU, а после этого, наконец, бросим весь WAGYU в еженедельную горелку токенов.",
   "How can I get an achievement for participating in the IFO?": "Как можно получить достижение за участие в IFO?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "Вам нужно внести токены ликвидного пула WAGYU-BNB на сумму как минимум около 10 долл.США в ходе любого вида продаж.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "Вам нужно внести токены ликвидного пула WAGYU-VLX на сумму как минимум около 10 долл.США в ходе любого вида продаж.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "Вы можете участвовать в одном или обоих видах продаж, это не имеет значения. Для достижения учитывается лишь ваш общий вклад.",
   "The Lottery Is Changing!": "Лотерея меняется!",
   "Come back soon!": "Зайдите чуть позже!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "Ввести ВНИЗ",
   "An error occurred, unable to enter your position": "Произошла ошибка, не получается занять вашу позицию",
   "Set Position": "Определить позицию",
-  "Insufficient BNB balance": "Недостаточный баланс BNB",
+  "Insufficient VLX balance": "Недостаточный баланс VLX",
   "A minimum amount of %num% %token% is required": "Требуется минимальное количество в размере %num% %token%",
   "Enter an amount": "Введите сумму",
   "You won’t be able to remove or change your position once you enter it.": "Вы не сможете удалить или поменять свою позицию после того, как ее займете.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "профиль Wagyu,",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "затем зарегистрируйтесь на соревнование, нажав на кнопку \"Я ХОЧУ НА БИТВУ\" выше.",
   "Battle Time": "Время битвы",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "В период битвы обменивайте BNB/BUSD, WAGYU/BNB, ETH/BNB и BTCB/BNB, чтобы повысить количество очков как у вас, так и у вашей команды. См. раздел \"Правила\", чтобы ознакомиться с более подробной информацией.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "В период битвы обменивайте VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX, чтобы повысить количество очков как у вас, так и у вашей команды. См. раздел \"Правила\", чтобы ознакомиться с более подробной информацией.",
   "Prize Claim": "Получение приза",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Рейтинг команд и трейдеров определяется в зависимости от объема продаж. Забирайте свои призы и радуйтесь!",
   "Registration starting April 5": "Регистрация начнется 5 апреля",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "Это решение нельзя отменить.",
   "I understand that my address may be displayed publicly throughout the competition.": "Я понимаю, что мой адрес будет отображаться публично на протяжении всего соревнования.",
   "Eligible trading pairs": "Подходящие торговые пары",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "Только сделки с парами BNB/BUSD, WAGYU/BNB, ETH/BNB и BTCB/BNB будут включены в расчеты объема.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Только сделки с парами VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX будут включены в расчеты объема.",
   "Calculating team ranks and winners": "Рассчитываем рейтинг команд и определяем победителей",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Рейтинги команд определяются по общему совокупному объему лучших 500 участников каждой соответствующей команды.",
   "Prize distribution": "Распределение приза",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Как получить приз(ы)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "После окончания битвы зайдите на страницу мероприятия и нажмите на кнопку \"Получить выигрыш\" в верхней части или в разделе \"Ваш счет\". После того, как вы успешно заберете свои призы, текст на кнопке сменится на \"Призы получены\".",
   "Trade to increase your rank": "Чтобы повысить свой рейтинг, проводите сделки",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "Подходящие торговые пары: BNB/BUSD, WAGYU/BNB, ETH/BNB и BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Подходящие торговые пары: VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX",
   "Play as a team": "Играйте в команде",
   "The higher your team’s rank, the better your prizes": "Чем выше рейтинг вашей команды, тем лучше ваши призы",
   "Top Traders": "Лучшие трейдеры",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "Авторизуйтесь, чтобы получить доступ к своей учетной записи",
   "Unable to find connector": "Не удается найти коннектор",
   "The connector config is wrong": "Неправильная конфигурация коннектора",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "Вы внесли %amount% токенов пула ликвидности WAGYU-BNB в это IFO!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "Для участия в в IFO вам потребуются токены пула ликвидности WAGYU-BNB!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "Вы внесли %amount% токенов пула ликвидности WAGYU-VLX в это IFO!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "Для участия в в IFO вам потребуются токены пула ликвидности WAGYU-VLX!",
   "Your %symbol% committed": "Ваши %symbol% выделены",
   "Your %symbol% RECLAIMED": "Ваши %symbol% ВОСТРЕБОВАНЫ",
   "Your %symbol% TO RECLAIM": "Ваши %symbol% ДЛЯ ВОСТРЕБОВАНИЯ",
