--- a/public/locales/ta-IN.json
+++ b/public/locales/ta-IN.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "WAGYU அங்கீகரி",
   "IFO: Initial Farm Offerings": "IFO: இனிஷியல் ஃபார்ம் ஆஃபரிங்ஸ்",
   "Buy new tokens with a brand new token sale model.": "புத்தம்புதிய டோக்கன் விற்பனை மாடல் மூலம் புதிய டோக்கன்களை வாங்கவும்.",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "WAGYU-BNB LP டோக்கன்களைப் பயன்படுத்தி புதிய டோக்கன்களுக்கு நீங்கள் பணம் செலுத்துவீர்கள், அதாவது லிக்யுடிட்டி குளத்தில் WAGYU மற்றும் BNBன் சமமான தொகைகளை நீங்கள் ஸ்டேக் செய்ய வேண்டும்.",
-  "Get WAGYU-BNB LP >": "WAGYU-BNB LP பெறுக >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "செயல்திட்டம் BNBஐப் பெறுகிறது, WagyuSwapஆனது WAGYUஐ செலவழிக்கிறது.",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "WAGYU-VLX LP டோக்கன்களைப் பயன்படுத்தி புதிய டோக்கன்களுக்கு நீங்கள் பணம் செலுத்துவீர்கள், அதாவது லிக்யுடிட்டி குளத்தில் WAGYU மற்றும் VLXன் சமமான தொகைகளை நீங்கள் ஸ்டேக் செய்ய வேண்டும்.",
+  "Get WAGYU-VLX LP >": "WAGYU-VLX LP பெறுக >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "செயல்திட்டம் VLXஐப் பெறுகிறது, WagyuSwapஆனது WAGYUஐ செலவழிக்கிறது.",
   "You get the tokens.": "நீங்கள் டோக்கன்களைப் பெறுகிறீர்கள்.",
   "Want to launch your own IFO?": "உங்கள் சொந்த IFOவை தொடங்க விரும்புகிறீர்களா?",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "உங்கள் செயல்திட்டத்தை, Binance Smart Chainன் மிகவும் பயன்படுத்தப்படும் AMM செயல்திட்டம் மற்றும் லிக்விடிட்டி வழங்குநரான WagyuSwap மூலம் தொடங்கி, உங்கள் டோக்கனை நேரடியாக BSCயில் அதிக செயலிலுள்ள மற்றும் வேகமாக வளர்ந்துவருகிற சமூகத்திற்குக் கொண்டு வர வேண்டும்.",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ நீங்கள் LP டோக்கன்களை ஸ்டேக் செய்து அன்ஸ்டேக் செய்கிற ஒவ்வொரு முறையும், ஒப்பந்தம் உங்களுக்காக WAGYU வெகுமதிகளை தானாகவே அறுவடை செய்யும்!",
   "How to take part": "எப்படிப் பங்கேற்பது",
   "Before Sale": "விற்பனைக்கு முன்",
-  "Buy WAGYU and BNB tokens": "WAGYU மற்றும் BNB டோக்கன்களை வாங்கு",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "WAGYU மற்றும் BNB லிக்விடிட்டியைச் சேர்த்து WAGYU-BNB LP டோக்கன்களை வாங்கவும்",
+  "Buy WAGYU and VLX tokens": "WAGYU மற்றும் VLX டோக்கன்களை வாங்கு",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "WAGYU மற்றும் VLX லிக்விடிட்டியைச் சேர்த்து WAGYU-VLX LP டோக்கன்களை வாங்கவும்",
   "During Sale": "விற்பனையின் போது",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "விற்பனை நேரலையில் இருக்கும்போது, IFO டோக்கன்களை வாங்க உங்கள் WAGYU-LP டோக்கன்களை கமிட் செய்யவும்",
   "After Sale": "விற்பனைக்குப் பின்",
@@ -399,14 +399,14 @@
   "Activate your Profile": "உங்கள் சுயவிவரத்தைச் செயற்படுத்தவும்",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "IFOல் பங்கேற்க wagyueswap சுயவிவரத்தைச் செயற்படுத்த வேண்டியிருக்கும்!",
   "Profile Active!": "சுயவிவரம் செயலிலுள்ளது!",
-  "Get WAGYU-BNB LP Tokens": "WAGYU-BNB LP டோக்கன்களைப் பெறுக",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "LP டோக்கன்களைப் பெற, லிக்விடிட்டி குளத்தில் WAGYU மற்றும் BNB ஸ்டேக் செய்யவும்.",
+  "Get WAGYU-VLX LP Tokens": "WAGYU-VLX LP டோக்கன்களைப் பெறுக",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "LP டோக்கன்களைப் பெற, லிக்விடிட்டி குளத்தில் WAGYU மற்றும் VLX ஸ்டேக் செய்யவும்.",
   "You’ll spend them to buy IFO sale tokens.": "IFO விற்பனை டோக்கன்களைப் பெற நீங்கள் அவற்றைச் செலவிடுவீர்கள்.",
   "Commit LP Tokens": "LP டோக்கன்களை கமிட் செய்க",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "IFO விற்பனை நேரலையில் இருக்கும்போது, விற்கப்படுகின்ற டோக்கன்களை வாங்குவதற்கு நீங்கள் உங்களது LP டோக்கன்களை “கமிட்” செய்யலாம்.",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "முதலில் அடிப்படை விற்பனைக்கு கமிட் செய்யப் பரிந்துரைக்கிறோம், ஆனால் நீங்கள் விரும்பினால் இரண்டையும் செய்யலாம்.",
   "Claim your tokens and achievement": "உங்கள் டோக்கன்களையும் சாதனையையும் கிளைம் செய்க",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "IFO விற்பனை முடிந்த பிறகு, நீங்கள் வாங்கிய IFO டோக்கன்கள் எவற்றையும் கிளைம் செய்யலாம் மற்றும் செலவிடாத WAGYU-BNB LP டோக்கன்கள் எவையும் உங்கள் வாலெட்டிற்கு ரிட்டர்ன் செய்யப்படும்.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "IFO விற்பனை முடிந்த பிறகு, நீங்கள் வாங்கிய IFO டோக்கன்கள் எவற்றையும் கிளைம் செய்யலாம் மற்றும் செலவிடாத WAGYU-VLX LP டோக்கன்கள் எவையும் உங்கள் வாலெட்டிற்கு ரிட்டர்ன் செய்யப்படும்.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "இச்சுற்றின் நிறைவுப் பரிவர்த்தனை, பிளாக்செயினுக்குச் சமர்ப்பிக்கப்பட்டுள்ளது மற்றும் உறுதிப்படுத்தலுக்குக் காத்திருக்கிறது.",
   "No prediction history available": "கணிப்பு வரலாறு எதுவும் இல்லை",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "நீங்கள் இங்கு வரலாற்றைக் காண வேண்டும் என்பதில் உறுதியாக இருந்தால், சரியான வாலெட்டில் இணைந்திருப்பதை உறுதிசெய்து மீண்டும் முயற்சிக்கவும்.",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "நீங்கள் ஒரு நிலையை உள்ளிட்ட பின், அதை ரத்துசெய்யவோ சரிசெய்யவோ முடியாது.",
   "All losses are final.": "எல்லா இழப்புகள் இறுதியானவை.",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "இத்தயாரிப்பை நானாகவே துணிந்து பயன்படுத்துகிறேன் என்பதைப் புரிந்துகொள்கிறேன். எனது செயல்களால் விளைகின்ற இழப்பு எதுவும் என் சொந்த பொறுப்பிலானது.",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP டோக்கன்களைப் பெற, லிக்விடிட்டி குளத்தில் WAGYU மற்றும் BNB-ஐ ஸ்டேக் செய்யவும். IFO விற்பனை டோக்கன்களை வாங்க நீங்கள் அவற்றைச் செலவழிப்பீர்கள்.",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "LP டோக்கன்களைப் பெற, லிக்விடிட்டி குளத்தில் WAGYU மற்றும் VLX-ஐ ஸ்டேக் செய்யவும். IFO விற்பனை டோக்கன்களை வாங்க நீங்கள் அவற்றைச் செலவழிப்பீர்கள்.",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "IFOல் பங்கேற்க wagyueswap சுயவிவரத்தைச் செயற்படுத்த வேண்டியிருக்கும்!",
   "Your LP tokens committed": "உங்கள் LP டோக்கன்கள் கமிட் செய்யப்பட்டன",
   "Max. Committed": "அதிகபட்சம் கமிட் செய்தது",
@@ -483,8 +483,8 @@
   "Achievement": "சாதனை",
   "Commit ~%minLp% LP in total to earn!": "ஈட்டுவதற்கு மொத்தம் ~%minLp% LP கமிட் செய்க!",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "அடிப்படை விற்பனைக்கும் வரம்பற்ற விற்பனைக்கும் என்ன வித்தியாசம்?",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "அடிப்படை விற்பனையில், ஒவ்வொரு பயனரும் அதிகபட்சமாக சுமார் 100 USD மதிப்புள்ள WAGYU-BNB LP டோக்கன்களை கமிட் செய்யலாம். ஒவ்வொரு IFOக்கும் சுமார் 30 நிமிடங்களுக்கு முன்பு அதிகபட்ச LP தொகையைக் கணக்கிடுகிறோம். அடிப்படை விற்பனைக்கு பங்கேற்புக் கட்டணம் இல்லை.",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "வரம்பற்ற விற்பனையில், நீங்கள் கமிட் செய்யத்தக்க WAGYU-BNB LP டோக்கன்களின் அளவிற்கு வரம்பு இல்லை. இருப்பினும், பங்கேற்பதற்கான கட்டணம் உள்ளது: கீழே காண்க.",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "அடிப்படை விற்பனையில், ஒவ்வொரு பயனரும் அதிகபட்சமாக சுமார் 100 USD மதிப்புள்ள WAGYU-VLX LP டோக்கன்களை கமிட் செய்யலாம். ஒவ்வொரு IFOக்கும் சுமார் 30 நிமிடங்களுக்கு முன்பு அதிகபட்ச LP தொகையைக் கணக்கிடுகிறோம். அடிப்படை விற்பனைக்கு பங்கேற்புக் கட்டணம் இல்லை.",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "வரம்பற்ற விற்பனையில், நீங்கள் கமிட் செய்யத்தக்க WAGYU-VLX LP டோக்கன்களின் அளவிற்கு வரம்பு இல்லை. இருப்பினும், பங்கேற்பதற்கான கட்டணம் உள்ளது: கீழே காண்க.",
   "Which sale should I commit to? Can I do both?": "எந்த விற்பனையை நான் கமிட் செய்ய வேண்டும்? இரண்டையும் செய்யலாமா?",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "நீங்கள் ஒரே நேரத்தில் ஒன்று அல்லது இரண்டையும் தேர்வு செய்யலாம்! நீங்கள் ஒரு சிறிய தொகையை மட்டுமே கமிட் செய்தால், முதலில் அடிப்படை விற்பனையைப் பரிந்துரைக்கிறோம். பங்கேற்க உங்களுக்கு ஒரு wagyueswap சுயவிவரம் தேவை என்பதை நினைவில் கொள்ளுங்கள்.",
   "How much is the participation fee?": "பங்கேற்புக் கட்டணம் எவ்வளவு?",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "கட்டணம், 1% ல் தொடங்கும்.",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "விற்பனையின் “வரம்பற்ற” பகுதியிலிருந்து மிகுந்தோடும் சதவீதத்தின் அடிப்படையில், க்ளிஃப்களில் 1% பங்கேற்புக் கட்டணம் குறைகிறது.",
   "Where does the participation fee go?": "பங்கேற்புக் கட்டணம் எங்கு செல்கிறது?",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "நாங்கள் அதைச் செலவழிக்கிறோம். பங்கேற்புக் கட்டணத்திலிருந்து WAGYU-BNB LP டோக்கன்கள் பிரிக்கப்படும். பின்னர் நாங்கள் BNB பகுதியைப் பயன்படுத்தி WAGYUக்குச் சமமானதை வாங்க சந்தைக்குப் பயன்படுத்துகிறோம், பின்னர் இறுதியாக WAGYU அனைத்தையும் வாராந்திர டோக்கன் செலவழிப்பில் வீசி விடுகிறோம்.",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "நாங்கள் அதைச் செலவழிக்கிறோம். பங்கேற்புக் கட்டணத்திலிருந்து WAGYU-VLX LP டோக்கன்கள் பிரிக்கப்படும். பின்னர் நாங்கள் VLX பகுதியைப் பயன்படுத்தி WAGYUக்குச் சமமானதை வாங்க சந்தைக்குப் பயன்படுத்துகிறோம், பின்னர் இறுதியாக WAGYU அனைத்தையும் வாராந்திர டோக்கன் செலவழிப்பில் வீசி விடுகிறோம்.",
   "How can I get an achievement for participating in the IFO?": "IFOல் பங்கேற்பதற்கு நான் எவ்வாறு ஒரு சாதனையைப் பெற முடியும்?",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "எந்த விற்பனைக்கும், குறைந்தபட்சம் சுமார் 10 USD மதிப்புள்ள WAGYU-BNB LP டோக்கன்களை நீங்கள் பங்களிக்க வேண்டும்.",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "எந்த விற்பனைக்கும், குறைந்தபட்சம் சுமார் 10 USD மதிப்புள்ள WAGYU-VLX LP டோக்கன்களை நீங்கள் பங்களிக்க வேண்டும்.",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "ஒன்று அல்லது இரண்டிற்கும் நீங்கள் பங்களிக்கலாம், அது ஒரு பொருட்டல்ல. உங்கள் ஒட்டுமொத்தப் பங்களிப்பு மட்டுமே சாதனைக்குக் கணக்கில் கொள்ளப்படுகிறது.",
   "The Lottery Is Changing!": "லாட்டரி மாறுகிறது!",
   "Come back soon!": "விரைவில் திரும்பி வாருங்கள்!",
@@ -570,7 +570,7 @@
   "Enter DOWN": "DOWN உள்ளிடு",
   "An error occurred, unable to enter your position": "ஒரு பிழை ஏற்பட்டது, உங்கள் நிலையை உள்ளிட முடியவில்லை",
   "Set Position": "நிலையை அமை",
-  "Insufficient BNB balance": "போதுமான BNB பேலன்ஸ் இல்லை",
+  "Insufficient VLX balance": "போதுமான VLX பேலன்ஸ் இல்லை",
   "A minimum amount of %num% %token% is required": "குறைந்தபட்சம் %num% %token% தேவை",
   "Enter an amount": "ஒரு தொகையை உள்ளிடவும்",
   "You won’t be able to remove or change your position once you enter it.": "உங்கள் நிலையை உள்ளிட்டவுடன் அதை நீக்கவோ மாற்றவோ முடியாது.",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu சுயவிவரம்",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "பிறகு மேலுள்ள “நான் போர் புரிய விரும்புகிறேன்” பொத்தானைக் கிளிக் செய்வதன் மூலம் போட்டிக்குப் பதிவுசெய்யவும்.",
   "Battle Time": "போர் நேரம்",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "உங்கள் மற்றும் உங்கள் அணியின் மதிப்பெண்களை உயர்த்த, போர்க்காலத்தில் BNB/BUSD, WAGYU/BNB, ETH/BNB மற்றும் BTCB/BNB ஐ டிரேட் செய்யவும். மேலும் விவரங்களுக்கு, கீழுள்ள விதிகள் பகுதியைப் பார்க்கவும்.",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "உங்கள் மற்றும் உங்கள் அணியின் மதிப்பெண்களை உயர்த்த, போர்க்காலத்தில் VLX/BUSD, WAGYU/VLX, ETH/VLX மற்றும் BTCB/VLX ஐ டிரேட் செய்யவும். மேலும் விவரங்களுக்கு, கீழுள்ள விதிகள் பகுதியைப் பார்க்கவும்.",
   "Prize Claim": "பரிசுகள் கிளைம்",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "டிரேடிங் அளவின் அடிப்படையில் அணிகள் மற்றும் டிரேடர்கள் தரவரிசைப்படுத்தப்படுவார்கள். உங்கள் பரிசுகளைச் சேகரித்து கொண்டாடுங்கள்!",
   "Registration starting April 5": "பதிவு தொடங்குவது ஏப்ரல் 5",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "இந்த முடிவை பழைய நிலைக்கு மாற்ற முடியாது.",
   "I understand that my address may be displayed publicly throughout the competition.": "எனது முகவரி, போட்டி முழுவதும் பொதுவில் காட்டப்படலாம் என்பதை நான் புரிந்துகொள்கிறேன்.",
   "Eligible trading pairs": "தகுதியான டிரேடிங் ஜோடிகள்",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "BNB/BUSD, WAGYU/BNB, ETH/BNB மற்றும் BTCB/BNB ஜோடிகளில் உள்ள டிரேட்கள் மட்டும் அளவுக் கணக்கீடுகளில் உள்ளடக்கப்படும்.",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "VLX/BUSD, WAGYU/VLX, ETH/VLX மற்றும் BTCB/VLX ஜோடிகளில் உள்ள டிரேட்கள் மட்டும் அளவுக் கணக்கீடுகளில் உள்ளடக்கப்படும்.",
   "Calculating team ranks and winners": "அணித் தரவரிசைகளையும் வெற்றியாளர்களையும் கணக்கிடுகிறது",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "ஒவ்வொரு உரிய அணியின் முதன்மையான 500 உறுப்பினர்களின் மொத்த ஒருங்கிணைந்த அளவால் அணியின் தரவரிசைகள் கணக்கிடப்படுகின்றன.",
   "Prize distribution": "பரிசு விநியோகம்",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "எனது பரிசு(களை) எவ்வாறு கிளைம் செய்வது?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "போர் முடிந்ததும், நிகழ்வுப் பக்கத்திற்குச் சென்று, மேல் பிரிவில் அல்லது “உங்கள் மதிப்பெண்” பிரிவில் உள்ள “பரிசுகளைக் கிளைம் செய்” பொத்தானைக் கிளிக் செய்யவும். உங்கள் பரிசுகளை வெற்றிகரமாகக் கிளைம் செய்ததும், பொத்தான் உரை “பரிசுகள் கிளைம் செய்யப்பட்டன” என மாறும்.",
   "Trade to increase your rank": "உங்கள் தரவரிசையை அதிகரிக்க டிரேட் செய்க",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "தகுதியான ஜோடிகள்: BNB/BUSD, WAGYU/BNB, ETH/BNB மற்றும் BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "தகுதியான ஜோடிகள்: VLX/BUSD, WAGYU/VLX, ETH/VLX மற்றும் BTCB/VLX",
   "Play as a team": "ஓர் அணியாக விளையாடுக",
   "The higher your team’s rank, the better your prizes": "உங்கள் அணியின் தரவரிசை எந்தளவு உயர்கிறதோ, உங்கள் பரிசுகள் அந்தளவு சிறப்பாயிருக்கும்",
   "Top Traders": "முதன்மை டிரேடர்கள்",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "உங்கள் கணக்கை அணுக அங்கீகரித்திடுங்கள்",
   "Unable to find connector": "கனெக்டரைக் கண்டறிய முடியவில்லை",
   "The connector config is wrong": "கனெக்டர் உள்ளமைவு தவறானது",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "இந்த IFOக்கு %amount% WAGYU-BNB LP டோக்கன்களைப் பங்களித்துள்ளீர்கள்!",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "IFOல் பங்கேற்க உங்களுக்கு WAGYU-BNB LP டோக்கன்கள் தேவைப்படும்!",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "இந்த IFOக்கு %amount% WAGYU-VLX LP டோக்கன்களைப் பங்களித்துள்ளீர்கள்!",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "IFOல் பங்கேற்க உங்களுக்கு WAGYU-VLX LP டோக்கன்கள் தேவைப்படும்!",
   "Your %symbol% committed": "உங்கள் %symbol% கமிட் செய்தது",
   "Your %symbol% RECLAIMED": "உங்கள் %symbol% ரீகிளைம் செய்யப்பட்டது",
   "Your %symbol% TO RECLAIM": "உங்கள் %symbol% ரீகிளைம் செய்யவதற்கு",
