--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -90,9 +90,9 @@
   "Approve WAGYU": "批准 WAGYU",
   "IFO: Initial Farm Offerings": "IFO：首次挖礦發行",
   "Buy new tokens with a brand new token sale model.": "使用全新的代幣銷售模型來購買新代幣。",
-  "You’ll pay for the new tokens using WAGYU-BNB LP tokens, which means you need to stake equal amounts of WAGYU and BNB in a liquidity pool to take part.": "您將使用 WAGYU-BNB LP 代幣來支付新代幣，這表示您需要在流動性資金池中質押等量的 WAGYU 和 BNB 才能參與。",
-  "Get WAGYU-BNB LP >": "取得 WAGYU-BNB LP >",
-  "The project gets the BNB, WagyuSwap burns the WAGYU.": "專案取得 BNB 後，而 WagyuSwap 銷毀 WAGYU。",
+  "You’ll pay for the new tokens using WAGYU-VLX LP tokens, which means you need to stake equal amounts of WAGYU and VLX in a liquidity pool to take part.": "您將使用 WAGYU-VLX LP 代幣來支付新代幣，這表示您需要在流動性資金池中質押等量的 WAGYU 和 VLX 才能參與。",
+  "Get WAGYU-VLX LP >": "取得 WAGYU-VLX LP >",
+  "The project gets the VLX, WagyuSwap burns the WAGYU.": "專案取得 VLX 後，而 WagyuSwap 銷毀 WAGYU。",
   "You get the tokens.": "您取得代幣。",
   "Want to launch your own IFO?": "想要發起您自己的 IFO 嗎？",
   "Launch your project with WagyuSwap, Binance Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "透過幣安智能鏈上最常用的 AMM 專案和流動性提供商 WagyuSwap 來發起您的專案，將您的代幣直接引入 BSC 上最活躍且發展快速的社群。",
@@ -136,8 +136,8 @@
   "⭐️ Every time you stake and unstake LP tokens, the contract will automagically harvest WAGYU rewards for you!": "⭐️ 每當您質押和取回 LP 代幣時，合約都會自動為您收割 WAGYU 獎勵！",
   "How to take part": "如何參與",
   "Before Sale": "銷售前",
-  "Buy WAGYU and BNB tokens": "購買 WAGYU 和 BNB 代幣",
-  "Get WAGYU-BNB LP tokens by adding WAGYU and BNB liquidity": "增加 WAGYU 和 BNB 流動性，從而取得 WAGYU-BNB LP 代幣",
+  "Buy WAGYU and VLX tokens": "購買 WAGYU 和 VLX 代幣",
+  "Get WAGYU-VLX LP tokens by adding WAGYU and VLX liquidity": "增加 WAGYU 和 VLX 流動性，從而取得 WAGYU-VLX LP 代幣",
   "During Sale": "銷售期間",
   "While the sale is live, commit your WAGYU-LP tokens to buy the IFO tokens": "在銷售過程中，提交您的 WAGYU-LP 代幣來購買 IFO 代幣",
   "After Sale": "銷售後",
@@ -399,14 +399,14 @@
   "Activate your Profile": "啟動您的個人檔案",
   "You’ll need an active WagyuSwap Profile to take part in an IFO!": "您需要有效的 Wagyuswap 個人檔案才能參與 IFO！",
   "Profile Active!": "個人檔案有效！",
-  "Get WAGYU-BNB LP Tokens": "取得 WAGYU-BNB LP 代幣",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens.": "在流動性資金池中質押 WAGYU 和 BNB 以取得 LP 代幣。",
+  "Get WAGYU-VLX LP Tokens": "取得 WAGYU-VLX LP 代幣",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens.": "在流動性資金池中質押 WAGYU 和 VLX 以取得 LP 代幣。",
   "You’ll spend them to buy IFO sale tokens.": "您將花費它們來購買 IFO 銷售代幣。",
   "Commit LP Tokens": "提交 LP 代幣",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "在 IFO 銷售的過程中，您可以「提交」您的 LP 代幣以購買正在出售的代幣。",
   "We recommend committing to the Basic Sale first, but you can do both if you like.": "我們建議您先參與基礎銷售，但如果您喜歡，也可以同時參與兩者。",
   "Claim your tokens and achievement": "領取您的代幣和成就",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-BNB LP tokens will be returned to your wallet.": "在 IFO 銷售完成後，您可以領取您購買的任何 IFO 代幣，任何未花費的 WAGYU-BNB LP 代幣都將退回您的錢包。",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent WAGYU-VLX LP tokens will be returned to your wallet.": "在 IFO 銷售完成後，您可以領取您購買的任何 IFO 代幣，任何未花費的 WAGYU-VLX LP 代幣都將退回您的錢包。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "本回合的最後一筆交易已經提交至區塊鏈，正在等待確認。",
   "No prediction history available": "無可用的預測歷史記錄",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "如果您確定應該在此處檢查歷史記錄，請確保您已連線到正確的錢包，然後再試一次。",
@@ -434,7 +434,7 @@
   "Once you enter a position, you cannot cancel or adjust it.": "輸入後，您將無法取消或調整部位。",
   "All losses are final.": "所有損失都不可變更。",
   "I understand that I am using this product at my own risk. Any loss incurred due to my actions are my own responsibility.": "我瞭解，我使用本產品的風險由我自己承擔。由於我的行為而造成的任何損失均由我自己負責。",
-  "Stake WAGYU and BNB in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "在流動性資金池中質押 WAGYU 和 BNB 以取得 LP 代幣。您將花費這些代幣來購買 IFO 銷售代幣。",
+  "Stake WAGYU and VLX in the liquidity pool to get LP tokens. You'll spend them to buy IFO sale tokens.": "在流動性資金池中質押 WAGYU 和 VLX 以取得 LP 代幣。您將花費這些代幣來購買 IFO 銷售代幣。",
   "You'll need an active WagyuSwap Profile to take part in an IFO!": "您需要有效的 Wagyuswap 個人檔案才能參與 IFO！",
   "Your LP tokens committed": "您的 LP 代幣已提交",
   "Max. Committed": "最大參與金額",
@@ -483,8 +483,8 @@
   "Achievement": "成就",
   "Commit ~%minLp% LP in total to earn!": "提交總計 ~%minLp% LP 即可賺取！",
   "What’s the difference between a Basic Sale and Unlimited Sale?": "基礎銷售和無限銷售有什麼區別？",
-  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-BNB LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "在基礎銷售中，每個使用者最多可以提交價值約 100 美元的 WAGYU-BNB LP 代幣。我們會在每次 IFO 之前約 30 分鐘計算最大 LP 金額。基礎銷售不包含任何參與費用。",
-  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-BNB LP Tokens you can commit. However, there’s a fee for participation: see below.": "在無限銷售中，您可以提交的 WAGYU-BNB LP 代幣金額沒有限制。但是，存在參與費用：請參見下文。",
+  "In the Basic Sale, every user can commit a maximum of about 100 USD worth of WAGYU-VLX LP Tokens. We calculate the maximum LP amount about 30 minutes before each IFO. The Basic Sale has no participation fee.": "在基礎銷售中，每個使用者最多可以提交價值約 100 美元的 WAGYU-VLX LP 代幣。我們會在每次 IFO 之前約 30 分鐘計算最大 LP 金額。基礎銷售不包含任何參與費用。",
+  "In the Unlimited Sale, there’s no limit to the amount of WAGYU-VLX LP Tokens you can commit. However, there’s a fee for participation: see below.": "在無限銷售中，您可以提交的 WAGYU-VLX LP 代幣金額沒有限制。但是，存在參與費用：請參見下文。",
   "Which sale should I commit to? Can I do both?": "我應該參與哪種銷售？我可以同時參與兩者嗎？",
   "You can choose one or both at the same time! If you’re only committing a small amount, we recommend the Basic Sale first. Just remember you need a WagyuSwap Profile in order to participate.": "您可以同時選擇一種或兩種！如果您只提交較少金額，我們建議先參與基礎銷售。請記住，您只需要 WagyuSwap 個人檔案即可參與。",
   "How much is the participation fee?": "參與費用是多少？",
@@ -492,9 +492,9 @@
   "The fee will start at 1%.": "起步費用為 1%。",
   "The 1% participation fee decreases in cliffs, based on the percentage of overflow from the “Unlimited” portion of the sale.": "1% 的參與費用呈階梯式下降，具體取決於銷售的「無限」部分中溢出的百分比。",
   "Where does the participation fee go?": "參與費用會去往何處？",
-  "We burn it. The WAGYU-BNB LP tokens from the participation fee will be decomposed. We will then use the BNB portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "我們會將其銷毀。來自參與費用的 WAGYU-BNB LP 代幣均將分解。而 BNB 的部分將用來在市場上購買等量的WAGYU，最後所有的 WAGYU 都將放入每週的代幣銷毀中。",
+  "We burn it. The WAGYU-VLX LP tokens from the participation fee will be decomposed. We will then use the VLX portion to market buy the WAGYU equivalent, and finally throw all of the WAGYU into the weekly token burn.": "我們會將其銷毀。來自參與費用的 WAGYU-VLX LP 代幣均將分解。而 VLX 的部分將用來在市場上購買等量的WAGYU，最後所有的 WAGYU 都將放入每週的代幣銷毀中。",
   "How can I get an achievement for participating in the IFO?": "如何獲得參與 IFO 的成就？",
-  "You need to contribute a minimum of about 10 USD worth of WAGYU-BNB LP Tokens to either sale.": "您需要為任一種銷售貢獻價值至少為約 10 美元的 WAGYU-BNB LP 代幣。",
+  "You need to contribute a minimum of about 10 USD worth of WAGYU-VLX LP Tokens to either sale.": "您需要為任一種銷售貢獻價值至少為約 10 美元的 WAGYU-VLX LP 代幣。",
   "You can contribute to one or both, it doesn’t matter. Only your overall contribution is counted for the achievement.": "您可以貢獻於其中一個，也可以兩個都貢獻。 採計成就時只會考慮您的總體貢獻。",
   "The Lottery Is Changing!": "彩券正在變化！",
   "Come back soon!": "馬上回來！",
@@ -570,7 +570,7 @@
   "Enter DOWN": "輸入下降",
   "An error occurred, unable to enter your position": "發生錯誤，無法輸入您的部位",
   "Set Position": "設定部位",
-  "Insufficient BNB balance": "BNB 餘額不足",
+  "Insufficient VLX balance": "VLX 餘額不足",
   "A minimum amount of %num% %token% is required": "最少需要 %num% %token% 金額",
   "Enter an amount": "輸入金額",
   "You won’t be able to remove or change your position once you enter it.": "輸入後，您將無法移除或變更自己的部位。",
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu 個人檔案",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "然後按一下上方的「我想戰鬥」按鈕，即可註冊參加比賽。",
   "Battle Time": "戰鬥時間",
-  "Trade BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在戰鬥期間交易 BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB，以提高您和您團隊的得分。請參閱下面的「規則」部分以瞭解更多資訊。",
+  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在戰鬥期間交易 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您團隊的得分。請參閱下面的「規則」部分以瞭解更多資訊。",
   "Prize Claim": "獎金領取",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "團隊中的交易者將按交易量來排序。收集獎金並好好慶祝一番吧！",
   "Registration starting April 5": "4 月 5 日開始註冊",
@@ -684,7 +684,7 @@
   "This decision cannot be reversed.": "此決定無法撤消。",
   "I understand that my address may be displayed publicly throughout the competition.": "我瞭解我的地址可能會在整個比賽期間公開顯示。",
   "Eligible trading pairs": "符合條件的交易對",
-  "Only trades on BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB pairs will be included in volume calculations.": "交易量計算中僅包括 BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB 對的交易。",
+  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量計算中僅包括 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 對的交易。",
   "Calculating team ranks and winners": "正在計算團隊排名和獲勝者",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "團隊排名是根據各自團隊中取得排行榜前 500 名的成員的總交易量計算得出的。",
   "Prize distribution": "獎金分發",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "如何領取獎金？",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "戰鬥結束後，請造訪活動頁面，按一下頂部或「您的分數」部分裡的「領取獎金」按鈕。一旦成功領獎，按鈕的文字將變為「獎金已領」。",
   "Trade to increase your rank": "交易以提高您的排名",
-  "Eligible pairs: BNB/BUSD, WAGYU/BNB, ETH/BNB and BTCB/BNB": "符合條件的貨幣對：BNB/BUSD、WAGYU/BNB、ETH/BNB 和 BTCB/BNB",
+  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合條件的貨幣對：VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
   "Play as a team": "以團隊形式參與",
   "The higher your team’s rank, the better your prizes": "團隊排名越高，獎金就越多",
   "Top Traders": "排名前列的交易者",
@@ -748,8 +748,8 @@
   "Please authorize to access your account": "請授權存取您的帳戶",
   "Unable to find connector": "無法找到連接器",
   "The connector config is wrong": "連接器設定錯誤",
-  "You have contributed %amount% WAGYU-BNB LP tokens to this IFO!": "您已經為此 IFO 貢獻 %amount% WAGYU-BNB LP LP 代幣！",
-  "You’ll need WAGYU-BNB LP tokens to participate in the IFO!": "您需要 WAGYU-BNB LP 代幣才能參與 IFO！",
+  "You have contributed %amount% WAGYU-VLX LP tokens to this IFO!": "您已經為此 IFO 貢獻 %amount% WAGYU-VLX LP LP 代幣！",
+  "You’ll need WAGYU-VLX LP tokens to participate in the IFO!": "您需要 WAGYU-VLX LP 代幣才能參與 IFO！",
   "Your %symbol% committed": "您的 %symbol% 已提交",
   "Your %symbol% RECLAIMED": "您的 %symbol% 已收回",
   "Your %symbol% TO RECLAIM": "您的 %symbol% 待收回",
